Fix for multiple languages : we have /e/ account not google\n \n grep -rl master_clear_desc | xargs sed -i 's/Google/\/e\//g' \n

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -499,11 +499,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"تحذير: سيتم محو محتويات جهازك بعد إخفاق <xliff:g id="COUNT">^1</xliff:g> من المحاولات الأخرى لإلغاء القفل!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"اكتب كلمة المرور"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"لم يتم التشفير بنجاح"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏تمت مقاطعة التشفير ويتعذر الاستكمال. ونتيجة لذلك، لن تتمكن بعد الآن من الدخول إلى البيانات على جهازك اللوحي. \n\nلاستئناف استخدام الجهاز اللوحي، يلزمك إجراء إعادة ضبط المصنع. وعند إعداد الجهاز اللوحي بعد إعادة الضبط، ستكون لديك فرصة استعادة أي بيانات تم نسخها احتياطيًا إلى حساب Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏تمت مقاطعة التشفير ويتعذر الاستكمال. ونتيجة لذلك، لن تتمكن بعد الآن من الدخول إلى البيانات على هاتفك. \n\nلاستئناف استخدام الهاتف، يجب إجراء إعادة ضبط المصنع. وعند إعداد الهاتف بعد إعادة الضبط، ستكون لديك فرصة استعادة أي بيانات تم نسخها احتياطيًا إلى حساب Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"‏تمت مقاطعة التشفير ويتعذر الاستكمال. ونتيجة لذلك، لن تتمكن بعد الآن من الدخول إلى البيانات على جهازك اللوحي. \n\nلاستئناف استخدام الجهاز اللوحي، يلزمك إجراء إعادة ضبط المصنع. وعند إعداد الجهاز اللوحي بعد إعادة الضبط، ستكون لديك فرصة استعادة أي بيانات تم نسخها احتياطيًا إلى حساب /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"‏تمت مقاطعة التشفير ويتعذر الاستكمال. ونتيجة لذلك، لن تتمكن بعد الآن من الدخول إلى البيانات على هاتفك. \n\nلاستئناف استخدام الهاتف، يجب إجراء إعادة ضبط المصنع. وعند إعداد الهاتف بعد إعادة الضبط، ستكون لديك فرصة استعادة أي بيانات تم نسخها احتياطيًا إلى حساب /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"لم ينجح إلغاء التشفير"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏كلمة المرور التي أدخلتها صحيحة، ولكن للأسف بياناتك تالفة. \n\nلاستئناف استخدام جهازك اللوحي، يلزمك إجراء إعادة تعيين إعدادات المصنع. عند إعداد الجهاز اللوحي بعد إعادة التعيين، ستكون لديك فرصة لاستعادة أي بيانات تم نسخها احتياطيًا في حسابك على Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏كلمة المرور التي أدخلتها صحيحة، ولكن للأسف بياناتك تالفة. \n\nلاستئناف استخدام هاتفك، يلزمك إجراء إعادة تعيين إعدادات المصنع. عند إعداد الهاتف بعد إعادة التعيين، ستكون لديك فرصة لاستعادة أي بيانات تم نسخها احتياطيًا في حسابك على Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"‏كلمة المرور التي أدخلتها صحيحة، ولكن للأسف بياناتك تالفة. \n\nلاستئناف استخدام جهازك اللوحي، يلزمك إجراء إعادة تعيين إعدادات المصنع. عند إعداد الجهاز اللوحي بعد إعادة التعيين، ستكون لديك فرصة لاستعادة أي بيانات تم نسخها احتياطيًا في حسابك على /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"‏كلمة المرور التي أدخلتها صحيحة، ولكن للأسف بياناتك تالفة. \n\nلاستئناف استخدام هاتفك، يلزمك إجراء إعادة تعيين إعدادات المصنع. عند إعداد الهاتف بعد إعادة التعيين، ستكون لديك فرصة لاستعادة أي بيانات تم نسخها احتياطيًا في حسابك على /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"تبديل أسلوب الإدخال"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"تأمين هاتفك"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"تعيين قفل شاشة لحماية الجهاز اللوحي"</string>
@@ -1517,8 +1517,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"‏تتعذَّر إعادة تعيين شرائح eSIM بسبب حدوث خطأ."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"محو جميع البيانات (إعادة الضبط على الإعداد الأساسي)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"محو جميع البيانات (إعادة الضبط بحسب إعدادات المصنع)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لجهازك اللوحي، بما في ذلك:\n\n"<li>"حسابك على Google"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لهاتفك، بما في ذلك:\n\n"<li>"حسابك على Google"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لجهازك اللوحي، بما في ذلك:\n\n"<li>"حسابك على /e/"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"‏سيؤدي هذا إلى محو جميع البيانات من "<b>"وحدة التخزين الداخلية"</b>" لهاتفك، بما في ذلك:\n\n"<li>"حسابك على /e/"</li>\n<li>"بيانات وإعدادات النظام والتطبيقات"</li>\n<li>"التطبيقات التي تم تنزيلها"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"الحسابات المسجَّل الدخول إليها حاليًا:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"هناك مستخدمون آخرون موجودون على هذا الجهاز.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"الموسيقى"</li>\n<li>"الصور"</li>\n<li>"بيانات المستخدم الأخرى"</li></string>
@@ -1595,7 +1595,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"البحث عن بلوتوث"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"يمكنك السماح للتطبيقات والخدمات بالبحث عن الأجهزة المجاورة في أي وقت، حتى في حال إيقاف البلوتوث. ويمكن استخدام هذه البيانات مثلاً لتحسين الميزات والخدمات المستندة إلى الموقع الجغرافي."</string>
     <string name="location_network_based" msgid="9134175479520582215">"‏شبكة Wi-Fi وموقع شبكة الجوّال"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏دع التطبيقات تستخدم خدمة الموقع من Google لتقييم موقعك بشكل أسرع. سيتم جمع بيانات الموقع غير محددة الهوية وإرسالها إلى Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"‏دع التطبيقات تستخدم خدمة الموقع من /e/ لتقييم موقعك بشكل أسرع. سيتم جمع بيانات الموقع غير محددة الهوية وإرسالها إلى /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"‏الموقع الذي تم تحديده بواسطة Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"‏الأقمار الصناعية لنظام GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"‏السماح للتطبيقات باستخدام GPS على جهازك اللوحي لتحديد موقعك"</string>
@@ -1603,8 +1603,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"‏استخدام نظام GPS المساعد"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"‏استخدام الخادم لمساعدة GPS (إلغاء التحديد لتقليل استخدام الشبكة)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"‏استخدام الخادم لمساعدة GPS (ألغِ التحديد لتحسين أداء GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"‏الموقع وبحث Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"‏السماح لـ Google باستخدام الموقع لتحسين نتائج البحث والخدمات الأخرى"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"‏الموقع وبحث /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"‏السماح لـ /e/ باستخدام الموقع لتحسين نتائج البحث والخدمات الأخرى"</string>
     <string name="location_access_title" msgid="7064108942964081243">"الدخول إلى موقعي"</string>
     <string name="location_access_summary" msgid="69031404093194341">"السماح للتطبيقات التي طلبت إذنك باستخدام معلومات موقعك"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"مصادر الموقع"</string>
@@ -2561,7 +2561,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"النسخ الاحتياطي والاستعادة"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"البيانات الشخصية"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"احتفاظ بنسخة لبياناتي"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"‏الاحتفاظ بنسخة احتياطية من بيانات التطبيق وكلمات مرور Wi-Fi والإعدادات الأخرى على خوادم Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"‏الاحتفاظ بنسخة احتياطية من بيانات التطبيق وكلمات مرور Wi-Fi والإعدادات الأخرى على خوادم /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"الحساب الاحتياطي"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"تضمين بيانات التطبيق"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"استرداد تلقائي"</string>
@@ -2569,7 +2569,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"خدمة الاحتفاظ بنسخة احتياطية غير نشطة"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ليس هناك حساب يخزن حاليًا بيانات تم نسخها احتياطيًا."</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏هل تريد إيقاف النسخ الاحتياطي لكلمات مرور Wi-Fi والإشارات المرجعية والإعدادات الأخرى وبيانات التطبيقات ومحو جميع النُسخ على خوادم Google؟"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"‏هل تريد إيقاف النسخ الاحتياطي لكلمات مرور Wi-Fi والإشارات المرجعية والإعدادات الأخرى وبيانات التطبيقات ومحو جميع النُسخ على خوادم /e/؟"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"‏هل تريد إيقاف الاحتفاظ بنسخة احتياطية من بيانات الجهاز (مثل كلمات مرور Wi-Fi وسجل المكالمات) وبيانات التطبيقات (مثل الإعدادات والملفات التي تخزنها التطبيقات) بالإضافة إلى محو بيانات جميع النسخ الموجودة على الخوادم البعيدة؟"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"‏بإمكانك الاحتفاظ تلقائيًا بنسخة احتياطية من بيانات الجهاز (مثل كلمات مرور Wi-Fi وسجل المكالمات) وبيانات التطبيقات (مثل الإعدادات والملفات التي تخزنها التطبيقات) عن بُعد.\n\nعند تشغيل الاحتفاظ التلقائي بنسخة احتياطية، يتم بشكل دوري حفظ بيانات الجهاز وبيانات التطبيقات عن بُعد. ويمكن أن تكون بيانات التطبيقات أي بيانات تم حفظها في التطبيق (استنادًا إلى إعدادات مطور التطبيق) بما في ذلك البيانات المحتمل أن تكون حساسة مثل جهات الاتصال والرسائل والصور."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"إعدادات مشرف الجهاز"</string>
@@ -2656,7 +2656,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"التقويم"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"جهات الاتصال"</string>
-    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"مرحبًا بك في مزامنة Google!"</font>" \nوهي الطريقة التي تتبعها Google لمزامنة البيانات للسماح بالدخول إلى جهات الاتصال والمواعيد والمزيد من أي مكان تتواجد فيه."</string>
+    <string name="sync_plug" msgid="3905078969081888738">"‏"<font fgcolor="#ffffffff">"مرحبًا بك في مزامنة /e/!"</font>" \nوهي الطريقة التي تتبعها /e/ لمزامنة البيانات للسماح بالدخول إلى جهات الاتصال والمواعيد والمزيد من أي مكان تتواجد فيه."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"إعدادات مزامنة التطبيق"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"البيانات والمزامنة"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"تغيير كلمة المرور"</string>
@@ -2741,8 +2741,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"قد تتسبب هذه الميزة في توقف تطبيق يعتمد على بيانات الخلفية عن العمل عند توفر شبكات جوال فقط.\n\nيمكنك العثور على المزيد من عناصر التحكم المناسبة في استخدام البيانات من خلال الإعدادات المتوفرة داخل التطبيق."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"تقييد بيانات الخلفية ممكن فقط إذا عيّنت حدًا أقصى لبيانات الجوال."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"تشغيل مزامنة البيانات تلقائيًا؟"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏سيتم نسخ أي تغييرات تجريها على حساباتك على الويب إلى جهازك اللوحي تلقائيًا.\n\nويمكن أن تنسخ بعض الحسابات أيضًا أي تغييرات تجريها على الجهاز اللوحي إلى الويب تلقائيًا. يعمل حساب Google بهذه الطريقة."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏سيتم نسخ أي تغييرات تجريها على حساباتك على الويب إلى هاتفك تلقائيًا.\n\nوقد تعمل بعض الحسابات أيضًا على نسخ التغييرات التي تجريها على الهاتف إلى الويب تلقائيًا، فهذه هي طريقة عمل حساب Google."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"‏سيتم نسخ أي تغييرات تجريها على حساباتك على الويب إلى جهازك اللوحي تلقائيًا.\n\nويمكن أن تنسخ بعض الحسابات أيضًا أي تغييرات تجريها على الجهاز اللوحي إلى الويب تلقائيًا. يعمل حساب /e/ بهذه الطريقة."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"‏سيتم نسخ أي تغييرات تجريها على حساباتك على الويب إلى هاتفك تلقائيًا.\n\nوقد تعمل بعض الحسابات أيضًا على نسخ التغييرات التي تجريها على الهاتف إلى الويب تلقائيًا، فهذه هي طريقة عمل حساب /e/."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"هل تريد إيقاف مزامنة البيانات تلقائيًا؟"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"لن يغيّر هذا الإجراء عملية الحفاظ على استخدامات البيانات والبطارية، ولكن ستحتاج إلى مزامنة كل حساب يدويًا لجمع المعلومات الحديثة ولن تتلقّى إشعارات عند إتمام التحديثات."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"تاريخ إعادة ضبط دورة الاستخدام"</string>
@@ -3449,7 +3449,7 @@
     <string name="app_notification_block_title" msgid="4069351066849087649">"حظر الكل"</string>
     <string name="app_notification_block_summary" msgid="4744020456943215352">"عدم عرض هذه الإشعارات"</string>
     <string name="notification_content_block_title" msgid="5854232570963006360">"عرض الإشعارات"</string>
-    <string name="notification_content_block_summary" msgid="7746185794438882389">"‏عدم عرض الإشعارات في مركز الإشعارات أو على الأجهزة المرتبطة بحساب Google"</string>
+    <string name="notification_content_block_summary" msgid="7746185794438882389">"‏عدم عرض الإشعارات في مركز الإشعارات أو على الأجهزة المرتبطة بحساب /e/"</string>
     <string name="notification_badge_title" msgid="6370122441168519809">"السماح بنقطة الإشعار"</string>
     <string name="notification_channel_badge_title" msgid="2240827899882847087">"إظهار نقطة الإشعار"</string>
     <string name="app_notification_override_dnd_title" msgid="7867458246395884830">"إلغاء وضع \"عدم الإزعاج\""</string>
@@ -4360,7 +4360,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(غير مغعّلة للمستخدم <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"خدمة الملء التلقائي"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ملء، تعبئة، ملء تلقائي"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"‏&lt;b&gt;تأكّد من أنك تثق بهذا التطبيق&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; تستخدم البيانات المعروضة على الشاشة لتحديد ما يمكن ملؤه تلقائيًا."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"‏&lt;b&gt;تأكّد من أنك تثق بهذا التطبيق&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; تستخدم البيانات المعروضة على الشاشة لتحديد ما يمكن ملؤه تلقائيًا."</string>
     <string name="color_theme" msgid="1535685696756738324">"مظهر ملوَّن"</string>
     <string name="default_theme" msgid="7085644992078579076">"تلقائي"</string>
     <string name="device_theme" msgid="4571803018917608588">"مظهر الجهاز"</string>
