--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -486,11 +486,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"সকিয়নী: আনল\'ক কৰিবলৈ আৰু <xliff:g id="COUNT">^1</xliff:g> বাৰ বিফল প্ৰয়াস হ\'লে আপোনাৰ ডিভাইচৰ ডেটা মচা হ\'ব!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"আপোনাৰ পাছৱৰ্ড টাইপ কৰক"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"এনক্ৰিপশ্বন বিফল হৈছে"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্ৰিপশ্বন বিঘ্নিত হৈছে সেয়েহে ই সম্পূৰ্ণ নহ\'ল৷ ফলস্বৰূপে, আপোনাৰ টে\'বলেটত থকা ডেটা ব্যৱহাৰযোগ্য হৈ থকা নাই৷ \n\n আপোনাৰ টে\'বলেট ব্যৱহাৰ কৰি পুনৰাৰম্ভ কৰিবলৈ, আপুনি ফেক্টৰী ৰিছেট কৰিব লাগিব৷ আপুনি ৰিছেট কৰাৰ পিছত টে\'বলেটটো ছেট আপ কৰাৰ সময়ত আপোনাৰ Google একাউণ্টত বেকআপ লৈ থোৱা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব৷"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্ৰিপশ্বন বিঘ্নিত হৈছে সেয়েহে ই সম্পূৰ্ণ নহ\'ল৷ ফলস্বৰূপে, আপোনাৰ ফ\'নটোত থকা ডেটা ব্যৱহাৰযোগ্য হৈ থকা নাই৷ \n\nআপোনাৰ ফ\'নটো ব্যৱহাৰ কৰি পুনৰাৰম্ভ কৰিবলৈ, আপুনি ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত ফ\'নটো ছেট আপ কৰাৰ সময়ত আপোনাৰ Google একাউণ্টত বেকআপ লৈ থোৱা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব৷"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"এনক্ৰিপশ্বন বিঘ্নিত হৈছে সেয়েহে ই সম্পূৰ্ণ নহ\'ল৷ ফলস্বৰূপে, আপোনাৰ টে\'বলেটত থকা ডেটা ব্যৱহাৰযোগ্য হৈ থকা নাই৷ \n\n আপোনাৰ টে\'বলেট ব্যৱহাৰ কৰি পুনৰাৰম্ভ কৰিবলৈ, আপুনি ফেক্টৰী ৰিছেট কৰিব লাগিব৷ আপুনি ৰিছেট কৰাৰ পিছত টে\'বলেটটো ছেট আপ কৰাৰ সময়ত আপোনাৰ /e/ একাউণ্টত বেকআপ লৈ থোৱা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব৷"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"এনক্ৰিপশ্বন বিঘ্নিত হৈছে সেয়েহে ই সম্পূৰ্ণ নহ\'ল৷ ফলস্বৰূপে, আপোনাৰ ফ\'নটোত থকা ডেটা ব্যৱহাৰযোগ্য হৈ থকা নাই৷ \n\nআপোনাৰ ফ\'নটো ব্যৱহাৰ কৰি পুনৰাৰম্ভ কৰিবলৈ, আপুনি ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত ফ\'নটো ছেট আপ কৰাৰ সময়ত আপোনাৰ /e/ একাউণ্টত বেকআপ লৈ থোৱা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব৷"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ডিক্ৰিপশ্বন অসফল হৈছে"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপুনি দিয়া পাছৱৰ্ডটো শুদ্ধ, কিন্তু দুৰ্ভাগ্যক্ৰমে আপোনাৰ ডেটাখিনি অব্যৱহাৰযোগ্য। \n\nআপুনি টে\'বলেটটো আকৌ ব্যৱহাৰ কৰিবলৈ হ\'লে তাক ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত টে\'বলেটটো ছেট আপ কৰাৰ সময়ত আপোনাৰ Google একাউণ্টত বেকআপ কৰি ৰখা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপুনি দিয়া পাছৱৰ্ডটো শুদ্ধ, কিন্তু দুৰ্ভাগ্যক্ৰমে আপোনাৰ ডেটাখিনি অব্যৱহাৰযোগ্য। \n\nআপুনি ফ\'নটো আকৌ ব্যৱহাৰ কৰিবলৈ হ\'লে তাক ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত ফ\'নটো ছেট আপ কৰাৰ সময়ত আপোনাৰ Google একাউণ্টত বেকআপ কৰি ৰখা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"আপুনি দিয়া পাছৱৰ্ডটো শুদ্ধ, কিন্তু দুৰ্ভাগ্যক্ৰমে আপোনাৰ ডেটাখিনি অব্যৱহাৰযোগ্য। \n\nআপুনি টে\'বলেটটো আকৌ ব্যৱহাৰ কৰিবলৈ হ\'লে তাক ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত টে\'বলেটটো ছেট আপ কৰাৰ সময়ত আপোনাৰ /e/ একাউণ্টত বেকআপ কৰি ৰখা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"আপুনি দিয়া পাছৱৰ্ডটো শুদ্ধ, কিন্তু দুৰ্ভাগ্যক্ৰমে আপোনাৰ ডেটাখিনি অব্যৱহাৰযোগ্য। \n\nআপুনি ফ\'নটো আকৌ ব্যৱহাৰ কৰিবলৈ হ\'লে তাক ফেক্টৰী ৰিছেট কৰিব লাগিব। আপুনি ৰিছেট কৰাৰ পিছত ফ\'নটো ছেট আপ কৰাৰ সময়ত আপোনাৰ /e/ একাউণ্টত বেকআপ কৰি ৰখা যিকোনো ডেটা পুনঃস্থাপন কৰিবলৈ সুবিধা পাব।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ইনপুট পদ্ধতি সলনি কৰক"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"আপোনাৰ ফ\'নক সুৰক্ষা প্ৰদান কৰক"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"টেবলেটক সুৰক্ষা প্ৰদান কৰিবলৈ স্ক্ৰীণ লক ছেট কৰক"</string>
@@ -1464,8 +1464,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"কোনো আসোঁৱাহ হোৱা কাৰণে ই-ছিমবোৰ ৰিছেট কৰিব পৰা নাযায়৷"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"সকলো ডেটা মচক (ফেক্টৰী ৰিছেট)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"সকলো ডেটা মচক (ফেক্টৰী ৰিছেট)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ইয়ে আপোনাৰ ডিভাইচৰ "<b>"আভ্যন্তৰিণ সঞ্চয়াগাৰৰ"</b>"লগতে \n\n"<li>"সকলো ডেটা মচিব: আপোনাৰ Google একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপৰ ডেটা আৰু ছেটিংসমূহ"</li>\n<li>"ডাউনল\'ড কৰা হোৱা এপসমূহ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এই কাৰ্যই আপোনাৰ ফোনৰ "<b>"আভ্যন্তৰীণ সঞ্চয়াগাৰ"</b>" ৰ লগতে \n\n"<li>"আপোনাৰ Google একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপ্ ডাটা আৰু ছেটিংবোৰ"</li>\n<li>"ডাউনলোড কৰা এপসমূহ"</li>" ৰ পৰা সকলো ডেটা মচিব"</string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ইয়ে আপোনাৰ ডিভাইচৰ "<b>"আভ্যন্তৰিণ সঞ্চয়াগাৰৰ"</b>"লগতে \n\n"<li>"সকলো ডেটা মচিব: আপোনাৰ /e/ একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপৰ ডেটা আৰু ছেটিংসমূহ"</li>\n<li>"ডাউনল\'ড কৰা হোৱা এপসমূহ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এই কাৰ্যই আপোনাৰ ফোনৰ "<b>"আভ্যন্তৰীণ সঞ্চয়াগাৰ"</b>" ৰ লগতে \n\n"<li>"আপোনাৰ /e/ একাউণ্ট"</li>\n<li>"ছিষ্টেম আৰু এপ্ ডাটা আৰু ছেটিংবোৰ"</li>\n<li>"ডাউনলোড কৰা এপসমূহ"</li>" ৰ পৰা সকলো ডেটা মচিব"</string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"আপুনি বৰ্তমান এই একাউণ্টসমূহত ছাইন ইন হৈ আছে:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"এই ডিভাইচত আৰু ব্যৱহাৰকাৰী আছে।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"সংগীত"</li>\n<li>"ফট\'"</li>\n<li>"অইন ব্যৱহাৰকাৰীৰ ডেটা"</li></string>
@@ -1542,7 +1542,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ব্লুটুথ স্কেনিং"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"ব্লুটুথ অফ থকা অৱস্থাতও এপ্ আৰু সেৱাসমূহক যিকোনো সময়ত নিকটৱৰ্তী ডিভাইচবোৰ স্কেন কৰিবলৈ দিয়ক। এই কাৰ্যটো, যেনে, অৱস্থান সম্পৰ্কীয় সুবিধা আৰু সেৱাসমূহক উন্নত কৰিবলৈ ব্য়ৱহাৰ কৰিব পাৰি।"</string>
     <string name="location_network_based" msgid="9134175479520582215">"ৱাই-ফাই আৰু ম’বাইল নেটৱৰ্কৰ স্থান"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"আপোনাৰ অৱস্থান দ্ৰুতভাৱে নিৰ্ণয় কৰিবলৈ এপসমূহক Googleৰ অৱস্থান সেৱা ব্যৱহাৰ কৰিবলৈ দিয়ক। অৱস্থান তথ্য নামবিহীনভাৱে সংগ্ৰহ কৰা হ\'ব আৰু Googleলৈ প্ৰেৰণ কৰা হ\'ব।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"আপোনাৰ অৱস্থান দ্ৰুতভাৱে নিৰ্ণয় কৰিবলৈ এপসমূহক /e/ৰ অৱস্থান সেৱা ব্যৱহাৰ কৰিবলৈ দিয়ক। অৱস্থান তথ্য নামবিহীনভাৱে সংগ্ৰহ কৰা হ\'ব আৰু /e/লৈ প্ৰেৰণ কৰা হ\'ব।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ৱাই-ফাইএ অৱস্থান নিৰ্ণয় কৰিছে"</string>
     <string name="location_gps" msgid="8392461023569708478">"জিপিএছ উপগ্ৰহসমূহ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"আপোনাৰ অৱস্থান নিৰ্ভুলভাৱে নিৰ্ণয় কৰিবলৈ এপসমূহক আপোনাৰ টে\'বলেটৰ জিপিএছ ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
@@ -1550,8 +1550,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"সহায়প্ৰাপ্ত জিপিএছ ব্যৱহাৰ কৰক"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"জিপিএছক সহায় কৰিবলৈ ছাৰ্ভাৰ ব্যৱহাৰ কৰক (নেটৱৰ্কৰ ব্যৱহাৰ হ্ৰাস কৰিবলৈ টিক কৰা বাছনিৰ পৰা আঁতৰাওক)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"জিপিএছক সহায় কৰিবলৈ ছাৰ্ভাৰ ব্যৱহাৰ কৰক (জিপিএছৰ কাৰ্যক্ষমতা বৃদ্ধি কৰিবলৈ টিক কৰি নাৰাখিব)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"অৱস্থান আৰু Google অনুসন্ধান"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Googleক অনুসন্ধানৰ ফলাফল আৰু অইন সেৱা উন্নত কৰিবলৈ আপোনাৰ অৱস্থান ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"অৱস্থান আৰু /e/ অনুসন্ধান"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ক অনুসন্ধানৰ ফলাফল আৰু অইন সেৱা উন্নত কৰিবলৈ আপোনাৰ অৱস্থান ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
     <string name="location_access_title" msgid="7064108942964081243">"মোৰ অৱস্থানত প্ৰৱেশ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"আপোনাৰ অনুমতি বিচৰা এপসমূহক আপোনাৰ অৱস্থানৰ তথ্য ব্যৱহাৰ কৰিবলৈ দিয়ক"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"অৱস্থানৰ উৎসসমূহ"</string>
@@ -2444,7 +2444,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"বেকআপ আৰু পুনঃস্থাপন"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ব্যক্তিগত ডেটা"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"মোৰ ডেটাৰ বেকআপ লওক"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"এপ্ ডেটা, ৱাই-ফাই পাছৱর্ড আৰু অন্য ছেটিংবোৰ Google ছা্ৰ্ভাৰত বেকআপ লওক"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"এপ্ ডেটা, ৱাই-ফাই পাছৱর্ড আৰু অন্য ছেটিংবোৰ /e/ ছা্ৰ্ভাৰত বেকআপ লওক"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"বেকআপ একাউণ্ট"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"এপ্ ডেটা অন্তৰ্ভুক্ত কৰক"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"স্বয়ংক্ৰিয় পুনঃস্থাপন"</string>
@@ -2452,7 +2452,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"বেকআপ কৰা সেৱা সক্ৰিয় কৰা হোৱা নাই"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"সাম্প্ৰতিকভাৱে কোনো একাউণ্টে বেকাআপ কৰা ডেটা সঞ্চয় কৰা নাই"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপোনাৰ ৱাই-ফাই পাছৱৰ্ড, বুকমাৰ্ক, অন্য ছেটিং আৰু এপ্ ডেটাৰ বেকআপ বন্ধ কৰাৰ লগতে Google ছাৰ্ভাৰত প্ৰতিলিপি কৰা সকলো বস্তুবিলাক মুচিবনে?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"আপোনাৰ ৱাই-ফাই পাছৱৰ্ড, বুকমাৰ্ক, অন্য ছেটিং আৰু এপ্ ডেটাৰ বেকআপ বন্ধ কৰাৰ লগতে /e/ ছাৰ্ভাৰত প্ৰতিলিপি কৰা সকলো বস্তুবিলাক মুচিবনে?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ডিভাইচ ডেটাৰ বেকআপ (যেনে ৱাই-ফাই পাছৱৰ্ড আৰু কল ইতিহাস) আৰু এপ ডেটা (ছেটিংসমূহ আৰু এপসমূহৰ দ্বাৰা সংগ্ৰহ কৰি ৰখা ফাইলসমূহ), লগতে ৰিম\'ট ছাৰ্ভাৰসমূহত থকা সকলো প্ৰতিলিপি মচা বন্ধ কৰিব নেকি?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"আপোনাৰ ডিভাইচৰ ডেটা (যেনে, ৱাই-ফাইৰ পাছৱৰ্ড আৰু কলৰ ইতিহাস) আৰু এপৰ ডেটা (যেনে, ছেটিংসমূহ আৰু এপে জমা কৰা ফাইলসমূহ)ৰ নিলগৰ পৰা বেকআপ লওক।\n\nযেতিয়া আপুনি স্বয়ংক্ৰিয় বেকআপ অন কৰে, তেতিয়া ডিভাইচ আৰু এপৰ ডেটা সময়ে সময়ে নিলগৰ পৰা ছেভ কৰা হয়। এপ ডেটা যিকোনো এপে (ডেভেলপাৰ ছেটিং অনুসৰি) জমা কৰা ডেটা হ\'ব পাৰে, য\'ত সম্ভাব্য সংবেদী ডেটা যেনে সম্পৰ্ক, বাৰ্তা আৰু ফট\' আদিসমূহ অন্তৰ্ভুক্ত হ\'ব পাৰে।"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ডিভাইচ এডমিন ছেটিংসমূহ"</string>
@@ -2539,7 +2539,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"কেলেণ্ডাৰ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"সম্পৰ্কসমূহ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ছিংকলৈ আপোনাক স্বাগতম!"</font>" \nডেটা ছিংক কৰাৰ এইয়া Googleৰ এটা পদক্ষেপ, যাৰদ্বাৰা আপুনি য\'তেই নাথাকক ত\'তে সম্পৰ্কসূচী, সাক্ষাতৰ সময়সূচীকে ধৰি আপোনাৰ বাবে অতি দৰকাৰী তথ্যসমূহ থাওকতে পাব।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ছিংকলৈ আপোনাক স্বাগতম!"</font>" \nডেটা ছিংক কৰাৰ এইয়া /e/ৰ এটা পদক্ষেপ, যাৰদ্বাৰা আপুনি য\'তেই নাথাকক ত\'তে সম্পৰ্কসূচী, সাক্ষাতৰ সময়সূচীকে ধৰি আপোনাৰ বাবে অতি দৰকাৰী তথ্যসমূহ থাওকতে পাব।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"এপৰ ছিংক ছেটিংসমূহ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ডেটা আৰু ছিংক্ৰনাইজেশ্বন"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"পাছৱৰ্ড সলনি কৰক"</string>
@@ -2624,8 +2624,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"যেতিয়া কেৱল ম’বাইল নেটৱৰ্কহে উপলব্ধ থাকে, এই সুবিধাই নেপথ্য ডেটাৰ উপৰত নিৰ্ভৰশীল এপবিলাকক অচল কৰি পেলাব পাৰে।\n\nএপটোৰ ভিতৰত থকা ছেটিংসমূহত আপুনি ডেটা ব্যৱহাৰ নিয়ন্ত্ৰণ কৰিবলৈ অধিক উপযুক্ত সুবিধা পাব।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"আপুনি ম’বাইল ডেটাৰ সীমা ছেট কৰাৰ পিছতহে কেৱল নেপথ্য ডেটাক প্ৰতিবন্ধিত কৰা সম্ভৱ৷"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"স্বয়ং-ছিংক ডেটা অন কৰিবনে?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"আপুনি ৱেবৰ যোগেৰে আপোনাৰ একাউণ্টত কৰা যিকোনো সাল-সলনি স্বয়ংক্ৰিয়ভাৱে আপোনাৰ ফ\'নত প্ৰতিফলিত হ\'ব।\n\nকিছুমান একাউণ্টে আপুনি ফ\'নত কৰা সাল-সলনিসমূুহও স্বয়ংক্ৰিয়ভাৱে ৱেবলৈ প্ৰতিলিপি কৰিব পাৰে। এটা Google একাউণ্টে এইধৰণে কাম কৰে।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"আপুনি ৱেবৰ যোগেৰে আপোনাৰ একাউণ্টত কৰা যিকোনো সাল-সলনি স্বয়ংক্ৰিয়ভাৱে আপোনাৰ ফ\'নত প্ৰতিফলিত হ\'ব।\n\nকিছুমান একাউণ্টে আপুনি ফ\'নত কৰা সাল-সলনিসমূহও স্বয়ংক্ৰিয়ভাৱে ৱেবলৈ প্ৰতিলিপি কৰিব পাৰে। এটা Google একাউণ্টে এইধৰণে কাম কৰে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"আপুনি ৱেবৰ যোগেৰে আপোনাৰ একাউণ্টত কৰা যিকোনো সাল-সলনি স্বয়ংক্ৰিয়ভাৱে আপোনাৰ ফ\'নত প্ৰতিফলিত হ\'ব।\n\nকিছুমান একাউণ্টে আপুনি ফ\'নত কৰা সাল-সলনিসমূুহও স্বয়ংক্ৰিয়ভাৱে ৱেবলৈ প্ৰতিলিপি কৰিব পাৰে। এটা /e/ একাউণ্টে এইধৰণে কাম কৰে।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"আপুনি ৱেবৰ যোগেৰে আপোনাৰ একাউণ্টত কৰা যিকোনো সাল-সলনি স্বয়ংক্ৰিয়ভাৱে আপোনাৰ ফ\'নত প্ৰতিফলিত হ\'ব।\n\nকিছুমান একাউণ্টে আপুনি ফ\'নত কৰা সাল-সলনিসমূহও স্বয়ংক্ৰিয়ভাৱে ৱেবলৈ প্ৰতিলিপি কৰিব পাৰে। এটা /e/ একাউণ্টে এইধৰণে কাম কৰে।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ডেটা স্বয়ং-ছিংক অফ কৰিবনে?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ইয়ে ডেটা আৰু বেটাৰিৰ খৰচ কমাব, কিন্তু আপুনি শেহতীয়া তথ্য পাবলৈ নিজে নিজে প্ৰতিটো একাউণ্ট ছিংক কৰাব লাগিব। লগতে, আপডে’ট আহিলে আপুনি তাৰ জাননী নাপাব।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ব্যৱহাৰ চক্ৰ ৰিছেট হোৱাৰ তাৰিখ"</string>
@@ -4086,7 +4086,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(<xliff:g id="USER">%s</xliff:g>ৰ বাবে অক্ষম কৰা হৈছে)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"স্বয়ংপূৰ্তি সেৱা"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"স্বয়ং, পূৰ কৰা, স্বয়ংপূৰ্তি"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;আপুনি এই এপটোক বিশ্বাস কৰাটো নিশ্চিত কৰক&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; এ স্বয়ংভৰ্তিৰ বাবে নিৰ্ধাৰণ কৰিবলৈ আপোনাৰ স্ক্ৰীণত দেখা দিয়া বস্তুবোৰ ব্য়ৱহাৰ কৰে।"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;আপুনি এই এপটোক বিশ্বাস কৰাটো নিশ্চিত কৰক&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; এ স্বয়ংভৰ্তিৰ বাবে নিৰ্ধাৰণ কৰিবলৈ আপোনাৰ স্ক্ৰীণত দেখা দিয়া বস্তুবোৰ ব্য়ৱহাৰ কৰে।"</string>
     <string name="color_theme" msgid="1535685696756738324">"ৰঙৰ থীম"</string>
     <string name="default_theme" msgid="7085644992078579076">"ডিফ\'ল্ট"</string>
     <string name="device_theme" msgid="4571803018917608588">"ডিভাইচৰ থিম"</string>
