--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Предупреждение: Всичко от устройството ви ще бъде изтрито след още <xliff:g id="COUNT">^1</xliff:g> неуспешни опита за отключване!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Въведете паролата си"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шифроването не бе успешно"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифроването бе прекъснато и не може да завърши. В резултат на това вече няма достъп до данните на таблета ви.\n\nЗа да възобновите използването му, трябва да възстановите фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, на които е направено резервно копие в профила ви в Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифроването бе прекъснато и не може да завърши. В резултат на това вече няма достъп до данните на телефона ви.\n\nЗа да възобновите използването му, трябва да възстановите фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, на които е направено резервно копие в профила ви в Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифроването бе прекъснато и не може да завърши. В резултат на това вече няма достъп до данните на таблета ви.\n\nЗа да възобновите използването му, трябва да възстановите фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, на които е направено резервно копие в профила ви в /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифроването бе прекъснато и не може да завърши. В резултат на това вече няма достъп до данните на телефона ви.\n\nЗа да възобновите използването му, трябва да възстановите фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, на които е направено резервно копие в профила ви в /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Дешифроването не бе успешно"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Въведената от вас парола е правилна, но за съжаление данните ви са повредени. \n\nЗа да възобновите използването на таблета си, трябва да извършите възстановяване на фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, за които сте създали резервно копие в профила си в Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Въведената от вас парола е правилна, но за съжаление данните ви са повредени. \n\nЗа да възобновите използването на телефона си, трябва да извършите възстановяване на фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, за които сте създали резервно копие в профила си в Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Въведената от вас парола е правилна, но за съжаление данните ви са повредени. \n\nЗа да възобновите използването на таблета си, трябва да извършите възстановяване на фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, за които сте създали резервно копие в профила си в /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Въведената от вас парола е правилна, но за съжаление данните ви са повредени. \n\nЗа да възобновите използването на телефона си, трябва да извършите възстановяване на фабричните настройки. След това, когато го настройвате, ще имате възможност да възстановите всички данни, за които сте създали резервно копие в профила си в /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Превключване на метода на въвеждане"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"Защита на телефона ви"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"Задайте закл. на екрана, за да защитите таблета"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Електронните SIM карти не могат да бъдат нулирани поради грешка."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Изтриване на всички данни (възстановяване на фабричните настройки)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Изтрив. на данните (възст. на фабр. настр.)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Това ще изтрие всички данни от "<b>"вътрешното хранилище"</b>" на таблета ви, включително:\n\n"<li>"профила ви в Google;"</li>\n<li>"данни и настройки от системата и приложенията;"</li>\n<li>"изтеглени приложения."</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Това ще изтрие всички данни от "<b>"вътрешното хранилище"</b>" на телефона ви, включително:\n\n"<li>"профила ви в Google"</li>\n<li>"данни и настройки от системата и приложенията"</li>\n<li>"изтеглени приложения"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Това ще изтрие всички данни от "<b>"вътрешното хранилище"</b>" на таблета ви, включително:\n\n"<li>"профила ви в /e/;"</li>\n<li>"данни и настройки от системата и приложенията;"</li>\n<li>"изтеглени приложения."</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Това ще изтрие всички данни от "<b>"вътрешното хранилище"</b>" на телефона ви, включително:\n\n"<li>"профила ви в /e/"</li>\n<li>"данни и настройки от системата и приложенията"</li>\n<li>"изтеглени приложения"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Понастоящем сте влезли в следните профили:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"На това устройство има други потребители.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музика"</li>\n<li>"Снимки"</li>\n<li>"други потребителски данни"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Сканиране за устройства с Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"Разрешете на приложенията и услугите да сканират за устройства в близост по всяко време дори когато функцията за Bluetooth e изключена. Това може да послужи например за подобряване на базиращите се на местоположението функции и услуги."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Mестоп. от Wi‑Fi и моб. мрежа"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Прилож. да ползват услугата ни за местоп., за да прогнозират по-бързо вашето. Анонимни данни за местоп. ще се събират и изпращат на Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Прилож. да ползват услугата ни за местоп., за да прогнозират по-бързо вашето. Анонимни данни за местоп. ще се събират и изпращат на /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Местоположението се определя чрез Wi‑Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Спътници на GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Приложенията да използват GPS на таблета ви, за да посочат местоположението ви"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Използване на помощ за GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Използване на сървър за помощ с GPS (премахнете отметката за намаляване на употребата на мрежа)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Използване на сървър за помощ с GPS (премахнете отметката за подобряване на качеството нa услугата)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Местопол. и търсене с Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Разрешавам на Google да използва местоположението ми за подобряване на резултатите от търсенето и др. услуги"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Местопол. и търсене с /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Разрешавам на /e/ да използва местоположението ми за подобряване на резултатите от търсенето и др. услуги"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Достъп до местоположението ми"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Приложенията, които са поискали от вас разрешение, да използват информацията за местоположението ви"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Източници на местоположение"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Резервни копия и възстановяване"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Лични данни"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Резервно копие на данните ми"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Създаване на резервно копие в сървърите на Google на данните за приложенията, паролите за Wi‑Fi и другите настройки"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Създаване на резервно копие в сървърите на /e/ на данните за приложенията, паролите за Wi‑Fi и другите настройки"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Резервно копие на профила"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Включв. на данните от прилож."</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Автом. възстановяване"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Услугата за резервни копия не е активна"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Понастоящем няма профил, който съхранява данните от резервното копие"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Да се спре ли създаването на резервни копия на вашите пароли за Wi‑Fi, отметки, други настройки и данните за приложенията ви и да се изтрият всички копия от сървърите на Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Да се спре ли създаването на резервни копия на вашите пароли за Wi‑Fi, отметки, други настройки и данните за приложенията ви и да се изтрият всички копия от сървърите на /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Искате ли да спрете създаването на резервно копие на данните на устройството (като пароли за Wi-Fi и история на обажданията) и тези на приложенията (като настройки и съхранявани от приложенията файлове), както и да изтриете всички копия в отдалечените сървъри?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Автоматично създаване на отдалечено резервно копие на данните на устройството (като пароли за Wi-Fi и история на обажданията) и тези на приложенията (като настройки и съхранявани от приложенията файлове).\n\nКогато включите автоматичното създаване на резервно копие, данните на устройството и на приложенията периодично се запазват отдалечено. Данните на приложенията могат да бъдат всяка запазвана от тях информация (въз основа на настройките за програмисти), включително потенциално поверителната, като например контакти, съобщения и снимки."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Настройки за администриране на устройството"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Календар"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Контакти"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добре дошли в Google Синхронизиране!"</font>\n"Подходът на Google към синхронизирането на данни, за да ви осигурим достъп до контактите ви, срещите ви и много други неща, където и да сте."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добре дошли в /e/ Синхронизиране!"</font>\n"Подходът на /e/ към синхронизирането на данни, за да ви осигурим достъп до контактите ви, срещите ви и много други неща, където и да сте."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Настройки за синхронизиране на приложения"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Данни и синхронизиране"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Промяна на паролата"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Тази функция може да доведе до спиране на работата на приложение, което зависи от данните на заден план, когато са налице само мобилни мрежи.\n\nМожете да намерите по-подходящи контроли за използването на данните в наличните в приложението настройки."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Ограничаването на данните на заден план е възможно само когато сте задали ограничение за мобилните данни."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Да се вкл. ли авт. синхр. на данни?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Всички промени, които правите в профилите си в мрежата, ще бъдат копирани автоматично в таблета ви.\n\nНякои профили може също да копират автоматично в мрежата извършените от вас промени в таблета. Профилът в Google работи по този начин."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Всички промени, които правите в профилите си в мрежата, ще бъдат копирани автоматично в телефона ви.\n\nНякои профили може също да копират автоматично в мрежата извършените от вас промени в телефона. Профилът в Google работи по този начин."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Всички промени, които правите в профилите си в мрежата, ще бъдат копирани автоматично в таблета ви.\n\nНякои профили може също да копират автоматично в мрежата извършените от вас промени в таблета. Профилът в /e/ работи по този начин."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Всички промени, които правите в профилите си в мрежата, ще бъдат копирани автоматично в телефона ви.\n\nНякои профили може също да копират автоматично в мрежата извършените от вас промени в телефона. Профилът в /e/ работи по този начин."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Да се изключи ли авт. синхронизиране на данни?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Това ще спести използването на данни и батерия, но ще трябва да синхронизирате ръчно всеки профил, за да събирате скорошна информация. Също така няма да получавате известия, когато има актуализации."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Дата на възстановяване на цикъла за използване"</string>
@@ -4010,7 +4010,7 @@
     <string name="enterprise_privacy_security_logs" msgid="5377362481617301074">"Най-скорошният регистрационен файл за сигурността"</string>
     <string name="enterprise_privacy_none" msgid="7706621148858381189">"Нищо"</string>
     <string name="enterprise_privacy_enterprise_installed_packages" msgid="6353757812144878828">"Инсталирани са приложения"</string>
-    <string name="enterprise_privacy_apps_count_estimation_info" msgid="7433213592572082606">"Броят на приложенията е приблизителен и може да не включва тези, които не са инсталирани от Google Play Магазин."</string>
+    <string name="enterprise_privacy_apps_count_estimation_info" msgid="7433213592572082606">"Броят на приложенията е приблизителен и може да не включва тези, които не са инсталирани от /e/ Play Магазин."</string>
     <plurals name="enterprise_privacy_number_packages_lower_bound" formatted="false" msgid="3005116533873542976">
       <item quantity="other">Поне <xliff:g id="COUNT_1">%d</xliff:g> приложения</item>
       <item quantity="one">Поне <xliff:g id="COUNT_0">%d</xliff:g> приложение</item>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(деактивирано за потребителя <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Услуга за автоматично попълване"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"автомативно, попълване, автоматично попълване"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Уверете се, че имате доверие на това приложение&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Функцията на Google за автоматично попълване&gt;%1$s&lt;/xliff:g&gt; използва това, което е на екрана ви, за да определи какво може да се попълни автоматично."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Уверете се, че имате доверие на това приложение&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Функцията на /e/ за автоматично попълване&gt;%1$s&lt;/xliff:g&gt; използва това, което е на екрана ви, за да определи какво може да се попълни автоматично."</string>
     <string name="color_theme" msgid="1535685696756738324">"Цветова тема"</string>
     <string name="default_theme" msgid="7085644992078579076">"Стандартно"</string>
     <string name="device_theme" msgid="4571803018917608588">"Тема на устройството"</string>
