--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ચેતવણી: અનલૉક કરવાના <xliff:g id="COUNT">^1</xliff:g> વધુ પ્રયાસો પછી તમારા ઉપકરણને સાફ કરી નાખવામાં આવશે!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"તમારો પાસવર્ડ લખો"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"એન્ક્રિપ્શન અસફળ થયું"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"એન્ક્રિપ્શન વિક્ષેપિત થયું હતું અને પૂર્ણ કરી શકાતું નથી. પરિણામે, તમારા ટેબ્લેટ પરનો ડેટા હવે અ‍ૅક્સેસિબલ રહેશે નહીં. \n\nતમારા  ટેબ્લેટનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ટેબ્લેટને સેટ કરો ત્યારે, તમારી પાસે તમારા Google  એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"એન્ક્રિપ્શન વિક્ષેપિત થયું હતું અને પૂર્ણ કરી શકાતું નથી. પરિણામે, તમારા ફોન પરનો ડેટા હવે અ‍ૅક્સેસિબલ રહેશે નહીં. \n\nતમારા  ફોનનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ફોનને સેટ કરો ત્યારે, તમારી પાસે તમારા Google  એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"એન્ક્રિપ્શન વિક્ષેપિત થયું હતું અને પૂર્ણ કરી શકાતું નથી. પરિણામે, તમારા ટેબ્લેટ પરનો ડેટા હવે અ‍ૅક્સેસિબલ રહેશે નહીં. \n\nતમારા  ટેબ્લેટનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ટેબ્લેટને સેટ કરો ત્યારે, તમારી પાસે તમારા /e/  એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"એન્ક્રિપ્શન વિક્ષેપિત થયું હતું અને પૂર્ણ કરી શકાતું નથી. પરિણામે, તમારા ફોન પરનો ડેટા હવે અ‍ૅક્સેસિબલ રહેશે નહીં. \n\nતમારા  ફોનનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ફોનને સેટ કરો ત્યારે, તમારી પાસે તમારા /e/  એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ડિક્રિપ્શન અસફળ થયું"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"તમે દાખલ કરેલ પાસવર્ડ સાચો છે, પરંતુ કમનસીબે તમારો ડેટા દુષિત છે. \n\nતમારા ટેબ્લેટનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ટેબ્લેટને સેટ કરો ત્યારે, તમારી પાસે તમારા Google એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"તમે દાખલ કરેલ પાસવર્ડ સાચો છે, પરંતુ કમનસીબે તમારો ડેટા દુષિત છે. \n\nતમારા ફોનનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ફોનને સેટ કરો ત્યારે, તમારી પાસે તમારા Google એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"તમે દાખલ કરેલ પાસવર્ડ સાચો છે, પરંતુ કમનસીબે તમારો ડેટા દુષિત છે. \n\nતમારા ટેબ્લેટનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ટેબ્લેટને સેટ કરો ત્યારે, તમારી પાસે તમારા /e/ એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"તમે દાખલ કરેલ પાસવર્ડ સાચો છે, પરંતુ કમનસીબે તમારો ડેટા દુષિત છે. \n\nતમારા ફોનનો ઉપયોગ ફરી શરૂ કરવા માટે, તમારે ફેક્ટરી રીસેટ કરવાની જરૂર છે. જ્યારે તમે રીસેટ પછી તમારા ફોનને સેટ કરો ત્યારે, તમારી પાસે તમારા /e/ એકાઉન્ટ પર બેકઅપ લેવાયેલ તમારા કોઈપણ ડેટાને પુનઃસ્થાપિત કરવાની એક તક હશે."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ઇનપુટ પદ્ધતિ સ્વિચ કરો"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"તમારો ફોન સુરક્ષિત કરો"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"ટૅબ્લેટને સુરક્ષિત કરવા માટે સ્ક્રીન લૉક સેટ કરો"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"એક ભૂલને કારણે ઇ-સિમ રીસેટ કરી શકાતા નથી."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"બધો ડેટા ભૂંસી નાખો (ફેક્ટરી રીસેટ)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"બધો ડેટા કાઢી નાખો (ફેક્ટરી રીસેટ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"આ તમારા ટેબ્લેટનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું Google એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"આ તમારા ફોનનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું Google એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"આ તમારા ટેબ્લેટનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું /e/ એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"આ તમારા ફોનનાં "<b>"આંતરિક સંગ્રહ"</b>"માંથી તમામ ડેટા કાઢી નાંખશે, જેમાં આનો સમાવેશ થાય છે:\n\n"<li>"તમારું /e/ એકાઉન્ટ"</li>\n<li>"સિસ્ટમ અને ઍપ્લિકેશન ડેટા અને સેટિંગ્સ"</li>\n<li>"ડાઉનલોડ કરેલ ઍપ્લિકેશનો"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"તમે હાલમાં નીચેના એકાઉન્ટ્સમાં સાઇન ઇન થયેલાં છો:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"આ ઉપકરણ પર અન્ય વપરાશકર્તા હાજર છે.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"સંગીત"</li>\n<li>"ફોટા"</li>\n<li>"અન્ય વપરાશકર્તા ડેટા"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"બ્લૂટૂથ સ્કેનિંગ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"જ્યારે બ્લૂટૂથ બંધ હોય ત્યારે પણ ગમે ત્યારે ઍપ અને સેવાઓને નજીકના ઉપકરણો સ્કૅન કરવાની મંજૂરી આપો. ઉદાહરણ તરીકે, આનો ઉપયોગ સ્થાન આધારિત સુવિધાઓ અને સેવાઓને બહેતર બનાવવા માટે કરી શકાય છે."</string>
     <string name="location_network_based" msgid="9134175479520582215">"વાઇ-ફાઇ અને મોબાઇલ નેટવર્ક સ્થાન"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"એપ્લિકેશન્સને તમારા સ્થાનનો વધુ ઝડપથી અંદાજ મેળવવા માટે Google ની સ્થાન સેવાનો ઉપયોગ કરવા દો. અનામી સ્થાન ડેટા એકત્રિત કરીને Google ને મોકલવામાં આવશે."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"એપ્લિકેશન્સને તમારા સ્થાનનો વધુ ઝડપથી અંદાજ મેળવવા માટે /e/ ની સ્થાન સેવાનો ઉપયોગ કરવા દો. અનામી સ્થાન ડેટા એકત્રિત કરીને /e/ ને મોકલવામાં આવશે."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"સ્થાન વાઇ-ફાઇ દ્વારા નિર્ધારિત થયું"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS સેટેલાઇટ્સ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"તમારા સ્થાનનું નિર્દેશન કરવા માટે એપ્લિકેશન્સને તમારા ટેબ્લેટ પર GPS નો ઉપયોગ કરવા દો"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"સહાયિત GPS નો ઉપયોગ કરો"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ને સહાય કરવા માટે સર્વરનો ઉપયોગ કરો (નેટવર્ક ઉપયોગને ઘટાડવા માટે અનચેક કરો)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ને સહાય કરવા માટે સર્વરનો ઉપયોગ કરો (GPS કામગીરીને સુધારવા માટે અનચેક કરો)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"સ્થાન અને Google શોધ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google ને શોધ પરિણામો અને અન્ય સેવાઓને બહેતર બનાવવા માટે તમારા સ્થાનનો ઉપયોગ કરવા દો"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"સ્થાન અને /e/ શોધ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ ને શોધ પરિણામો અને અન્ય સેવાઓને બહેતર બનાવવા માટે તમારા સ્થાનનો ઉપયોગ કરવા દો"</string>
     <string name="location_access_title" msgid="7064108942964081243">"મારા સ્થાનને ઍક્સેસ કરો"</string>
     <string name="location_access_summary" msgid="69031404093194341">"તમારી પરવાનગી લીધેલ એપ્લિકેશન્સને તમારા ઉપકરણના સ્થાનનો ઉપયોગ કરવા દો."</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"સ્થાન સ્ત્રોતો"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"બેકઅપ અને પુનર્સ્થાપન"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"વ્યક્તિગત ડેટા"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"મારા ડેટાનો બેક અપ લો"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"ઍપ્લિકેશન ડેટા, વાઇ-ફાઇ પાસવર્ડ્સ અને અન્ય સેટિંગ્સનો Google સર્વર્સ પર બેક અપ લો"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"ઍપ્લિકેશન ડેટા, વાઇ-ફાઇ પાસવર્ડ્સ અને અન્ય સેટિંગ્સનો /e/ સર્વર્સ પર બેક અપ લો"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"બેકઅપ એકાઉન્ટ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ઍપ્લિકેશન માહિતી શામેલ કરો"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ઑટોમૅટિક પુનઃસ્થાપના"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"બૅકઅપ સેવા સક્રિય કરેલી નથી"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"બેકઅપ લેવાયેલ ડેટા અત્યારે કોઇ એકાઉન્ટ સ્ટોર કરી રહ્યું નથી"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"વાઇ-ફાઇ પાસવર્ડ્સ, બુકમાર્ક્સ, અન્ય સેટિંગ્સ અને ઍપ્લિકેશન ડેટાનો બેકઅપ લેવાનું રોકીએ, તેમજ Google સર્વર્સ પરની બધી કૉપિઝને કાઢી નાખીએ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"વાઇ-ફાઇ પાસવર્ડ્સ, બુકમાર્ક્સ, અન્ય સેટિંગ્સ અને ઍપ્લિકેશન ડેટાનો બેકઅપ લેવાનું રોકીએ, તેમજ /e/ સર્વર્સ પરની બધી કૉપિઝને કાઢી નાખીએ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ઉપકરણ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ્સ અને કૉલ ઇતિહાસ) અને ઍપ્લિકેશન ડેટા (જેમ કે સેટિંગ્સ અને ઍપ્લિકેશનો દ્વારા સંગ્રહિત ફાઇલો) નું બેકઅપ લેવાનું રોકીએ, ઉપરાંત રિમોટ સર્વર્સ પરની તમામ કૉપિઝ કાઢી નાખીએ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ઉપકરણ ડેટા (જેમ કે વાઇ-ફાઇ પાસવર્ડ્સ અને કૉલ ઇતિહાસ) અને ઍપ્લિકેશન ડેટા (જેમ કે સેટિંગ્સ અને ઍપ્લિકેશનો દ્વારા સંગ્રહિત ફાઇલો)નો રિમોટલી આપમેળે બેક અપ લો.\n\nજ્યારે તમે સ્વચલિત બેકઅપ ચાલુ કરો છો, ત્યારે ઉપકરણ અને ઍપ્લિકેશન ડેટા સમયાંતરે રિમોટલી સચવાય છે. ઍપ્લિકેશન ડેટા એવો કોઈપણ ડેટા હોઈ શકે જેને કોઈ ઍપ્લિકેશને સાચવ્યો હોય (વિકાસકર્તા સેટિંગ્સનાં આધારે) જેમાં સંપર્કો, સંદેશા અને ફોટો જેવા સંભવિતપણે સંવેદનશીલ ડેટાનો સમાવેશ થાય છે."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ઉપકરણ વ્યવસ્થાપક સેટિંગ્સ"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"કૅલેન્ડર"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"સંપર્કો"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google સમન્વયન પર સ્વાગત છે!"</font>" \nતમારા સંપર્કો, એપોઇન્ટમેન્ટ્સ અને વધુના અ‍ૅક્સેસની તમે જ્યાં પણ હોવ ત્યાંથી મંજૂરી આપવા માટે ડેટાને સમન્વયિત કરવાનો એક Google અભિગમ."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ સમન્વયન પર સ્વાગત છે!"</font>" \nતમારા સંપર્કો, એપોઇન્ટમેન્ટ્સ અને વધુના અ‍ૅક્સેસની તમે જ્યાં પણ હોવ ત્યાંથી મંજૂરી આપવા માટે ડેટાને સમન્વયિત કરવાનો એક /e/ અભિગમ."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ઍપ્લિકેશન સમન્વયન સેટિંગ્સ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ડેટા અને સમન્વયન"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"પાસવર્ડ બદલો"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"આ સુવિધાને કારણે બૅકગ્રાઉન્ડ ડેટા પર આધારિત હોય તે ઍપ્લિકેશન ફક્ત મોબાઇલ નેટવર્કો ઉપલબ્ધ હોય ત્યારે કામ કરતી બંધ થઈ શકે છે.\n\nતમે ઍપ્લિકેશનમાં ઉપલબ્ધ સેટિગ્સમાં વધુ ઉચિત ડેટા વપરાશ નિયંત્રણો મેળવી શકો છો."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"તમે મોબાઇલ ડેટા મર્યાદા સેટ કરી હોય, માત્ર ત્યારે જ બૅકગ્રાઉન્ડ ડેટાને મર્યાદિત કરવું સંભવ છે."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ડેટા સ્વતઃસમન્વયિત કરો ચાલુ કરીએ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"તમે વેબ પર તમારા એકાઉન્ટ્સમાં કરો તે કોઈપણ ફેરફારોને આપમેળે તમારા ફોન પર કૉપિ કરાશે.\n\nકેટલાક એકાઉન્ટ્સ પણ તમે ટેબ્લેટ પર કરો તે ફેરફારોની વેબ પર આપમેળે કૉપિ કરશે. Google એકાઉન્ટ આ પ્રમાણે કાર્ય કરે છે."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"તમે વેબ પર તમારા એકાઉન્ટ્સમાં કરો તે કોઈપણ ફેરફારોને આપમેળે તમારા ફોન પર કૉપિ કરાશે.\n\nકેટલાક એકાઉન્ટ્સ પણ તમે ફોન પર કરો તે ફેરફારોની વેબ પર આપમેળે કૉપિ કરશે. Google એકાઉન્ટ આ પ્રમાણે કાર્ય કરે છે."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"તમે વેબ પર તમારા એકાઉન્ટ્સમાં કરો તે કોઈપણ ફેરફારોને આપમેળે તમારા ફોન પર કૉપિ કરાશે.\n\nકેટલાક એકાઉન્ટ્સ પણ તમે ટેબ્લેટ પર કરો તે ફેરફારોની વેબ પર આપમેળે કૉપિ કરશે. /e/ એકાઉન્ટ આ પ્રમાણે કાર્ય કરે છે."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"તમે વેબ પર તમારા એકાઉન્ટ્સમાં કરો તે કોઈપણ ફેરફારોને આપમેળે તમારા ફોન પર કૉપિ કરાશે.\n\nકેટલાક એકાઉન્ટ્સ પણ તમે ફોન પર કરો તે ફેરફારોની વેબ પર આપમેળે કૉપિ કરશે. /e/ એકાઉન્ટ આ પ્રમાણે કાર્ય કરે છે."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ડેટા ઑટો-સિંક કરો બંધ કરીએ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"આમ કરવું તે ડેટા અને બૅટરી વપરાશ બચાવશે, પરંતુ તમારે તાજેતરની માહિતી એકત્રિત કરવા માટે દરેક એકાઉન્ટને મેન્યુઅલી સિંક કરવાની જરૂર પડશે. અને જ્યારે અપડેટ આવશે ત્યારે તમે નોટિફિકેશન પ્રાપ્ત કરી શકશો નહીં."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"વપરાશ સાયકલ ફરીથી સેટ કરવાની તારીખ"</string>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(વપરાશકર્તા <xliff:g id="USER">%s</xliff:g> માટે અક્ષમ કરેલ)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"સ્વતઃભરણ સેવા"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"સ્વતઃ, ભરો, સ્વતઃભરણ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ખાતરી કરો કે તમે આ ઍપ્લિકેશનનો વિશ્વાસ કરો છો&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google આપમેળે&gt;%1$s&lt;/xliff:g&gt; તમારી સ્ક્રીન પર શું છે તેનો ઉપયોગ એ નક્કી કરવા કરે છે કે આપમેળે શું દાખલ થશે."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ખાતરી કરો કે તમે આ ઍપ્લિકેશનનો વિશ્વાસ કરો છો&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ આપમેળે&gt;%1$s&lt;/xliff:g&gt; તમારી સ્ક્રીન પર શું છે તેનો ઉપયોગ એ નક્કી કરવા કરે છે કે આપમેળે શું દાખલ થશે."</string>
     <string name="color_theme" msgid="1535685696756738324">"રંગ થીમ"</string>
     <string name="default_theme" msgid="7085644992078579076">"ડિફૉલ્ટ"</string>
     <string name="device_theme" msgid="4571803018917608588">"ઉપકરણની થીમ"</string>
