--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Զգուշացում. Եթե ևս <xliff:g id="COUNT">^1</xliff:g> անգամ չկարողանաք ճիշտ ապակողպել, ձեր սարքի ողջ տվյալները կմաքրվեն:"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Մուտքագրեք ձեր գաղտնաբառը"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Գաղտնագրումը անհաջող էր"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Գաղտնագրումը դադարեցվեց, և այն հնարավոր չէ ավարտել: Արդյունքում ձեր պլանշետի տվյալները այլևս մատչելի չեն: \n\n Շարունակելու համար օգտագործել ձեր պլանշետը` դուք պետք է կատարեք գործարանային վերականգնում: Ձեր պլանշետի վերականգնումից և կարգավորումից հետո դուք հնարավորություն կունենանք վերականգնել ցանկացած տվյալ, որը պահուստավորվել էր ձեր Google հաշվում:"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Գաղտնագրումը ընդհատվել է և այն հնարավոր չէ ավարտել: Արդյունքում հեռախոսի տվյալներն այլևս հասանելի չեն:\n\nՀեռախոսը նորից օգտագործելու համար պետք է գործարանային վերականգնում իրականացնեք: Երբ վերականգնումից հետո կարգավորեք հեռախոսը, հնարավորություն կունենաք վերականգնելու ցանկացած տվյալ, որ պահուստավորվել է ձեր Google հաշվում:"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Գաղտնագրումը դադարեցվեց, և այն հնարավոր չէ ավարտել: Արդյունքում ձեր պլանշետի տվյալները այլևս մատչելի չեն: \n\n Շարունակելու համար օգտագործել ձեր պլանշետը` դուք պետք է կատարեք գործարանային վերականգնում: Ձեր պլանշետի վերականգնումից և կարգավորումից հետո դուք հնարավորություն կունենանք վերականգնել ցանկացած տվյալ, որը պահուստավորվել էր ձեր /e/ հաշվում:"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Գաղտնագրումը ընդհատվել է և այն հնարավոր չէ ավարտել: Արդյունքում հեռախոսի տվյալներն այլևս հասանելի չեն:\n\nՀեռախոսը նորից օգտագործելու համար պետք է գործարանային վերականգնում իրականացնեք: Երբ վերականգնումից հետո կարգավորեք հեռախոսը, հնարավորություն կունենաք վերականգնելու ցանկացած տվյալ, որ պահուստավորվել է ձեր /e/ հաշվում:"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Չհաջողվեց վերծանել"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Մուտքագրած գաղտնաբառը ճիշտ է, բայց ձեր տվյալները վնասված են: \n\nՈրպեսզի նորից կարողանաք օգտագործել պլանշետը, պետք է կատարեք գործարանային վերակայում: Երբ կարգավորեք պլանշետը վերակայումից հետո, կկարողանաք վերականգնել Google հաշվում պահուստավորված տվյալները:"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Մուտքագրած գաղտնաբառը ճիշտ է, բայց ձեր տվյալները վնասված են: \n\nՈրպեսզի նորից կարողանաք օգտագործել հեռախոսը, պետք է կատարեք գործարանային վերակայում: Երբ կարգավորեք հեռախոսը վերակայումից հետո, կկարողանաք վերականգնել Google հաշվում պահուստավորված տվյալները:"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Մուտքագրած գաղտնաբառը ճիշտ է, բայց ձեր տվյալները վնասված են: \n\nՈրպեսզի նորից կարողանաք օգտագործել պլանշետը, պետք է կատարեք գործարանային վերակայում: Երբ կարգավորեք պլանշետը վերակայումից հետո, կկարողանաք վերականգնել /e/ հաշվում պահուստավորված տվյալները:"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Մուտքագրած գաղտնաբառը ճիշտ է, բայց ձեր տվյալները վնասված են: \n\nՈրպեսզի նորից կարողանաք օգտագործել հեռախոսը, պետք է կատարեք գործարանային վերակայում: Երբ կարգավորեք հեռախոսը վերակայումից հետո, կկարողանաք վերականգնել /e/ հաշվում պահուստավորված տվյալները:"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Փոխել ներածման եղանակը"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"Պաշտպանեք ձեր հեռախոսը"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"Կարգավորեք էկրանի կողպում՝ պլանշետը պաշտպանելու համար"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Սխալի պատճառով հնարավոր չէ վերակայել էլեկտրոնային SIM քարտերը:"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Ջնջել բոլոր տվյալները (գործարանային վերակայում)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Ջնջել բոլոր տվյալները (գործարանային վերակայում)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր Google հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Կջնջվեն բոլոր տվյալները ձեր սարքի "<b>"ներքին հիշողությունից"</b>", ներառյալ`\n\n"<li>"ձեր Google հաշիվը"</li>\n<li>"համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"ներբեռնված հավելվածները"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր /e/ հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Կջնջվեն բոլոր տվյալները ձեր սարքի "<b>"ներքին հիշողությունից"</b>", ներառյալ`\n\n"<li>"ձեր /e/ հաշիվը"</li>\n<li>"համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"ներբեռնված հավելվածները"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Հաշիվներն այս սարքում՝\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Այս սարքում այլ օգտատերերի հաշիվներ կան:\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Երաժշտություն"</li>\n<li>"Լուսանկարներ"</li>\n<li>"Օգտվողի այլ տվյալներ"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth սարքերի որոնում"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"Թույլ տալ հավելվածներին և ծառայություններին որոնել մոտակայքում գտնվող սարքեր ցանկացած ժամանակ, նույնիսկ եթե Bluetooth-ն անջատած է: Դա կարող է լավացնել տեղորոշում օգտագործող գործառույթներն ու ծառայությունները:"</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi‑Fi &amp; շարժական ցանցի տեղադրություն"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Թույլատրել ծրագրերին օգտագործել Google-ի տեղակայման ծառայությունները` ձեր տեղադրությունը ավելի արագ որոշելու համար: Անանուն տեղակայման տվյալները կհավաքագրվեն և կուղարկվեն Google-ին:"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Թույլատրել ծրագրերին օգտագործել /e/-ի տեղակայման ծառայությունները` ձեր տեղադրությունը ավելի արագ որոշելու համար: Անանուն տեղակայման տվյալները կհավաքագրվեն և կուղարկվեն /e/-ին:"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Տեղադրությունը որոշված է Wi‑Fi-ի օգնությամբ"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS արբանյակներ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Թույլատրել հավելվածին օգտագործել GPS-ը` ձեր տեղադրությունը պլանշետում ամրագրելու համար"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Օգատգործեք աջակցող GPS-ը"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Օգտագործեք սերվերը` GPS-ին միանալու համար (ապագնշեք` ցանցի օգտագործումը նվազեցնելու համար)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Օգտագործել սերվերը GPS աջակցման համար (ապընտրել` GPS-ի արդյունավետությունը բարելավելու համար)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Տեղադրություն &amp; Google որոնում"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Թույլատրել Google-ին օգտագործել ձեր տեղանքը` որոնողական արդյունքներն ու այլ ծառայությունները բարելավեու համար"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Տեղադրություն &amp; /e/ որոնում"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Թույլատրել /e/-ին օգտագործել ձեր տեղանքը` որոնողական արդյունքներն ու այլ ծառայությունները բարելավեու համար"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Մուտք դեպի իմ տեղադրություն"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Թույլատրել ձեր թույլտվությունը հայցող ծրագրերին օգտագործել ձեր տեղադրության տեղեկությունները"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Տեղադրության աղբյուրներ"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Պահուստավորել և վերականգնել"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Անձնական տվյալներ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Պահուստավորել իմ տվյալները"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Պահուստավորել հավելվածի տվյալները, Wi-Fi գաղտնաբառերը և Google սերվերների այլ կարգավորումները"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Պահուստավորել հավելվածի տվյալները, Wi-Fi գաղտնաբառերը և /e/ սերվերների այլ կարգավորումները"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Պահուստային հաշիվ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Ներառել ծրագրի տվյալները"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Ավտոմատ վերականգնում"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Պահուստավորման ծառայությունը ակտիվ չէ"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Պահուստավորված տվյալներով հաշիվ չկա ներկայումս"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Դադարեցնե՞լ ձեր Wi‑Fi գաղտնաբառերի, էջանիշերի, այլ կարգավորումների և հավելվածային տվյալների պահուստավորումն, ինչպես նաև ջնջե՞լ բոլոր կրկնօրինակները Google սերվերներից:"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Դադարեցնե՞լ ձեր Wi‑Fi գաղտնաբառերի, էջանիշերի, այլ կարգավորումների և հավելվածային տվյալների պահուստավորումն, ինչպես նաև ջնջե՞լ բոլոր կրկնօրինակները /e/ սերվերներից:"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Դադարեցնե՞լ սարքի տվյալների (Wi-Fi-ի գաղտնաբառեր, զանգերի պատմություն և այլն) և հավելվածների տվյալների (հավելվածների պահած կարգավորումներ, ֆայլեր և այլ) պահուստավորումը և ջնջել բոլոր պատճենները հեռակա սերվերների վրա:"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Սարքի տվյալների (Wi-Fi-ի գաղտնաբառեր և զանգերի պատմություն), ինչպես նաև հավելվածների տվյալների (հավելվածների պահած կարգավորումներ, ֆայլեր և այլն) ավտոմատ հեռակա պահուստավորում:\n\nԱվտոմատ պահուստավորումը միացնելիս՝ սարքի և հավելվածների տվյալները պարբերաբար պահվում են հեռակա կարգով: Հավելվածների տվյալները դա նրանց պահած տվյալներն են (կախված մշակողի կարգավորումներից): Դրանց թվում կարող են լինել նաև կոնտակտներ, հաղորդագրություններ, լուսանկարներ և այլ կոնֆիդենցիալ տվյալներ:"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Սարքի ադմինիստրատորի կարգավորումներ"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Օրացույց"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Կոնտակտներ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Բարի գալուստ Google Sync:"</font>" \nGoogle-ի համաժամացման տեխնոլոգիան թույլ է տալիս օգտագործել ձեր կոնտակտներից, հանդիպումները և այլ տվյալներ՝ ցանկացած սարքից:"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Բարի գալուստ /e/ Sync:"</font>" \n/e/-ի համաժամացման տեխնոլոգիան թույլ է տալիս օգտագործել ձեր կոնտակտներից, հանդիպումները և այլ տվյալներ՝ ցանկացած սարքից:"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Հավելվածի համաժամեցման կարգավորումներ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Ամսաթիվ &amp; համաժամեցում"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Փոխել գաղտնաբառը"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Այս հատկությունը կարող է պատճառ հանդիսանալ հետնաշերտի տվյալներից կախված ծրագրի աշխատանքի դադարեցմանը, երբ միայն շարժական ցանցեր են հասանելի:\n\nԴուք ծրագրի հասանելի կարգավորումների մեջ կարող եք գտնել ավելի համապատասխան տվյալների օգտագործման կառավարներ:"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Ֆոնային տվյալների սահմանափակումը հնարավոր է միայն բջջային ինտերնետի սահմանաչափ նշելու դեպքում։"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Միացնե՞լ ինքնահամաժամեցումը"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Համացանցում կատարած ցանկացած փոփոխություն ավտոմատ կպատճենվի ձեր պլանշետում:\n\nՈրոշ հաշիվներ կարող են պլանշետով կատարած փոփոխություններն ավտոմատ պատճենել համացանցում: Google հաշիվն աշխատում է հենց այդպես:"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Համացանցում կատարած ցանկացած փոփոխություն ավտոմատ կպատճենվի ձեր պլանշետում:\n\nՈրոշ հաշիվներ կարող են պլանշետով կատարած փոփոխություններն ավտոմատ պատճենել համացանցում: Google հաշիվն աշխատում է հենց այդպես:"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Համացանցում կատարած ցանկացած փոփոխություն ավտոմատ կպատճենվի ձեր պլանշետում:\n\nՈրոշ հաշիվներ կարող են պլանշետով կատարած փոփոխություններն ավտոմատ պատճենել համացանցում: /e/ հաշիվն աշխատում է հենց այդպես:"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Համացանցում կատարած ցանկացած փոփոխություն ավտոմատ կպատճենվի ձեր պլանշետում:\n\nՈրոշ հաշիվներ կարող են պլանշետով կատարած փոփոխություններն ավտոմատ պատճենել համացանցում: /e/ հաշիվն աշխատում է հենց այդպես:"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Անջատե՞լ ինքնահամաժամեցումը"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Դա կկրճատի թրաֆիկն ու մարտկոցի օգտագործման չափը, սակայն նոր տվյալներ ստանալու համար անհրաժեշտ կլինի ձեռքով համաժամեցնել յուրաքանչյուր հաշիվ։ Թարմացումների մասին ծանուցումներ չեն ցուցադրվի։"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Վիճակագրության վերակայում"</string>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(անջատված է <xliff:g id="USER">%s</xliff:g> օգտատիրոջ համար)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Ինքնալրացման ծառայություն"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ավտոմատ, լրացնել, ինքնալրացում"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Համոզվեք, որ վստահում եք այս հավելվածին&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt;-ն օգտագործում է էկրանի բովանդակությունը՝ որոշելու, թե ինչը կարող է ինքնալրացվել:"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Համոզվեք, որ վստահում եք այս հավելվածին&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt;-ն օգտագործում է էկրանի բովանդակությունը՝ որոշելու, թե ինչը կարող է ինքնալրացվել:"</string>
     <string name="color_theme" msgid="1535685696756738324">"Գունային թեմա"</string>
     <string name="default_theme" msgid="7085644992078579076">"Կանխադրված"</string>
     <string name="device_theme" msgid="4571803018917608588">"Սարքի թեման"</string>
