--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ຄຳ​ເຕືອນ: ອຸ​ປະ​ກອນ​ຂອງ​ທ່ານ​ຈະ​ຖືກ​ລຶບ​ຂໍ້​ມູນຫຼັງ​ຈາກ​ທີ່​ພະ​ຍາ​ຍາມ​ປົດ​ລັອກ​ລົ້ມ​ເຫລວ <xliff:g id="COUNT">^1</xliff:g> ເທື່ອ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ພິມລະຫັດຜ່ານຂອງທ່ານ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ການເຂົ້າລະຫັດບໍ່ສຳເລັດ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ການເຂົ້າລະຫັດຖືກລົບກວນ ແລະບໍ່ສາມາດເຮັດໃຫ້ສຳເລັດໄດ້ ສົ່ງຜົນໃຫ້ຂໍ້ມູນໃນແທັບເລັດຂອງທ່ານ ບໍ່ສາມາດເຂົ້າເຖິງໄດ້ອີກຕໍ່ໄປ. \n\n ເພື່ອສືບຕໍ່ນຳໃຊ້ແທັບເລັດຂອງທ່ານ, ທ່ານຕ້ອງດຳເນີນການຣີເຊັດຄ່າຈາກໂຮງງານ. ເມື່ອທ່ານຕັ້ງຄ່າແທັບເລັດຂອງທ່ານຫຼັງຈາກຣີເຊັດແລ້ວ, ທ່ານຈະສາມາດກູ້ຄືນຂໍ້ມູນໃດໆ ທີ່ເຄີຍໄດ້ສຳຮອງໄວ້ກັບບັນຊີ Google ຂອງທ່ານໄດ້."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ການເຂົ້າລະຫັດຖືກລົບກວນ ແລະບໍ່ສາມາດເຮັດໃຫ້ສຳເລັດໄດ້ ສົ່ງຜົນໃຫ້ຂໍ້ມູນໃນໂທລະສັບຂອງທ່ານ ບໍ່ສາມາດເຂົ້າເຖິງໄດ້ອີກຕໍ່ໄປ. \n\nເພື່ອສືບຕໍ່ນຳໃຊ້ແທັບເລັດຂອງທ່ານ, ທ່ານຕ້ອງດຳເນີນການຣີເຊັດຄ່າຈາກໂຮງງານ. ເມື່ອຮອດຂັ້ນຕອນການຕັ້ງຄ່າໂທລະສັບຂອງທ່ານ ຫຼັງຈາກການຣີເຊັດ, ທ່ານຈະສາມາດກູ້ຄືນຂໍ້ມູນໃດໆ ທີ່ເຄີຍໄດ້ສຳຮອງໄວ້ກັບບັນຊີ Google ຂອງທ່ານໄດ້."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ການເຂົ້າລະຫັດຖືກລົບກວນ ແລະບໍ່ສາມາດເຮັດໃຫ້ສຳເລັດໄດ້ ສົ່ງຜົນໃຫ້ຂໍ້ມູນໃນແທັບເລັດຂອງທ່ານ ບໍ່ສາມາດເຂົ້າເຖິງໄດ້ອີກຕໍ່ໄປ. \n\n ເພື່ອສືບຕໍ່ນຳໃຊ້ແທັບເລັດຂອງທ່ານ, ທ່ານຕ້ອງດຳເນີນການຣີເຊັດຄ່າຈາກໂຮງງານ. ເມື່ອທ່ານຕັ້ງຄ່າແທັບເລັດຂອງທ່ານຫຼັງຈາກຣີເຊັດແລ້ວ, ທ່ານຈະສາມາດກູ້ຄືນຂໍ້ມູນໃດໆ ທີ່ເຄີຍໄດ້ສຳຮອງໄວ້ກັບບັນຊີ /e/ ຂອງທ່ານໄດ້."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ການເຂົ້າລະຫັດຖືກລົບກວນ ແລະບໍ່ສາມາດເຮັດໃຫ້ສຳເລັດໄດ້ ສົ່ງຜົນໃຫ້ຂໍ້ມູນໃນໂທລະສັບຂອງທ່ານ ບໍ່ສາມາດເຂົ້າເຖິງໄດ້ອີກຕໍ່ໄປ. \n\nເພື່ອສືບຕໍ່ນຳໃຊ້ແທັບເລັດຂອງທ່ານ, ທ່ານຕ້ອງດຳເນີນການຣີເຊັດຄ່າຈາກໂຮງງານ. ເມື່ອຮອດຂັ້ນຕອນການຕັ້ງຄ່າໂທລະສັບຂອງທ່ານ ຫຼັງຈາກການຣີເຊັດ, ທ່ານຈະສາມາດກູ້ຄືນຂໍ້ມູນໃດໆ ທີ່ເຄີຍໄດ້ສຳຮອງໄວ້ກັບບັນຊີ /e/ ຂອງທ່ານໄດ້."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ການຖອດ​ລະຫັດ​ບໍ່ສຳ​ເລັດ​ຜົນ"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ລະຫັດ​ຜ່ານທີ່​ທ່ານໃສ່​ລົງໄປ​ນັ້ນຖືກ​ຕ້ອງແລ້ວ, ແຕ່ຂໍ້​ມູນ​ຂອງ​ທ່ານ​ເສຍ​ຫາຍ. \n\n1ເພື່ອ​ກັບໄປ​ນຳ​ໃຊ້​ແທັບເລັດ​ຂອງທ່ານ, ທ່ານຕ້ອງ​ຕັ້ງ​ຄ່າ​ແທັບເລັດ​ຂອງທ່ານ​ກັບໄປເປັນ​ຄ່າຈາກ​ໂຮງງານຄືນ. ເມື່ອ​ທ່ານ​ຕັ້ງຄ່າ​ແທັບເລັດ​ຂອງທ່ານ​ຫຼັງຈາກ​ການຕັ້ງ​ຄ່າ​ຄືນ, ທ່ານ​ຈະສາມາດ​ດຶງ​ຂໍ້ມູນ​ທີ່ທ່ານ​ສຳຮອງ​ໄວ້ໃນ​ບັນຊີ Google Account ຂອງທ່ານ​ຄືນມາໄດ້."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ລະຫັດ​ຜ່ານທີ່​ທ່ານໃສ່​ລົງໄປ​ນັ້ນຖືກ​ຕ້ອງແລ້ວ, ແຕ່ຂໍ້​ມູນ​ຂອງ​ທ່ານ​ເສຍ​ຫາຍ. \n\nເພື່ອ​ກັບໄປ​ນຳ​ໃຊ້​ໂທລະສັບ​ຂອງທ່ານ, ທ່ານຕ້ອງຕັ້ງ​ຄ່າ​ໂທລະສັບ​ຂອງທ່ານ​ກັບໄປເປັນ​ຄ່າຈາກ​ໂຮງງານຄືນ. ເມື່ອ​ທ່ານ​ຕັ້ງຄ່າ​ໂທລະສັບ​ຂອງທ່ານ​ຫຼັງຈາກ​ການ​ຕັ້ງ​ຄ່າ​ຄືນ, ທ່ານ​ຈະສາມາດ​ດຶງ​ຂໍ້ມູນ​ທີ່ທ່ານ​ສຳຮອງ​ໄວ້ໃນ​ບັນຊີ Google ຂອງທ່ານ​ຄືນມາໄດ້."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ລະຫັດ​ຜ່ານທີ່​ທ່ານໃສ່​ລົງໄປ​ນັ້ນຖືກ​ຕ້ອງແລ້ວ, ແຕ່ຂໍ້​ມູນ​ຂອງ​ທ່ານ​ເສຍ​ຫາຍ. \n\n1ເພື່ອ​ກັບໄປ​ນຳ​ໃຊ້​ແທັບເລັດ​ຂອງທ່ານ, ທ່ານຕ້ອງ​ຕັ້ງ​ຄ່າ​ແທັບເລັດ​ຂອງທ່ານ​ກັບໄປເປັນ​ຄ່າຈາກ​ໂຮງງານຄືນ. ເມື່ອ​ທ່ານ​ຕັ້ງຄ່າ​ແທັບເລັດ​ຂອງທ່ານ​ຫຼັງຈາກ​ການຕັ້ງ​ຄ່າ​ຄືນ, ທ່ານ​ຈະສາມາດ​ດຶງ​ຂໍ້ມູນ​ທີ່ທ່ານ​ສຳຮອງ​ໄວ້ໃນ​ບັນຊີ /e/ Account ຂອງທ່ານ​ຄືນມາໄດ້."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ລະຫັດ​ຜ່ານທີ່​ທ່ານໃສ່​ລົງໄປ​ນັ້ນຖືກ​ຕ້ອງແລ້ວ, ແຕ່ຂໍ້​ມູນ​ຂອງ​ທ່ານ​ເສຍ​ຫາຍ. \n\nເພື່ອ​ກັບໄປ​ນຳ​ໃຊ້​ໂທລະສັບ​ຂອງທ່ານ, ທ່ານຕ້ອງຕັ້ງ​ຄ່າ​ໂທລະສັບ​ຂອງທ່ານ​ກັບໄປເປັນ​ຄ່າຈາກ​ໂຮງງານຄືນ. ເມື່ອ​ທ່ານ​ຕັ້ງຄ່າ​ໂທລະສັບ​ຂອງທ່ານ​ຫຼັງຈາກ​ການ​ຕັ້ງ​ຄ່າ​ຄືນ, ທ່ານ​ຈະສາມາດ​ດຶງ​ຂໍ້ມູນ​ທີ່ທ່ານ​ສຳຮອງ​ໄວ້ໃນ​ບັນຊີ /e/ ຂອງທ່ານ​ຄືນມາໄດ້."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ສະລັບຮູບແບບການປ້ອນຂໍ້ມູນ"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"ຮັກສາຄວາມປອດໄພໂທລະສັບຂອງທ່ານ"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"ຕັ້ງໜ້າຈໍລັອກເພື່ອປົກປ້ອງແທັບເລັດຂອງທ່ານ"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"ບໍ່ສາມາດຣີເຊັດ eSIM ໄດ້ເນື່ອງຈາກເກີດຄວາມຜິດພາດ."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ລຶບຂໍ້ມູນທັງໝົດ (ຣີເຊັດເປັນຄ່າຈາກໂຮງງານ)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"ລຶບຂໍ້ມູນທັງໝົດ (ຣີເຊັດເປັນຄ່າຈາກໂຮງງານ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ນີ້ຈະເປັນການລຶບຂໍ້ມູນທັງໝົດຈາກ "<b>"ໜ່ວຍຄວາມຈຳພາຍໃນ"</b>" ຂອງແທັບເລັດທ່ານ, ຮວມເຖິງ:\n\n"<li>"ບັນຊີ Google ຂອງທ່ານ"</li>\n<li>"ຂໍ້ມູນລະບົບ ແລະແອັບພລິເຄຊັນ ແລະການຕັ້ງຄ່າ"</li>\n<li>"ແອັບຯທີ່ດາວໂຫລດມາ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ນີ້ຈະເປັນການລຶບຂໍ້ມູນທັງໝົດໃນ "<b>"ໜ່ວຍຄວາມຈຳພາຍໃນ"</b>" ຂອງໂທລະສັບທ່ານ ຮວມເຖິງ:\n\n"<li>"ບັນຊີ Google ຂອງທ່ານ"</li>\n<li>"ຂໍ້ມູນລະບົບ ແລະແອັບພລິເຄຊັນ ຮວມທັງການຕັ້ງຄ່າຕ່າງໆ"</li>\n<li>"ແອັບພລິເຄຊັນທີ່ດາວໂຫລດມາ"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ນີ້ຈະເປັນການລຶບຂໍ້ມູນທັງໝົດຈາກ "<b>"ໜ່ວຍຄວາມຈຳພາຍໃນ"</b>" ຂອງແທັບເລັດທ່ານ, ຮວມເຖິງ:\n\n"<li>"ບັນຊີ /e/ ຂອງທ່ານ"</li>\n<li>"ຂໍ້ມູນລະບົບ ແລະແອັບພລິເຄຊັນ ແລະການຕັ້ງຄ່າ"</li>\n<li>"ແອັບຯທີ່ດາວໂຫລດມາ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ນີ້ຈະເປັນການລຶບຂໍ້ມູນທັງໝົດໃນ "<b>"ໜ່ວຍຄວາມຈຳພາຍໃນ"</b>" ຂອງໂທລະສັບທ່ານ ຮວມເຖິງ:\n\n"<li>"ບັນຊີ /e/ ຂອງທ່ານ"</li>\n<li>"ຂໍ້ມູນລະບົບ ແລະແອັບພລິເຄຊັນ ຮວມທັງການຕັ້ງຄ່າຕ່າງໆ"</li>\n<li>"ແອັບພລິເຄຊັນທີ່ດາວໂຫລດມາ"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ປັດຈຸບັນທ່ານກຳລັງເຂົ້າສູ່ລະບົບບັນຊີຕໍ່ໄປນີ້:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ມີ​ຜູ້​ໃຊ້​ອື່ນ​ຢູ່​ເທິງ​ອຸ​ປະ​ກອນ​ນີ້.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ເພງ"</li>\n<li>"ຮູບພາບ"</li>\n<li>"ຂໍ້ມູນຜູ່ໃຊ້ອື່ນໆ"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ການ​ສະ​ແກນ Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"ອະນຸຍາດໃຫ້ແອັບ ແລະ ບໍລິການຕ່າງໆສະແກນຫາອຸປະກອນທີ່ຢູ່ໃກ້ຄຽງໄດ້ທຸກເວລາ, ເຖິງແມ່ນວ່າຈະປິດ Bluetooth ໄວ້ກໍຕາມ. ຄຸນສົມບັດນີ້ສາມາດໃຊ້ເພື່ອປັບປຸງຄຸນສົມບັດ ແລະ ບໍລິການທີ່ອ້າງອີງສະຖານທີ່ໄດ້."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi-Fi &amp; ສະຖານທີ່ເຄືອຂ່າຍມືຖື"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ໃຫ້ແອັບຯຕ່າງໆໃຊ້ບໍລິການສະຖານທີ່ຂອງ Google ເພື່ອປະເມີນສະຖານທີ່ຂອງທ່ານໄດ້ໄວຂຶ້ນ. ຂໍ້ມູນສະຖານທີ່ທີ່ບໍ່ລະບຸໂຕຕົນຈະຖືກເກັບກຳ ແລະສົ່ງໃຫ້ Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ໃຫ້ແອັບຯຕ່າງໆໃຊ້ບໍລິການສະຖານທີ່ຂອງ /e/ ເພື່ອປະເມີນສະຖານທີ່ຂອງທ່ານໄດ້ໄວຂຶ້ນ. ຂໍ້ມູນສະຖານທີ່ທີ່ບໍ່ລະບຸໂຕຕົນຈະຖືກເກັບກຳ ແລະສົ່ງໃຫ້ /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ສະຖານທີ່ທີ່ລະບຸໂດຍ Wi-Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"ດາວ​ທຽມ GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ໃຫ້ແອັບຯຕ່າງໆ ໃຊ້ GPS ໃນແທັບເລັດ ເພື່ອລະບຸຕຳແໜ່ງສະຖານທີ່ຂອງທ່ານໄດ້"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ໃຊ້ Assisted GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"ໃຊ້ເຊີບເວີເພື່ອຊ່ວຍຊອກຫາ GPS (ປິດເພື່ອຫຼຸດຜ່ອນການນຳໃຊ້ເຄືອຂ່າຍ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"ໃຊ້ເຊີບເວີເພື່ອຊ່ວຍລະບຸຕຳແໜ່ງ GPS (ບໍ່ເລືອກເພື່ອເຮັດໃຫ້ປະສິດທິພາບ GPS ດີຂຶ້ນ)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ສະຖານທີ່ &amp; Google search"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"ໃຫ້ Google ໃຊ້ທີ່ຢູ່ຂອງທ່ານເພື່ອປັບປຸງຜົນການຊອກຫາ ແລະບໍລິການອື່ນໆ"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ສະຖານທີ່ &amp; /e/ search"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"ໃຫ້ /e/ ໃຊ້ທີ່ຢູ່ຂອງທ່ານເພື່ອປັບປຸງຜົນການຊອກຫາ ແລະບໍລິການອື່ນໆ"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ການເຂົ້າເຖິງຕຳແໜ່ງຂອງຂ້ອຍ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ໃຫ້ແອັບຯທີ່ໄດ້ຂໍການອະນຸຍາດຈາກທ່ານແລ້ວ ສາມາດໃຊ້ຂໍ້ມູນສະຖານທີ່ຂອງທ່ານໄດ້"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ແຫລ່ງຂໍ້ມູນສະຖານທີ່"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ສຳຮອງຂໍ້ມູນ &amp; ດຶງຂໍ້ມູນຄືນ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ຂໍ້​ມູນ​ສ່ວນ​ໂຕ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ສຳຮອງຂໍ້ມູນຂອງຂ້ອຍ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"ສຳຮອງຂໍ້ມູນແອັບຯ, ລະຫັດຜ່ານ​ Wi-Fi ແລະການຕັ້ງຄ່າອື່ນໆ ໃສ່ເຊີບເວີຂອງ Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"ສຳຮອງຂໍ້ມູນແອັບຯ, ລະຫັດຜ່ານ​ Wi-Fi ແລະການຕັ້ງຄ່າອື່ນໆ ໃສ່ເຊີບເວີຂອງ /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ບັນຊີສຳຮອງ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"​ຮວມ​ຂໍ້​ມູນ​ແອັບຯ"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ການກູ້ຂໍ້ມູນອັດຕະໂນມັດ"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"ບໍລິການສຳຮອງຂໍ້ມູນບໍ່ເຮັດວຽກ"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ບໍ່ມີບັນຊີໃດໃນປັດຈຸບັນທີ່ຈັດເກັບຂໍ້ມູນສຳຮອງໄວ້"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ຢຸດການສຳຮອງຂໍ້ມູນລະຫັດຜ່ານ Wi-Fi, ບຸກມາກ, ການຕັ້ງຄ່າອື່ນໆ ແລະຂໍ້ມູນແອັບຯ ຂອງທ່ານ ຮວມທັງລຶບສຳເນົາທັງໝົດໃນເຊີບເວີຂອງ Google ບໍ່?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ຢຸດການສຳຮອງຂໍ້ມູນລະຫັດຜ່ານ Wi-Fi, ບຸກມາກ, ການຕັ້ງຄ່າອື່ນໆ ແລະຂໍ້ມູນແອັບຯ ຂອງທ່ານ ຮວມທັງລຶບສຳເນົາທັງໝົດໃນເຊີບເວີຂອງ /e/ ບໍ່?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ຢຸດ​ການ​ສຳ​ຮອງ​ຂໍ້​ມູນ​ອຸ​ປະ​ກອນ (ເຊັ່ນ ລະ​ຫັດ​ຜ່ານ Wi-Fi ແລະ​ປະ​ຫວັດ​ການ​ໂທ) ແລະ​ຂໍ້​ມູນ​ແອັບ (ເຊັ່ນ ການ​ຕັ້ງ​ຄ່າ ແລະ ໄຟ​ລ໌​ທີ່​ແອັບ​ເກັບ​ໄວ້), ບວກ​ໃສ່​ລຶບ​ທຸກ​ສຳ​ເນົາ​ຢູ່​ໃນເຊີບ​ເວີ​ທາງ​ໄກບໍ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ສຳ​ຮອງ​ຂໍ້​ມູນ​ອຸ​ປະ​ກອນໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ (ເຊັ່ນ ລະ​ຫັດ​ຜ່ານ Wi-Fi ແລະ​ປະ​ຫວັດ​ການ​ໂທ) ແລະ​ຂໍ້​ມູນ​ແອັບ (ເຊັ່ນ ການ​ຕັ້ງ​ຄ່າ ແລະ ໄຟ​ລ໌​ທີ່​ແອັບ​ເກັບ​ໄວ້) ໂດຍ​ທາງ​ໄກ.\n\nເມື່ອ​ທ່ານ​ເປີດ​ການ​ສຳ​ຮອງ​ອັດ​ຕະ​ໂນ​ມັດ, ຂໍ້​ມູນ​ອຸ​ປະ​ກອນ ແລະ​ແອັບຈະ​ຖືກ​ບັນ​ທຶກ​ເປັນ​ໄລ​ຍະ​ໂດຍ​ທາງ​ໄກ. ຂໍ້​ມູນ​ແອັບ​ສາ​ມາດ​ເປັນ​ຂໍ້​ມູນ​ໃດ​ໜຶ່ງ​ທີ່​ແອັບ​ບັນ​ທຶກ​ໄວ້ (ອີງ​ຕາມ​ການ​ຕັ້ງ​ຄ່າ​ຜູ້​ພັດ​ທະ​ນາ), ລວມ​ທັງ​ຂໍ້​ມູນ​ທີ່​ອາດ​ຈະ​ລະ​ອຽດ​ອ່ອນ​ເຊັ່ນ: ລາຍ​ຊື່, ຂໍ້​ຄວາມ, ແລະ​ຮູບ."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ການຕັ້ງຄ່າຜູ້ເບິ່ງແຍງລະບົບອຸປະກອນ"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ປະຕິທິນ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ລາຍຊື່ຜູ່ຕິດຕໍ່"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"ຍິນດີຕ້ອນຮັບສູ່ Google sync!"</font>" \nວິທີການຂອງ Google ໃນການຊິ້ງຂໍ້ມູນເພື່ອໃຫ້ທ່ານ ສາມາດເຂົ້າເຖິງລາຍຊື່ຜູ່ຕິດຕໍ່, ການນັດໝາຍ ແລະອື່ນໆຂອງທ່ານ ຈາກບ່ອນໃດກໍໄດ້."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"ຍິນດີຕ້ອນຮັບສູ່ /e/ sync!"</font>" \nວິທີການຂອງ /e/ ໃນການຊິ້ງຂໍ້ມູນເພື່ອໃຫ້ທ່ານ ສາມາດເຂົ້າເຖິງລາຍຊື່ຜູ່ຕິດຕໍ່, ການນັດໝາຍ ແລະອື່ນໆຂອງທ່ານ ຈາກບ່ອນໃດກໍໄດ້."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ການຕັ້ງຄ່າຊິ້ງຂໍ້ມູນແອັບຯ ອັດຕະໂນມັດ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ຂໍ້ມູນ &amp;amps; ການຊິ້ງຂໍ້ມູນ"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ປ່ຽນລະຫັດຜ່ານ"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"ຄຸນສົມບັດນີ້ອາດເຮັດໃຫ້ແອັບຯ ທີ່ຕ້ອງໃຊ້ຂໍ້ມູນພື້ນຫລັງຢຸດການເຮັດວຽກລົງ ໃນກໍລະນີທີ່ມີສະເພາະການເຊື່ອມຕໍ່ຂໍ້ມູນຜ່ານມືຖືຢູ່.\n\nທ່ານສາມາດຄວບຄຸມການນຳໃຊ້ຂໍ້ມູນໃຫ້ເໝາະສົມໄດ້ ໂດຍການໄປທີ່ເມນູການຕັ້ງຄ່າຢູ່ພາຍໃນແອັບຯນັ້ນໆ."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"ການຈຳກັດຂໍ້ມູນພື້ນຫຼັງຈະສາມາດເຮັດໄດ້ສະເພາະເມື່ອທ່ານໄດ້ຈຳກັດຂອບເຂດປະລິມານການໃຊ້ອິນເຕີເນັດມືຖືເທົ່ານັ້ນ."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ເປີດການຊິ້ງຂໍ້ມູນອັດຕະໂນມັດ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ການ​ປ່ຽນ​ແປງ​ໃດໆ​ທີ່​ທ່ານ​ສ້າງ​ໃຫ້​ກັບ​ບັນ​ຊີ​ຂອງ​ທ່ານ​ໃນ​ເວັບ​ໄຊ​ຈະ​ຖືກ​ສຳ​ເນົາ​ໄປ​ທີ່​ແທັບ​ເລັດ​ຂອງ​ທ່ານ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ.\n\nບາງ​ບັນ​ຊີ​ອາດ​ສຳ​ເນົາ​ການ​ປ່ຽນ​ແປງ​ທີ່​ທ່ານ​ສ້າງ​ໃນ​ແທັບ​ເລັດ​ໄປ​ໃສ່​ໃນ​ເວັບ​ໄຊ​ໃຫ້​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ. ນີ້​ເປັນ​ວິ​ທີ​ທີ່​ບັນ​ຊີ Google ເຮັດ​ວຽກ."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ການ​ປ່ຽນ​ແປງ​ໃດໆ​ທີ່​ທ່ານ​ສ້າງ​ໃຫ້​ກັບ​ບັນ​ຊີ​ຂອງ​ທ່ານ​ໃນ​ເວັບ​ໄຊ​ຈະ​ຖືກ​ສຳ​ເນົາ​ໄປ​ທີ່​ໂທ​ລະ​ສັບ​ຂອງ​ທ່ານ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ.\n\nບາງ​ບັນ​ຊີ​ອາດ​ສຳ​ເນົາ​ການ​ປ່ຽນ​ແປງ​ທີ່​ທ່ານ​ສ້າງ​ໃນ​ໂທ​ລະ​ສັບ​ໄປ​ໃສ່​ໃນ​ເວັບ​ໄຊ​ໃຫ້​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ. ນີ້​ເປັນ​ວິ​ທີ​ທີ່​ບັນ​ຊີ Google ເຮັດ​ວຽກ."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ການ​ປ່ຽນ​ແປງ​ໃດໆ​ທີ່​ທ່ານ​ສ້າງ​ໃຫ້​ກັບ​ບັນ​ຊີ​ຂອງ​ທ່ານ​ໃນ​ເວັບ​ໄຊ​ຈະ​ຖືກ​ສຳ​ເນົາ​ໄປ​ທີ່​ແທັບ​ເລັດ​ຂອງ​ທ່ານ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ.\n\nບາງ​ບັນ​ຊີ​ອາດ​ສຳ​ເນົາ​ການ​ປ່ຽນ​ແປງ​ທີ່​ທ່ານ​ສ້າງ​ໃນ​ແທັບ​ເລັດ​ໄປ​ໃສ່​ໃນ​ເວັບ​ໄຊ​ໃຫ້​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ. ນີ້​ເປັນ​ວິ​ທີ​ທີ່​ບັນ​ຊີ /e/ ເຮັດ​ວຽກ."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ການ​ປ່ຽນ​ແປງ​ໃດໆ​ທີ່​ທ່ານ​ສ້າງ​ໃຫ້​ກັບ​ບັນ​ຊີ​ຂອງ​ທ່ານ​ໃນ​ເວັບ​ໄຊ​ຈະ​ຖືກ​ສຳ​ເນົາ​ໄປ​ທີ່​ໂທ​ລະ​ສັບ​ຂອງ​ທ່ານ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ.\n\nບາງ​ບັນ​ຊີ​ອາດ​ສຳ​ເນົາ​ການ​ປ່ຽນ​ແປງ​ທີ່​ທ່ານ​ສ້າງ​ໃນ​ໂທ​ລະ​ສັບ​ໄປ​ໃສ່​ໃນ​ເວັບ​ໄຊ​ໃຫ້​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ. ນີ້​ເປັນ​ວິ​ທີ​ທີ່​ບັນ​ຊີ /e/ ເຮັດ​ວຽກ."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ປິດການຊິ້ງຂໍ້ມູນອັດຕະໂນມັດ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ນີ້ຈະເປັນການຖະໜອມການນຳໃຊ້ຂໍ້ມູນ ແລະແບັດເຕີຣີ ແຕ່ທ່ານຈະຕ້ອງໄດ້ຊິ້ງຂໍ້ມູນແຕ່ລະບັນຊີດ້ວຍຕົນເອງ ເພື່ອໃຫ້ເກັບກຳຂໍ້ມູນຫຼ້າສຸດ. ແລະທ່ານຈະບໍ່ໄດ້ຮັບການແຈ້ງເຕືອນ ເມື່ອມີການອັບເດດເກີດຂຶ້ນ."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ວັນທີຣີເຊັດຮອບ"</string>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(ຖຶືກປິດໄວ້ສຳລັບຜູ້ໃຊ້ <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ບໍລິການຕື່ມຂໍ້ມູນອັດຕະໂນມັດ"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ອັດຕະໂນມັດ, ຕື່ມຂໍ້ມູນ, ຕື່ມຂໍ້ມູນອັດຕະໂນມັດ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ໃຫ້ກວດສອບວ່າທ່ານເຊື່ອແອັບນີ້&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; ຈະໃຊ້ສິ່ງທີ່ຢູ່ໃນໜ້າຈໍຂອງທ່ານເພື່ອກວດເບິ່ງວ່າຈະຕື່ມຂໍ້ມູນຫຍັງອັດຕະໂນມັດ."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ໃຫ້ກວດສອບວ່າທ່ານເຊື່ອແອັບນີ້&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; ຈະໃຊ້ສິ່ງທີ່ຢູ່ໃນໜ້າຈໍຂອງທ່ານເພື່ອກວດເບິ່ງວ່າຈະຕື່ມຂໍ້ມູນຫຍັງອັດຕະໂນມັດ."</string>
     <string name="color_theme" msgid="1535685696756738324">"ສີສັນໜ້າຕາ"</string>
     <string name="default_theme" msgid="7085644992078579076">"ຄ່າເລີ່ມຕົ້ນ"</string>
     <string name="device_theme" msgid="4571803018917608588">"ຮູບແບບສີສັນອຸປະກອນ"</string>
