--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -486,11 +486,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ଚେତାବନୀ: ଅନ୍‌ଲକ୍‌ କରିବା ପାଇଁ <xliff:g id="COUNT">^1</xliff:g> ଟିରୁ ଅଧିକ ବିଫଳ ପ୍ରୟାସ ପରେ ଆପଣଙ୍କ ଡିଭାଇସ୍‌ରୁ ଡାଟା ଲିଭିଯିବ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ନିଜ ପାସ୍‌ୱର୍ଡ ଲେଖନ୍ତୁ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ଏନ୍‌କ୍ରିପ୍ସନ୍‌ ହୋଇପାରିଲା ନାହିଁ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ବାଧାପ୍ରାପ୍ତ ଯୋଗୁଁ ଏନକ୍ରିପସନ୍‌‌ ସମ୍ପୂର୍ଣ୍ଣ ହୋଇପାରିଲା ନାହିଁ। ଫଳସ୍ୱରୂପ, ଆପଣଙ୍କ ଟାବଲେଟ୍‌ରେ ଥିବା ଡାଟା ଆଉ ଆକସେସ୍‌ କରାଯାଇପାରିବ ନାହିଁ। \n\n ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କଲେ ହିଁ ଆପଣ ନିଜ ଟାବ୍‌ଲେଟ୍‌କୁ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ୍‌ କରିବା ପରେ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ସେଟ୍‌ଅପ୍‌ କରିବାବେଳେ Google ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଆଯାଇଥିବା ଆପଣଙ୍କର ଯେକୌଣସି ଡାଟାକୁ ଫେରାଇ ଆଣିହେବ।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ଏନ୍‌କ୍ରିପ୍ସନ୍‌ରେ ବାଧା ସୃଷ୍ଟି ଯୋଗୁଁ ସମ୍ପୂର୍ଣ୍ଣ ହୋଇପାରିଲା ନାହିଁ। ପରିଣାମସ୍ୱରୂପ, ଫୋନ୍‌ରେ ଥିବା ଡାଟାଗୁଡ଼ିକୁ ଆପଣ ଆଉ ଦେଖିପାରିବେ ନାହିଁ। \n\n ନିଜ ଫୋନ୍‌କୁ ପୁଣି ବ୍ୟବହାର କରିବା ପାଇଁ ଆପଣଙ୍କୁ ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କରିବାକୁ ପଡ଼ିବ। ରିଷ୍ଟାର୍ଟ ପରେ ଯେତେବେଳେ ଆପଣ ନିଜ ଫୋନ୍‌କୁ ସେଟ୍‌ କରିବେ, Google ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ଥିବା ଡାଟାଗୁଡ଼ିକୁ ଆପଣ ଫେରିପାଇବେ।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ବାଧାପ୍ରାପ୍ତ ଯୋଗୁଁ ଏନକ୍ରିପସନ୍‌‌ ସମ୍ପୂର୍ଣ୍ଣ ହୋଇପାରିଲା ନାହିଁ। ଫଳସ୍ୱରୂପ, ଆପଣଙ୍କ ଟାବଲେଟ୍‌ରେ ଥିବା ଡାଟା ଆଉ ଆକସେସ୍‌ କରାଯାଇପାରିବ ନାହିଁ। \n\n ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କଲେ ହିଁ ଆପଣ ନିଜ ଟାବ୍‌ଲେଟ୍‌କୁ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ୍‌ କରିବା ପରେ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ସେଟ୍‌ଅପ୍‌ କରିବାବେଳେ /e/ ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଆଯାଇଥିବା ଆପଣଙ୍କର ଯେକୌଣସି ଡାଟାକୁ ଫେରାଇ ଆଣିହେବ।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ଏନ୍‌କ୍ରିପ୍ସନ୍‌ରେ ବାଧା ସୃଷ୍ଟି ଯୋଗୁଁ ସମ୍ପୂର୍ଣ୍ଣ ହୋଇପାରିଲା ନାହିଁ। ପରିଣାମସ୍ୱରୂପ, ଫୋନ୍‌ରେ ଥିବା ଡାଟାଗୁଡ଼ିକୁ ଆପଣ ଆଉ ଦେଖିପାରିବେ ନାହିଁ। \n\n ନିଜ ଫୋନ୍‌କୁ ପୁଣି ବ୍ୟବହାର କରିବା ପାଇଁ ଆପଣଙ୍କୁ ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କରିବାକୁ ପଡ଼ିବ। ରିଷ୍ଟାର୍ଟ ପରେ ଯେତେବେଳେ ଆପଣ ନିଜ ଫୋନ୍‌କୁ ସେଟ୍‌ କରିବେ, /e/ ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ଥିବା ଡାଟାଗୁଡ଼ିକୁ ଆପଣ ଫେରିପାଇବେ।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ଡିକ୍ରିପ୍ସନ୍‌ ବିଫଳ ହୋଇଛି"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ଆପଣ ଠିକ୍ ପାସ୍‌ୱର୍ଡ ଲେଖିଛନ୍ତି, ହେଲେ ଆପଣଙ୍କର ଡାଟା ନଷ୍ଟ ହୋଇଯାଇଛି। \n\nଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କଲେ ହିଁ ଆପଣ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ୍‌ କରିବା ପରେ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ସେଟ୍‌ଅପ୍‌ କରିବାବେଳେ ଆପଣଙ୍କ Google ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଆଯାଇଥିବା ଯେକୌଣସି ଡାଟାକୁ ପୁଣି ଫେରାଇ ଆଣିବାର ସୁଯୋଗ ପାଇବେ।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ଆପଣ ଠିକ୍ ପାସୱର୍ଡ ପ୍ରବେଶ କରିଛନ୍ତି, ହେଲେ ଆପଣଙ୍କର ତଥ୍ୟ ନଷ୍ଟ ହୋଇଯାଇଛି। \n\nଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ କଲେ ହିଁ ଆପଣ ନିଜ ଫୋନ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ କରିବା ପରେ ନିଜ ଫୋନ ସେଟ କରିବାବେଳେ ଆପଣଙ୍କ Google ଆକାଉଣ୍ଟରେ ବ୍ୟାକଅପ ଥିବା ଯେକୌଣସି ତଥ୍ୟକୁ ପୁନଃପ୍ରାପ୍ତ କରିପାରିବେ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ଆପଣ ଠିକ୍ ପାସ୍‌ୱର୍ଡ ଲେଖିଛନ୍ତି, ହେଲେ ଆପଣଙ୍କର ଡାଟା ନଷ୍ଟ ହୋଇଯାଇଛି। \n\nଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌ କଲେ ହିଁ ଆପଣ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ୍‌ କରିବା ପରେ ନିଜ ଟାବ୍‌ଲେଟ୍‌ ସେଟ୍‌ଅପ୍‌ କରିବାବେଳେ ଆପଣଙ୍କ /e/ ଆକାଉଣ୍ଟରେ ବ୍ୟାକ୍‌ଅପ୍‌ ନିଆଯାଇଥିବା ଯେକୌଣସି ଡାଟାକୁ ପୁଣି ଫେରାଇ ଆଣିବାର ସୁଯୋଗ ପାଇବେ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ଆପଣ ଠିକ୍ ପାସୱର୍ଡ ପ୍ରବେଶ କରିଛନ୍ତି, ହେଲେ ଆପଣଙ୍କର ତଥ୍ୟ ନଷ୍ଟ ହୋଇଯାଇଛି। \n\nଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ କଲେ ହିଁ ଆପଣ ନିଜ ଫୋନ ପୁଣି ବ୍ୟବହାର କରିପାରିବେ। ରିସେଟ କରିବା ପରେ ନିଜ ଫୋନ ସେଟ କରିବାବେଳେ ଆପଣଙ୍କ /e/ ଆକାଉଣ୍ଟରେ ବ୍ୟାକଅପ ଥିବା ଯେକୌଣସି ତଥ୍ୟକୁ ପୁନଃପ୍ରାପ୍ତ କରିପାରିବେ।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ଇନ୍‌‌ପୁଟ୍‌ ପଦ୍ଧତି ବଦଳାନ୍ତୁ"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"ଆପଣଙ୍କ ଫୋନ୍‌କୁ ସୁରକ୍ଷିତ ରଖନ୍ତୁ"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"ଟାବଲେଟ୍‌ର ସୁରକ୍ଷା ପାଇଁ ସ୍କ୍ରୀନ୍‌ ଲକ୍‌ ସେଟ୍‌ କରନ୍ତୁ"</string>
@@ -1464,8 +1464,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"ଗୋଟିଏ ତ୍ରୁଟି କାରଣରୁ eSIMଗୁଡ଼ିକୁ ରିସେଟ୍ କରାଯାଇପାରିବ ନାହିଁ|"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ସମସ୍ତ ଡାଟା ଖାଲି କରିଦିଅନ୍ତୁ (ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"ସମସ୍ତ ଡାଟା ଖାଲି କରିଦିଅନ୍ତୁ (ଫ୍ୟାକ୍ଟୋରୀ ରିସେଟ୍‌)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ଏହା, ଆପଣଙ୍କ ଟାବଲେଟର "<b>"ଆଭ୍ୟନ୍ତର ଷ୍ଟୋରେଜରେ ଥିବା ସମସ୍ତ ଡାଟା"</b>", ଯେପରି:\n\n"<li>"ଆପଣଙ୍କ Google ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଏପ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନଲୋଡ ହୋଇଥିବା ଏପ୍ସକୁ ଖାଲି କରିଦେବ।"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ଏହା, ଆପଣଙ୍କ ଫୋନ୍‌‍ "<b>"ଇଣ୍ଟର୍ନଲ୍ ଷ୍ଟୋରେଜ୍‌"</b>"ରେ ଥିବା ସମସ୍ତ ଡାଟାକୁ ଖାଲି କରିଦେବ, ଯେପରି ଆପଣଙ୍କର:\n\n"<li>"Google ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଆପ୍‌ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନ୍‌ଲୋଡ୍‌ ହୋଇଥିବା ସମସ୍ତ ଆପ୍‌"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ଏହା, ଆପଣଙ୍କ ଟାବଲେଟର "<b>"ଆଭ୍ୟନ୍ତର ଷ୍ଟୋରେଜରେ ଥିବା ସମସ୍ତ ଡାଟା"</b>", ଯେପରି:\n\n"<li>"ଆପଣଙ୍କ /e/ ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଏପ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନଲୋଡ ହୋଇଥିବା ଏପ୍ସକୁ ଖାଲି କରିଦେବ।"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ଏହା, ଆପଣଙ୍କ ଫୋନ୍‌‍ "<b>"ଇଣ୍ଟର୍ନଲ୍ ଷ୍ଟୋରେଜ୍‌"</b>"ରେ ଥିବା ସମସ୍ତ ଡାଟାକୁ ଖାଲି କରିଦେବ, ଯେପରି ଆପଣଙ୍କର:\n\n"<li>"/e/ ଆକାଉଣ୍ଟ"</li>\n<li>"ସିଷ୍ଟମ ଓ ଆପ୍‌ ଡାଟା ଓ ସେଟିଙ୍ଗ"</li>\n<li>"ଡାଉନ୍‌ଲୋଡ୍‌ ହୋଇଥିବା ସମସ୍ତ ଆପ୍‌"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ଆପଣ ବର୍ତ୍ତମାନ ନିମ୍ନ ଆକାଉଣ୍ଟଗୁଡ଼ିକରେ ସାଇନ୍‌ ଇନ୍‌ କରିଛନ୍ତି:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ଏହି ଡିଭାଇସ୍‌ରେ ଅନ୍ୟ ଉପଯୋଗକର୍ତ୍ତାମାନେ ଅଛନ୍ତି।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ମ୍ୟୁଜିକ୍‌"</li>\n<li>"ଫଟୋ"</li>\n<li>"ଅନ୍ୟାନ୍ୟ ବ୍ୟବହାରକର୍ତ୍ତାଙ୍କ ଡାଟା"</li></string>
@@ -1542,7 +1542,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ବ୍ଲୁ-ଟୂଥ୍‍‌ ସ୍କାନିଙ୍ଗ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"ଆପ୍ ଓ ସେବାଗୁଡ଼ିକୁ ଯେକୌଣସି ସମୟରେ ଆଖପାଖରେ ଥିବା ଡିଭାଇସ୍‌ ଖୋଜିବାକୁ ଦିଅନ୍ତୁ, ଏପରିକି ବ୍ଲୁ-ଟୂଥ୍‍‌ ଅଫ୍‌ ଥିଲେ ମଧ୍ୟ। ଏହାକୁ ଲୋକେଶନ୍‌ ଆଧାରିତ ଫିଚର୍ ଓ ସେବା ଇତ୍ୟାଦିକୁ ଉନ୍ନତ କରିବା ପାଇଁ ବ୍ୟବହାର କରାଯାଇପାରେ।"</string>
     <string name="location_network_based" msgid="9134175479520582215">"ୱାଇ-ଫାଇ ଓ ମୋବାଇଲ୍‌ ନେଟ୍‌ୱର୍କ ଲୋକେଶନ୍‌"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ଆପଣଙ୍କର ଲୋକେଶନ୍‌କୁ ଶୀଘ୍ର ଜାଣିବା ପାଇଁ, ଆପ୍‌ଗୁଡ଼ିକୁ Googleର ଲୋକେଶନ୍‌ ସେବାର ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ। ଅଜଣା ଲୋକେଶନ୍‌ର ତଥ୍ୟ ସଂଗ୍ରହ କରାଯାଇ Googleକୁ ପଠାଯିବ।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ଆପଣଙ୍କର ଲୋକେଶନ୍‌କୁ ଶୀଘ୍ର ଜାଣିବା ପାଇଁ, ଆପ୍‌ଗୁଡ଼ିକୁ /e/ର ଲୋକେଶନ୍‌ ସେବାର ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ। ଅଜଣା ଲୋକେଶନ୍‌ର ତଥ୍ୟ ସଂଗ୍ରହ କରାଯାଇ /e/କୁ ପଠାଯିବ।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ୱାଇ-ଫାଇ ଦ୍ୱାରା ନିର୍ଦ୍ଧାରିତ ଲୋକେଶନ୍‌"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ସେଟଲାଇଟ୍‌ଗୁଡିକ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ଆପଣଙ୍କ ସଠିକ ଲୋକେଶନ୍‌ ଚିହ୍ନଟ କରିବାକୁ ଆପ୍‌ଗୁଡ଼ିକୁ ଆପଣଙ୍କ ଟାବ୍‌ଲେଟ୍‌ରେ GPS ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ"</string>
@@ -1550,8 +1550,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ସହାୟତା ପ୍ରାପ୍ତ GPS ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPSର ସହାୟତା ପାଇଁ ସର୍ଭର୍‌ ବ୍ୟବହାର କରନ୍ତୁ (ନେଟ୍‌ୱର୍କ ବ୍ୟବହାର କମ କରିବାକୁ \"ଠିକ୍‍ ଚିହ୍ନ\"କୁ ହଟାନ୍ତୁ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ସହାୟତା ପାଇଁ ସର୍ଭର୍‌ର ବ୍ୟବହାର କରନ୍ତୁ (GPS କାର୍ଯ୍ୟକ୍ଷମତା ଉନ୍ନତ କରିବା ପାଇଁ ଅନ୍‌ଚେକ୍‌ କରନ୍ତୁ)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ଲୋକେଶନ୍‌ ଓ Google ସର୍ଚ୍ଚ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"ସର୍ଚ ପରିଣାମ ଓ ଅନ୍ୟାନ୍ୟ ସେବାଗୁଡ଼ିକୁ ଉନ୍ନତ କରିବା ପାଇଁ Googleକୁ ଆପଣଙ୍କର ଲୋକେଶନ ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ।"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ଲୋକେଶନ୍‌ ଓ /e/ ସର୍ଚ୍ଚ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"ସର୍ଚ ପରିଣାମ ଓ ଅନ୍ୟାନ୍ୟ ସେବାଗୁଡ଼ିକୁ ଉନ୍ନତ କରିବା ପାଇଁ /e/କୁ ଆପଣଙ୍କର ଲୋକେଶନ ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ।"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ମୋ ଅବସ୍ଥାନକୁ ଆକ୍ସେସ୍‌"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ଆପଣଙ୍କ ଅନୁମତି ମାଗିଥିବା ଆପ୍‌ଗୁଡ଼ିକୁ ନିଜର ଲୋକେଶନ୍‍ ସୂଚନା ବ୍ୟବହାର କରିବାକୁ ଦିଅନ୍ତୁ"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ଲୋକେଶନ୍‌ ଉତ୍ସ"</string>
@@ -2444,7 +2444,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ବ୍ୟାକ୍‌ଅପ୍‌ ଓ ରିଷ୍ଟୋର୍‌"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ବ୍ୟକ୍ତିଗତ ଡାଟା"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ମୋ ଡାଟାର ବ୍ୟାକ୍‌ଅପ୍‌ ନିଅ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google ସର୍ଭର୍‌ରେ ଆପ୍‌ ଡାଟା ବ୍ୟାକ୍‌ଅପ୍‌, ୱାଇ-ଫାଇ ପାସ୍‌ୱର୍ଡ ଓ ଅନ୍ୟାନ୍ୟ ସେଟିଙ୍ଗଗୁଡ଼ିକ"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ ସର୍ଭର୍‌ରେ ଆପ୍‌ ଡାଟା ବ୍ୟାକ୍‌ଅପ୍‌, ୱାଇ-ଫାଇ ପାସ୍‌ୱର୍ଡ ଓ ଅନ୍ୟାନ୍ୟ ସେଟିଙ୍ଗଗୁଡ଼ିକ"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ବ୍ୟାକ-ଅପ ଆକାଉଣ୍ଟ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ଆପ୍‌ ଡାଟା ମିଶାନ୍ତୁ"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ସ୍ୱଚାଳିତ ରିଷ୍ଟୋର୍"</string>
@@ -2452,7 +2452,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"ବ୍ୟାକ୍‌ଅପ୍‌ ସେବା ସକ୍ରିୟ ନାହିଁ"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ବ୍ୟାକ୍‌ଅପ୍‌ କରାଯାଇଥିବା ଡାଟାକୁ ଏବେ କୌଣସି ଆକାଉଣ୍ଟ ଷ୍ଟୋର୍‌ କରୁନାହିଁ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ଆପଣଙ୍କ ୱାଇ-ଫାଇ ପାସ୍‌ୱର୍ଡ, ବୁକ୍‌ମାର୍କ, ଅନ୍ୟାନ୍ୟ ସେଟିଙ୍ଗଗୁଡ଼ିକ ତଥା ଆପ୍‌ ଡାଟା ବ୍ୟାକ୍‌‌ଅପ୍‌ ନେବା ବନ୍ଦ କରି Google ସର୍ଭର୍‌ରୁ ସମସ୍ତ କପୀଗୁଡ଼ିକ ଲିଭାଇବେ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ଆପଣଙ୍କ ୱାଇ-ଫାଇ ପାସ୍‌ୱର୍ଡ, ବୁକ୍‌ମାର୍କ, ଅନ୍ୟାନ୍ୟ ସେଟିଙ୍ଗଗୁଡ଼ିକ ତଥା ଆପ୍‌ ଡାଟା ବ୍ୟାକ୍‌‌ଅପ୍‌ ନେବା ବନ୍ଦ କରି /e/ ସର୍ଭର୍‌ରୁ ସମସ୍ତ କପୀଗୁଡ଼ିକ ଲିଭାଇବେ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ଡିଭାଇସ୍‌ ଡାଟା (ଯେପରି ୱାଇ-ଫାଇ ପାସ୍‌ୱର୍ଡ ଓ କଲ୍‌ ଇତିହାସ) ଓ ଆପ୍‌ ଡାଟା (ଯେପରି ଆପ୍‌ଗୁଡ଼ିକ ଦ୍ୱାରା ଷ୍ଟୋର୍‌ କରାଯାଇଥିବା ସେଟିଙ୍ଗ ଓ ଫାଇଲ୍‌ଗୁଡ଼ିକ)ର ବ୍ୟାକ୍‌ଅପ୍‌ ବନ୍ଦ କରି ରିମୋଟ୍‌ ସର୍ଭର୍‌ରୁ ସମସ୍ତ ନକଲ ଉଡ଼ାଇଦେବେ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ଦୂରରୁ ଡିଭାଇସ୍‌ ଡାଟା (ଯେପରିକି ୱାଇ-ଫାଇ ପାସ୍‌ୱାର୍ଡ‌ ଏବଂ କଲ୍‌ର ଇତିବୃତି) ଏବଂ ଆପ୍‌ ଡାଟା (ଯେପରିକି ସେଟିଙ୍ଗ ଏବଂ ଆପ୍‌ ଦ୍ୱାରା ଷ୍ଟୋର୍‌ କରାଯାଇଥିବା ଫାଇଲ୍‌ଗୁଡ଼ିକ) ନିଜକୁ ନିଜ ବ୍ୟାକ୍‌ ଅପ୍‌ ନିଅନ୍ତୁ।\n\n ନିଜକୁ ନିଜ ବ୍ୟାକ୍‌ଅପ୍‌ ଆପଣ ଚାଲୁ କରିବା ବେଳେ, ଡିଭାଇସ୍‌ ଏବଂ ଆପ୍‌ ଡାଟା ସମୟାନୁକ୍ରମେ ଦୂରରୁ ସେଭ୍ କରାଯାଇଥାଏ। ଆପ୍‌ ଡାଟା, ସମ୍ବେଦନଶୀଳ ଡାଟା ଯେପରିକି ସମ୍ପର୍କ, ବାର୍ତ୍ତା କିମ୍ବା ଫଟୋଗୁଡ଼ିକ ଅନ୍ତର୍ଭୂକ୍ତ କରି, ଯେକୌଣସି ଡାଟା ହୋଇପାରେ ଯାହା ଏକ ଆପ୍‌ ସଞ୍ଚୟ କରିଥାଏ (ଡେଭଲପର୍‌ ସେଟିଙ୍ଗକୁ ଆଧାର କରି)।"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ଡିଭାଇସ୍‌ ପ୍ରଶାସକ ସେଟିଙ୍ଗ"</string>
@@ -2539,7 +2539,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"କ୍ୟାଲେଣ୍ଡର୍"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ସମ୍ପର୍କ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ସିଙ୍କକୁ ସ୍ୱାଗତ!"</font>" \nଆପଣ ଯେଉଁଠି ବି ଥାଆନ୍ତୁ ନାଁ କାହିଁକି ଆପଣଙ୍କ ସମ୍ପର୍କ, ଆପଏଣ୍ଟମେଣ୍ଟ ଏବଂ ଆହୁରି ଅନେକ କିଛିକୁ ଆକସେସ୍‌ ଅନୁମତି ଦେବା ପାଇଁ ଡାଟା ସିଙ୍କ କରିବାକୁ Google ର ଏକ ପ୍ରୟାସ।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ସିଙ୍କକୁ ସ୍ୱାଗତ!"</font>" \nଆପଣ ଯେଉଁଠି ବି ଥାଆନ୍ତୁ ନାଁ କାହିଁକି ଆପଣଙ୍କ ସମ୍ପର୍କ, ଆପଏଣ୍ଟମେଣ୍ଟ ଏବଂ ଆହୁରି ଅନେକ କିଛିକୁ ଆକସେସ୍‌ ଅନୁମତି ଦେବା ପାଇଁ ଡାଟା ସିଙ୍କ କରିବାକୁ /e/ ର ଏକ ପ୍ରୟାସ।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ଆପ୍‌ ସିଙ୍କ ସେଟିଙ୍ଗ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ତାରିଖ ଓ ସିଙ୍କ୍ରୋନାଇଜେଶନ୍‌"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ପାସ୍‌ୱର୍ଡ ବଦଳାନ୍ତୁ"</string>
@@ -4086,7 +4086,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(ବ୍ୟବହାରକର୍ତ୍ତା <xliff:g id="USER">%s</xliff:g>ଙ୍କ ପାଇଁ ଅକ୍ଷମ କରାଯାଇଛି)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ସ୍ୱତଃପୂରଣ ସେବା"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ଅଟୋ, ଫିଲ, ଅଟୋଫିଲ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ଆପଣ ଏହି ଆପ୍‌କୁ ବିଶ୍ୱାସ କରୁଥିବା ନିଶ୍ଚିତ କରନ୍ତୁ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; କ\'ଣ ଅଟୋଫିଲ୍‌ କରାଯାଇପାରିବ ନିର୍ଦ୍ଧାରଣ କରିବା ପାଇଁ, Google Autofill ଆପଣଙ୍କ ସ୍କ୍ରୀନ୍‌ରେ ଯାହା ଥାଏ, ତାହା ବ୍ୟବହାର କରେ।"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ଆପଣ ଏହି ଆପ୍‌କୁ ବିଶ୍ୱାସ କରୁଥିବା ନିଶ୍ଚିତ କରନ୍ତୁ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; କ\'ଣ ଅଟୋଫିଲ୍‌ କରାଯାଇପାରିବ ନିର୍ଦ୍ଧାରଣ କରିବା ପାଇଁ, /e/ Autofill ଆପଣଙ୍କ ସ୍କ୍ରୀନ୍‌ରେ ଯାହା ଥାଏ, ତାହା ବ୍ୟବହାର କରେ।"</string>
     <string name="color_theme" msgid="1535685696756738324">"ରଙ୍ଗ ଥିମ୍"</string>
     <string name="default_theme" msgid="7085644992078579076">"ପ୍ରାକ୍‌-ନିର୍ଦ୍ଧାରିତ"</string>
     <string name="device_theme" msgid="4571803018917608588">"ଡିଭାଇସ୍‌ ଥିମ୍‌"</string>
