--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ਚਿਤਾਵਨੀ: ਅਣਲਾਕ ਕੀਤੇ ਜਾਣ ਲਈ <xliff:g id="COUNT">^1</xliff:g> ਤੋਂ ਵੱਧ ਅਸਫਲ ਕੋਸ਼ਿਸ਼ਾਂ ਤੋਂ ਬਾਅਦ ਤੁਹਾਡਾ ਡੀਵਾਈਸ ਮਿਟਾ ਦਿੱਤਾ ਜਾਏਗਾ!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"ਆਪਣਾ ਪਾਸਵਰਡ ਟਾਈਪ ਕਰੋ"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਅਸਫਲ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਤੇ ਡਾਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\n ਆਪਣਾ ਟੈਬਲੈੱਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈੱਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਫ਼ੋਨ ਤੇ ਡਾਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\nਆਪਣਾ ਫ਼ੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਫ਼ੋਨ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਤੇ ਡਾਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\n ਆਪਣਾ ਟੈਬਲੈੱਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈੱਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ਇਨਕ੍ਰਿਪਸ਼ਨ ਰੋਕਿਆ ਗਿਆ ਸੀ ਅਤੇ ਪੂਰਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ। ਸਿੱਟੇ ਵਜੋਂ, ਤੁਹਾਡੇ ਫ਼ੋਨ ਤੇ ਡਾਟਾ ਹੁਣ ਪਹੁੰਚਯੋਗ ਨਹੀਂ ਹੈ। \n\nਆਪਣਾ ਫ਼ੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣਾ ਫ਼ੋਨ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ਡੀਕ੍ਰਿਪਸ਼ਨ ਅਸਫਲ"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡਾਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣੀ ਟੈਬਲੈੱਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡਾਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣਾ ਫ਼ੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ Google ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡਾਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣੀ ਟੈਬਲੈੱਟ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ਤੁਹਾਡੇ ਵੱਲੋਂ ਦਰਜ ਕੀਤਾ ਪਾਸਵਰਡ ਸਹੀ ਹੈ, ਪਰੰਤੂ ਅਫ਼ਸੋਸ ਨਾਲ ਡਾਟਾ ਕਰਪਟ ਹੈ। \n\nਆਪਣਾ ਫ਼ੋਨ ਵਰਤਣਾ ਦੁਬਾਰਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਤੁਹਾਨੂੰ ਇੱਕ ਫੈਕਟਰੀ ਰੀਸੈੱਟ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਜਦੋਂ ਤੁਸੀਂ ਰੀਸੈੱਟ ਤੋਂ ਬਾਅਦ ਆਪਣੀ ਟੈਬਲੈੱਟ ਸੈੱਟ ਅੱਪ ਕਰਦੇ ਹੋ, ਤਾਂ ਤੁਹਾਡੇ ਕੋਲ ਉਹ ਕੋਈ ਵੀ ਡਾਟਾ ਰੀਸਟੋਰ ਕਰਨ ਦਾ ਮੌਕਾ ਹੁੰਦਾ ਹੈ, ਜੋ ਤੁਹਾਡੇ /e/ ਖਾਤੇ ਨਾਲ ਬੈਕ ਅੱਪ ਕੀਤਾ ਗਿਆ ਸੀ।"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ਇਨਪੁੱਟ ਵਿਧੀ ਸਵਿੱਚ ਕਰੋ"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"ਆਪਣਾ ਫ਼ੋਨ ਸੁਰੱਖਿਅਤ ਕਰੋ"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"ਟੈਬਲੈੱਟ ਦੀ ਸੁਰੱਖਿਆ ਲਈ ਸਕ੍ਰੀਨ ਲਾਕ ਸੈੱਟ ਕਰੋ"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"ਕੋਈ ਗੜਬੜ ਹੋਣ ਕਰਕੇ ਈ-ਸਿਮ ਰੀਸੈੱਟ ਨਹੀਂ ਕੀਤੇ ਜਾ ਸਕਦੇ।"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"ਸਾਰਾ ਡਾਟਾ ਮਿਟਾਓ (ਫੈਕਟਰੀ ਰੀਸੈੱਟ)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"ਸਭ ਡਾਟਾ ਮਿਟਾਓ (ਫੈਕਟਰੀ ਰੀਸੈੱਟ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ਇਹ ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡਾਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ Google ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡਾਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੀਆਂ ਐਪਾਂ"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ਇਹ ਤੁਹਾਡੇ ਫ਼ੋਨ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡਾਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ Google ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡਾਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੀਆਂ ਐਪਾਂ"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ਇਹ ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡਾਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ /e/ ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡਾਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੀਆਂ ਐਪਾਂ"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ਇਹ ਤੁਹਾਡੇ ਫ਼ੋਨ ਦੀ "<b>"ਅੰਦਰੂਨੀ ਸਟੋਰੇਜ"</b>" ਦਾ ਸਾਰਾ ਡਾਟਾ ਮਿਟਾ ਦੇਵੇਗਾ, ਜਿਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੈ:\n\n"<li>"ਤੁਹਾਡਾ /e/ ਖਾਤਾ"</li>\n<li>"ਸਿਸਟਮ ਅਤੇ ਐਪ ਡਾਟਾ ਅਤੇ ਸੈਟਿੰਗਾਂ"</li>\n<li>"ਡਾਊਨਲੋਡ ਕੀਤੀਆਂ ਐਪਾਂ"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ਤੁਸੀਂ ਇਸ ਵੇਲੇ ਇਹਨਾਂ ਖਾਤਿਆਂ \'ਤੇ ਸਾਈਨ-ਇਨ ਹੋ:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ਇਸ ਡੀਵਾਈਸ ਤੇ ਹੋਰ ਵਰਤੋਂਕਾਰ ਮੌਜੂਦ ਨਹੀਂ ਹਨ।\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ਸੰਗੀਤ"</li>\n<li>"ਫੋਟੋਆਂ"</li>\n<li>"ਹੋਰ ਵਰਤੋਂਕਾਰ ਡਾਟਾ"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ਬਲੂਟੁੱਥ ਸਕੈਨਿੰਗ"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"ਬਲੁਟੂੱਥ ਬੰਦ ਹੋਣ \'ਤੇ ਵੀ ਐਪਾਂ ਅਤੇ ਸੇਵਾਵਾਂ ਨੂੰ ਕਿਸੇ ਵੀ ਵੇਲੇ ਨਜ਼ਦੀਕੀ ਡੀਵਾਈਸਾਂ ਲਈ ਸਕੈਨ ਕਰਨ ਦਿਓ। ਇਸਦੀ ਵਰਤੋਂ ਕਰਕੇ ਟਿਕਾਣਾ-ਆਧਾਰਿਤ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਅਤੇ ਸੇਵਾਵਾਂ ਵਰਗੀਆਂ ਚੀਜ਼ਾਂ ਨੂੰ ਬਿਹਤਰ ਬਣਾਇਆ ਜਾ ਸਕਦਾ ਹੈ।"</string>
     <string name="location_network_based" msgid="9134175479520582215">"ਵਾਈ‑ਫਾਈ &amp; ਮੋਬਾਈਲ ਨੈੱਟਵਰਕ ਟਿਕਾਣਾ"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ਐਪਸ ਨੂੰ ਤੁਹਾਡੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਦਾ ਤੇਜ਼ ਅਨੁਮਾਨ ਲਗਾਉਣ ਲਈ Google ਦੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਸੇਵਾ ਵਰਤਣ ਦਿਓ। ਅਨਾਮ ਨਿਰਧਾਰਿਤ ਸਥਾਨ  ਡਾਟਾ  ਇਕੱਤਰ ਕੀਤਾ ਜਾਏਗਾ ਅਤੇ Google ਨੂੰ ਭੇਜਿਆ ਜਾਏਗਾ।"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ਐਪਸ ਨੂੰ ਤੁਹਾਡੇ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਦਾ ਤੇਜ਼ ਅਨੁਮਾਨ ਲਗਾਉਣ ਲਈ /e/ ਦੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਸੇਵਾ ਵਰਤਣ ਦਿਓ। ਅਨਾਮ ਨਿਰਧਾਰਿਤ ਸਥਾਨ  ਡਾਟਾ  ਇਕੱਤਰ ਕੀਤਾ ਜਾਏਗਾ ਅਤੇ /e/ ਨੂੰ ਭੇਜਿਆ ਜਾਏਗਾ।"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ਵਾਈ‑ਫਾਈ ਵੱਲੋਂ ਪਤਾ ਲਗਾਇਆ ਟਿਕਾਣਾ"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ਸੈਟੇਲਾਈਟਸ"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ਆਪਣੇ ਟਿਕਾਣੇ ਨੂੰ ਸੁਨਿਸ਼ਚਿਤ ਕਰਨ ਲਈ ਐਪਾਂ ਨੂੰ ਆਪਣੇ ਟੈਬਲੈੱਟ ਤੇ GPS ਵਰਤਣ ਦਿਓ"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ਸਹਾਇਤ ਪ੍ਰਾਪਤ GPS ਵਰਤੋ"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ਦੀ ਸਹਾਇਤਾ ਲਈ ਸਰਵਰ ਵਰਤੋ (ਨੈੱਟਵਰਕ ਵਰਤੋਂ ਘੱਟ ਕਰਨ ਲਈ ਨਿਸ਼ਾਨ ਹਟਾਓ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ਦੀ ਸਹਾਇਤਾ ਲਈ ਸਰਵਰ ਵਰਤੋ (GPS ਪ੍ਰਦਰਸ਼ਨ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਨਿਸ਼ਾਨ ਹਟਾਓ)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ਟਿਕਾਣਾ &amp; Google ਖੋਜ"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google ਨੂੰ ਖੋਜ ਨਤੀਜਿਆਂ ਅਤੇ ਹੋਰ ਸੇਵਾਵਾਂ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਤੁਹਾਡਾ ਟਿਕਾਣਾ ਵਰਤਣ ਦਿਓ"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ਟਿਕਾਣਾ &amp; /e/ ਖੋਜ"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ ਨੂੰ ਖੋਜ ਨਤੀਜਿਆਂ ਅਤੇ ਹੋਰ ਸੇਵਾਵਾਂ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਤੁਹਾਡਾ ਟਿਕਾਣਾ ਵਰਤਣ ਦਿਓ"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ਮੇਰੇ ਟਿਕਾਣਾ ਤੱਕ ਪਹੁੰਚ ਪ੍ਰਾਪਤ ਕਰੋ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ਜਿਹਨਾਂ ਐਪਸ ਨੇ ਤੁਹਾਡੀ ਅਨੁਮਤੀ ਮੰਗੀ ਹੈ, ਉਹਨਾਂ ਨੂੰ ਆਪਣੀ ਨਿਰਧਾਰਿਤ ਸਥਾਨ ਜਾਣਕਾਰੀ ਵਰਤਣ ਦਿਓ"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ਨਿਰਧਾਰਿਤ ਸਰੋਤ"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"ਬੈਕਅੱਪ &amp; ਰੀਸਟੋਰ ਕਰੋ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ਨਿੱਜੀ  ਡਾਟਾ"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"ਮੇਰਾ ਡਾਟਾ ਬੈਕ ਅੱਪ ਲਓ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google ਸਰਵਰਾਂ ਤੇ ਐਪ ਡਾਟਾ, Wi‑Fi ਪਾਸਵਰਡਾਂ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਬੈਕ ਅੱਪ ਲਓ"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ ਸਰਵਰਾਂ ਤੇ ਐਪ ਡਾਟਾ, Wi‑Fi ਪਾਸਵਰਡਾਂ ਅਤੇ ਹੋਰ ਸੈਟਿੰਗਾਂ ਬੈਕ ਅੱਪ ਲਓ"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ਬੈਕਅੱਪ ਖਾਤਾ"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"ਐਪ  ਡਾਟਾ  ਸ਼ਾਮਲ ਕਰੋ"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ਆਟੋਮੈਟਿਕ ਰੀਸਟੋਰ ਕਰੋ"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"ਬੈਕਅੱਪ ਸੇਵਾ ਕਿਰਿਆਸ਼ੀਲ ਨਹੀਂ"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ਵਰਤਮਾਨ ਤੌਰ \'ਤੇ ਕੋਈ ਖਾਤਾ ਉਸ ਡਾਟਾ ਨੂੰ ਸਟੋਰ ਨਹੀਂ ਕਰ ਰਿਹਾ ਹੈ, ਜਿਸ ਦਾ ਬੈਕਅੱਪ ਲਿਆ ਗਿਆ ਹੈ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ਆਪਣੇ ਵਾਈ-ਫਾਈ ਪਾਸਵਰਡਾਂ, ਬੁੱਕਮਾਰਕਾਂ, ਹੋਰ ਸੈਟਿੰਗਾਂ ਅਤੇ ਐਪ ਡਾਟਾ ਨੂੰ ਬੈਕ ਅੱਪ ਕਰਨਾ ਬੰਦ ਕਰਨਾ ਹੈ ਅਤੇ Google ਸਰਵਰਾਂ ਦੀਆਂ ਸਾਰੀਆਂ ਕਾਪੀਆਂ ਮਿਟਾਉਣੀਆਂ ਹਨ?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"ਆਪਣੇ ਵਾਈ-ਫਾਈ ਪਾਸਵਰਡਾਂ, ਬੁੱਕਮਾਰਕਾਂ, ਹੋਰ ਸੈਟਿੰਗਾਂ ਅਤੇ ਐਪ ਡਾਟਾ ਨੂੰ ਬੈਕ ਅੱਪ ਕਰਨਾ ਬੰਦ ਕਰਨਾ ਹੈ ਅਤੇ /e/ ਸਰਵਰਾਂ ਦੀਆਂ ਸਾਰੀਆਂ ਕਾਪੀਆਂ ਮਿਟਾਉਣੀਆਂ ਹਨ?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"ਕੀ ਡੀਵਾਈਸ ਡਾਟਾ (ਜਿਵੇਂ ਕਿ ਵਾਈ-ਫਾਈ ਪਾਸਵਰਡ ਅਤੇ ਕਾਲ ਇਤਿਹਾਸ) ਅਤੇ ਐਪ ਡਾਟਾ (ਜਿਵੇਂ ਕਿ ਐਪਾਂ ਦਾ ਸਟੋਰ ਕੀਤੀ ਸੈਟਿੰਗਾਂ ਅਤੇ ਫ਼ਾਈਲਾਂ) ਦੇ ਬੈੱਕਅੱਪ ਤੋਂ ਰੋਕਣਾ ਹੈ, ਅਤੇ ਇਸਦੇ ਨਾਲ-ਨਾਲ ਰਿਮੋਟ ਸਰਵਰ \'ਤੇ ਸਾਰੀਆਂ ਪ੍ਰਤੀਲਿਪੀਆਂ ਨੂੰ ਮਿਟਾਉਣਾ ਹੈ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"ਡੀਵਾਈਸ ਡਾਟਾ ਰਿਮੋਟ ਦੇ ਰੂਪ ਵਿੱਚ (ਜਿਵੇਂ ਕਿ ਵਾਈ-ਫਾਈ ਪਾਸਵਰਡ ਅਤੇ ਕਾਲ ਇਤਿਹਾਸ) ਅਤੇ ਐਪ ਡਾਟਾ (ਜਿਵੇਂ ਕਿ ਐਪਾਂ ਵੱਲੋਂ ਸਟੋਰ ਕੀਤੀਆਂ ਸੈਟਿੰਗਾਂ ਅਤੇ ਫ਼ਾਈਲਾਂ) ਦਾ ਸਵੈਚਲਿਤ ਬੈੱਕਅੱਪ ਲਓ।\n\nਜਦੋਂ ਤੁਸੀਂ ਸਵੈਚਲਿਤ ਬੈਕਅੱਪ ਨੂੰ ਚਾਲੂ ਕਰਦੇ ਹੋ, ਤਾਂ ਡੀਵਾਈਸ ਅਤੇ ਐਪ ਡਾਟਾ ਨੂੰ ਰਿਮੋਟ ਦੇ ਰੂਪ ਵਿੱਚ ਅਵਧੀ ਅਨੁਸਾਰ ਰੱਖਿਅਤ ਕੀਤਾ ਜਾਂਦਾ ਹੈ। ਐਪ ਡਾਟਾ ਕੋਈ ਵੀ ਡਾਟਾ ਹੋ ਸਕਦਾ ਹੈ ਜੋ ਸੰਪਰਕ, ਸੁਨੇਹੇ, ਅਤੇ ਫ਼ੋਟੋਆਂ ਵਰਗੇ ਸੰਭਾਵੀ ਸੰਵੇਦਨਸ਼ੀਲ ਡਾਟਾ ਸਮੇਤ, ਕਿਸੇ ਐਪ ਨੇ ਰੱਖਿਅਤ ਕੀਤਾ ਹੁੰਦਾ ਹੈ (ਵਿਕਾਸਕਾਰ ਸੈਟਿੰਗਾਂ ਦੇ ਅਧਾਰ \'ਤੇ)।"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ਡੀਵਾਈਸ ਪ੍ਰਸ਼ਾਸਕ ਸੈਟਿੰਗਾਂ"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ਕੈਲੰਡਰ"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ਸੰਪਰਕ"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google ਸਿੰਕ ਤੇ ਤੁਹਾਡਾ ਸੁਆਗਤ ਹੈ!"</font>" \nਤੁਸੀਂ ਜਿੱਥੇ ਵੀ ਹੋਵੋ, ਉੱਥੋਂ ਤੁਹਾਡੇ ਸੰਪਰਕਾਂ, ਮੁਲਾਕਾਤਾਂ ਆਦਿ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦੇਣ ਲਈ ਡਾਟਾ ਸਿੰਕ ਕਰਨ ਲਈ ਇੱਕ Google ਪਹੁੰਚ।"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ ਸਿੰਕ ਤੇ ਤੁਹਾਡਾ ਸੁਆਗਤ ਹੈ!"</font>" \nਤੁਸੀਂ ਜਿੱਥੇ ਵੀ ਹੋਵੋ, ਉੱਥੋਂ ਤੁਹਾਡੇ ਸੰਪਰਕਾਂ, ਮੁਲਾਕਾਤਾਂ ਆਦਿ ਤੱਕ ਪਹੁੰਚ ਦੀ ਆਗਿਆ ਦੇਣ ਲਈ ਡਾਟਾ ਸਿੰਕ ਕਰਨ ਲਈ ਇੱਕ /e/ ਪਹੁੰਚ।"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"ਐਪ ਸਿੰਕ ਸੈਟਿੰਗਾਂ"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">" ਡਾਟਾ  &amp; ਸਿੰਕ੍ਰੋਨਾਈਜ਼ੇਸ਼ਨ"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ਪਾਸਵਰਡ ਬਦਲੋ"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"ਇਹ ਵਿਸ਼ੇਸ਼ਤਾ ਇੱਕ ਅਜਿਹੇ ਐਪ ਦਾ ਕਾਰਨ ਬਣ ਸਕਦੀ ਹੈ ਜੋ ਕੰਮ ਕਰਨਾ ਬੰਦ ਕਰਨ ਲਈ ਬੈਕਗ੍ਰਾਊਂਡ ਡਾਟਾ ਤੇ ਨਿਰਭਰ ਹੈ, ਕੇਵਲ ਉਦੋਂ ਜਦੋਂ ਮੋਬਾਈਲ ਨੈੱਟਵਰਕ ਉਪਲਬਧ ਹੋਣ।\n\nਤੁਸੀਂ ਐਪ ਵਿੱਚ ਉਪਲਬਧ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਹੋਰ ਉਚਿਤ ਡਾਟਾ ਵਰਤੋਂ ਨਿਯੰਤਰਣ ਲੱਭ ਸਕਦੇ ਹੋ।"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"ਬੈਕਗ੍ਰਾਊਂਡ ਡਾਟੇ \'ਤੇ ਪਾਬੰਦੀ ਲਗਾਉਣਾ ਸਿਰਫ਼ ਉਦੋਂ ਸੰਭਵ ਹੈ ਜਦੋਂ ਤੁਸੀਂ ਇੱਕ ਮੋਬਾਈਲ ਡਾਟਾ ਸੀਮਾ ਸੈੱਟ ਕੀਤੀ ਹੋਵੇ।"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"ਕੀ ਆਟੋ-ਸਿੰਕ  ਡਾਟਾ  ਚਾਲੂ ਕਰਨਾ ਹੈ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ਵੈੱਬ ਤੇ ਤੁਹਾਡੇ ਖਾਤਿਆਂ ਵਿੱਚ ਕੀਤੇ ਗਏ ਕੋਈ ਵੀ ਬਦਲਾਅ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਹੀ ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਉਹ ਬਦਲਾਅ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਟੈਬਲੈੱਟ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ Google ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਤੁਹਾਡੇ ਫ਼ੋਨ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਫ਼ੋਨ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ Google ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ਵੈੱਬ ਤੇ ਤੁਹਾਡੇ ਖਾਤਿਆਂ ਵਿੱਚ ਕੀਤੇ ਗਏ ਕੋਈ ਵੀ ਬਦਲਾਅ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਹੀ ਤੁਹਾਡੇ ਟੈਬਲੈੱਟ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਉਹ ਬਦਲਾਅ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਟੈਬਲੈੱਟ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ /e/ ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਖਾਤਿਆਂ ਵਿੱਚ ਜੋ ਕੋਈ ਵੀ ਬਦਲਾਵ ਕਰਦੇ ਹੋ, ਉਹ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਤੁਹਾਡੇ ਫ਼ੋਨ ਤੇ ਕਾਪੀ ਕੀਤੇ ਜਾਣਗੇ।\n\nਕੁਝ ਖਾਤੇ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਉਹ ਬਦਲਾਵ ਕਾਪੀ ਕਰ ਸਕਦੇ ਹਨ ਜੋ ਤੁਸੀਂ ਵੈੱਬ ਤੇ ਆਪਣੇ ਫ਼ੋਨ ਵਿੱਚ ਕਰਦੇ ਹੋ। ਇੱਕ /e/ ਖਾਤਾ ਇਸ ਤਰ੍ਹਾਂ ਕੰਮ ਕਰਦਾ ਹੈ।"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"ਡਾਟੇ ਦਾ ਸਵੈ-ਸਮਕਾਲੀਕਰਨ ਬੰਦ ਕਰੀਏ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ਇਹ ਡਾਟਾ ਅਤੇ ਬੈਟਰੀ ਦੀ ਬੱਚਤ ਕਰੇਗਾ, ਪਰ ਹਾਲੀਆ ਜਾਣਕਾਰੀ ਇਕੱਤਰ ਕਰਨ ਲਈ ਤੁਹਾਨੂੰ ਹਰੇਕ ਖਾਤੇ ਦਾ ਹੱਥੀਂ ਸਮਕਾਲੀਕਰਨ ਕਰਨਾ ਪਵੇਗਾ। ਇਸਤੋਂ ਇਲਾਵਾ ਜਦੋਂ ਅੱਪਡੇਟ ਹੁੰਦੇ ਹਨ ਤਾਂ ਤੁਸੀਂ ਸੂਚਨਾਵਾਂ ਪ੍ਰਾਪਤ ਨਹੀਂ ਕਰੋਗੇ।"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"ਵਰਤੋਂ ਚੱਕਰ ਰੀਸੈੱਟ ਤਾਰੀਖ"</string>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(ਵਰਤੋਂਕਾਰ <xliff:g id="USER">%s</xliff:g> ਲਈ ਅਯੋਗ ਬਣਾਈ)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ਆਟੋਫਿਲ ਸੇਵਾ"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ਆਟੋ, ਫਿਲ, ਆਟੋਫਿਲ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ਪੱਕਾ ਕਰੋ ਕਿ ਤੁਸੀਂ ਇਸ ਐਪ \'ਤੇ ਭਰੋਸਾ ਕਰਦੇ ਹੋ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; ਆਪਣੇ-ਆਪ ਭਰੀਆਂ ਜਾ ਸਕਣ ਵਾਲੀਆਂ ਚੀਜ਼ਾਂ ਦਾ ਪਤਾ ਲਗਾਉਣ ਲਈ ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ \'ਤੇ ਮੌਜੂਦ ਚੀਜ਼ਾਂ ਦੀ ਵਰਤੋਂ ਕਰਦਾ ਹੈ।"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ਪੱਕਾ ਕਰੋ ਕਿ ਤੁਸੀਂ ਇਸ ਐਪ \'ਤੇ ਭਰੋਸਾ ਕਰਦੇ ਹੋ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; ਆਪਣੇ-ਆਪ ਭਰੀਆਂ ਜਾ ਸਕਣ ਵਾਲੀਆਂ ਚੀਜ਼ਾਂ ਦਾ ਪਤਾ ਲਗਾਉਣ ਲਈ ਤੁਹਾਡੀ ਸਕ੍ਰੀਨ \'ਤੇ ਮੌਜੂਦ ਚੀਜ਼ਾਂ ਦੀ ਵਰਤੋਂ ਕਰਦਾ ਹੈ।"</string>
     <string name="color_theme" msgid="1535685696756738324">"ਰੰਗ ਥੀਮ"</string>
     <string name="default_theme" msgid="7085644992078579076">"ਪੂਰਵ-ਨਿਰਧਾਰਤ"</string>
     <string name="device_theme" msgid="4571803018917608588">"ਡੀਵਾਈਸ ਥੀਮ"</string>
