--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"హెచ్చరిక: మీరు అన్‌లాక్ చేయడానికి చేసే ప్రయత్నాల్లో మరో <xliff:g id="COUNT">^1</xliff:g> సార్లు విఫలమైతే మీ పరికరం తొలగించబడుతుంది!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"మీ పాస్‌వర్డ్‌ను టైప్ చేయండి"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"ఎన్‌క్రిప్షన్ విఫలమైంది"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"గుప్తీకరణకు అంతరాయం ఏర్పడింది మరియు పూర్తి చేయడం సాధ్యం కాదు. దీని ఫలితంగా, మీ టాబ్లెట్‌లోని డేటాకు ఇకపై యాక్సెస్ ఉండదు. \n\n మీ టాబ్లెట్‌ను ఉపయోగించడాన్ని పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాల్సి ఉంటుంది. మీరు రీసెట్ తర్వాత మీ టాబ్లెట్‌ను సెటప్ చేసేటప్పుడు, మీరు మీ Google ఖాతాకు బ్యాకప్ చేయబడిన ఏదైనా డేటాను పునరుద్ధరించడానికి మీకు అవకాశం ఉంటుంది."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ఎన్‌క్రిప్షన్ ఆటంకపరచబడింది అందువల్ల పూర్తి చేయడం సాధ్యం కాదు. ఫలితంగా, మీ ఫోన్‌లోని డేటాకు ఇకపై యాక్సెస్ ఉండదు. \n\nమీ ఫోన్‌ను ఉపయోగించడాన్ని పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాల్సి ఉంటుంది. మీరు రీసెట్ తర్వాత మీ ఫోన్‌ను సెటప్ చేసేటప్పుడు, మీ Google ఖాతాకు బ్యాకప్ చేయబడిన ఏదైనా డేటాను పునరుద్ధరించడానికి మీకు అవకాశం ఉంటుంది."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"గుప్తీకరణకు అంతరాయం ఏర్పడింది మరియు పూర్తి చేయడం సాధ్యం కాదు. దీని ఫలితంగా, మీ టాబ్లెట్‌లోని డేటాకు ఇకపై యాక్సెస్ ఉండదు. \n\n మీ టాబ్లెట్‌ను ఉపయోగించడాన్ని పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాల్సి ఉంటుంది. మీరు రీసెట్ తర్వాత మీ టాబ్లెట్‌ను సెటప్ చేసేటప్పుడు, మీరు మీ /e/ ఖాతాకు బ్యాకప్ చేయబడిన ఏదైనా డేటాను పునరుద్ధరించడానికి మీకు అవకాశం ఉంటుంది."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ఎన్‌క్రిప్షన్ ఆటంకపరచబడింది అందువల్ల పూర్తి చేయడం సాధ్యం కాదు. ఫలితంగా, మీ ఫోన్‌లోని డేటాకు ఇకపై యాక్సెస్ ఉండదు. \n\nమీ ఫోన్‌ను ఉపయోగించడాన్ని పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాల్సి ఉంటుంది. మీరు రీసెట్ తర్వాత మీ ఫోన్‌ను సెటప్ చేసేటప్పుడు, మీ /e/ ఖాతాకు బ్యాకప్ చేయబడిన ఏదైనా డేటాను పునరుద్ధరించడానికి మీకు అవకాశం ఉంటుంది."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"డిక్రిప్షన్ విజయవంతం కాలేదు"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"మీరు నమోదు చేసిన పాస్‌వర్డ్ సరైనది, కానీ దురదృష్టవశాత్తూ మీ డేటా పాడైంది. \n\nమీ టాబ్లెట్‌ను ఉపయోగించడం పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాలి. మీరు రీసెట్ చేసిన తర్వాత మీ టాబ్లెట్‌ను సెటప్ చేసినప్పుడు, మీ Google ఖాతాకు బ్యాకప్ చేసిన ఏదైనా డేటాను పునరుద్ధరించుకునే అవకాశం మీకు అందించబడుతుంది."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"మీరు నమోదు చేసిన పాస్‌వర్డ్ సరైనది, కానీ దురదృష్టవశాత్తూ మీ డేటా పాడైంది. \n\nమీ ఫోన్‌ను ఉపయోగించడం పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాలి. మీరు రీసెట్ చేసిన తర్వాత మీ ఫోన్‌ను సెటప్ చేసినప్పుడు, మీ Google ఖాతాకు బ్యాకప్ చేసిన ఏదైనా డేటాను పునరుద్ధరించుకునే అవకాశం మీకు అందించబడుతుంది."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"మీరు నమోదు చేసిన పాస్‌వర్డ్ సరైనది, కానీ దురదృష్టవశాత్తూ మీ డేటా పాడైంది. \n\nమీ టాబ్లెట్‌ను ఉపయోగించడం పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాలి. మీరు రీసెట్ చేసిన తర్వాత మీ టాబ్లెట్‌ను సెటప్ చేసినప్పుడు, మీ /e/ ఖాతాకు బ్యాకప్ చేసిన ఏదైనా డేటాను పునరుద్ధరించుకునే అవకాశం మీకు అందించబడుతుంది."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"మీరు నమోదు చేసిన పాస్‌వర్డ్ సరైనది, కానీ దురదృష్టవశాత్తూ మీ డేటా పాడైంది. \n\nమీ ఫోన్‌ను ఉపయోగించడం పునఃప్రారంభించడానికి, మీరు ఫ్యాక్టరీ రీసెట్‌ను అమలు చేయాలి. మీరు రీసెట్ చేసిన తర్వాత మీ ఫోన్‌ను సెటప్ చేసినప్పుడు, మీ /e/ ఖాతాకు బ్యాకప్ చేసిన ఏదైనా డేటాను పునరుద్ధరించుకునే అవకాశం మీకు అందించబడుతుంది."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ఇన్‌పుట్ పద్ధతిని మార్చు"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"మీ ఫోన్‌ను సురక్షితం చేయండి"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"టాబ్లెట్‌ను రక్షించడానికి స్క్రీన్ లాక్‌ను సెట్ చేయండి"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"ఎర్రర్ కారణంగా eSIMలను రీసెట్ చేయడం సాధ్యం కాదు."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"మొత్తం డేటాను తొలగించండి (ఫ్యాక్టరీ రీసెట్)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"మొత్తం డేటాను తొలగించండి (ఫ్యాక్టరీ రీసెట్)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ఇందువలన మీ టాబ్లెట్ యొక్క "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా, మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"మీ Google ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ఇందువలన మీ ఫోన్ "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"Google ఖాతా"</li>\n<li>"సిస్టమ్ మరియు యాప్ డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన యాప్‌లు"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ఇందువలన మీ టాబ్లెట్ యొక్క "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా, మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"మీ /e/ ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ఇందువలన మీ ఫోన్ "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"/e/ ఖాతా"</li>\n<li>"సిస్టమ్ మరియు యాప్ డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన యాప్‌లు"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"మీరు ప్రస్తుతం క్రింది ఖాతాలకు సైన్ ఇన్ చేసారు:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ఈ పరికరంలో ఇతర వినియోగదారులు ఉన్నారు.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"సంగీతం"</li>\n<li>"ఫోటోలు"</li>\n<li>"ఇతర వినియోగదారు డేటా"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"బ్లూటూత్ స్కానింగ్"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"బ్లూటూత్ ఆఫ్‌లో ఉన్నప్పుడు కూడా, ఏ సమయంలోనైనా సమీపంలోని పరికరాలను స్కాన్ చేయడానికి యాప్‌లను మరియు సేవలను అనుమతించండి. ఉదాహరణకు, ఇది స్థాన ఆధారిత ఫీచర్‌లు మరియు సేవలను మెరుగుపరచడానికి ఉపయోగించబడుతుంది."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi‑Fi &amp; మొబైల్ నెట్‌వర్క్ స్థానం"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"మీ స్థానాన్ని వేగవంతంగా అంచనా వేయడం కోసం Google స్థాన సేవను ఉపయోగించడానికి అనువర్తనాలను అనుమతించండి. అనామక స్థాన డేటా సేకరించబడుతుంది మరియు Googleకు పంపబడుతుంది."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"మీ స్థానాన్ని వేగవంతంగా అంచనా వేయడం కోసం /e/ స్థాన సేవను ఉపయోగించడానికి అనువర్తనాలను అనుమతించండి. అనామక స్థాన డేటా సేకరించబడుతుంది మరియు /e/కు పంపబడుతుంది."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"స్థానం Wi‑Fi ద్వారా గుర్తించబడింది"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS ఉపగ్రహాలు"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"మీ స్థానాన్ని ఖచ్చితంగా గుర్తించడం కోసం మీ టాబ్లెట్‌లో GPSను ఉపయోగించడానికి అనువర్తనాలను అనుమతించు"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"సహాయక GPSను ఉపయోగించు"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPSకి సహాయంగా సర్వర్‌ను ఉపయోగించు (నెట్‌వర్క్ వినియోగాన్ని తగ్గించడానికి ఎంపిక తీసియండి)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPSకి సహాయంగా సర్వర్‌ను ఉపయోగించు (GPS పనితీరుని మెరుగుపరచడానికి ఎంపిక తీసియండి)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"స్థానం &amp; Google శోధన"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"శోధన ఫలితాలు మరియు ఇతర సేవలను మెరుగుపరచడం కోసం మీ స్థానాన్ని ఉపయోగించడానికి Googleని అనుమతించండి"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"స్థానం &amp; /e/ శోధన"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"శోధన ఫలితాలు మరియు ఇతర సేవలను మెరుగుపరచడం కోసం మీ స్థానాన్ని ఉపయోగించడానికి /e/ని అనుమతించండి"</string>
     <string name="location_access_title" msgid="7064108942964081243">"నా స్థానానికి యాక్సెస్"</string>
     <string name="location_access_summary" msgid="69031404093194341">"మీ స్థాన సమాచారాన్ని ఉపయోగించడానికి మీ అనుమతిని అడిగిన అనువర్తనాలను అనుమతించండి"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"స్థానం మూలాలు"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"బ్యాకప్ &amp; పునరుద్ధరణ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"వ్యక్తిగత డేటా"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"నా డేటాను బ్యాకప్ చేయి"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"అనువర్తన డేటా, Wi‑Fi పాస్‌వర్డ్‌లు మరియు ఇతర సెట్టింగ్‌లను Google సర్వర్‌లకు బ్యాకప్ చేయండి"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"అనువర్తన డేటా, Wi‑Fi పాస్‌వర్డ్‌లు మరియు ఇతర సెట్టింగ్‌లను /e/ సర్వర్‌లకు బ్యాకప్ చేయండి"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"ఖాతాను బ్యాకప్ చేయి"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"అనువర్తన డేటాను చేర్చు"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"స్వీయ పునరుద్ధరణ"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"బ్యాకప్ సేవను సక్రియం చేయలేదు"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"ప్రస్తుతం ఏ ఖాతా బ్యాకప్ చేయబడిన డేటాను నిల్వ చేయడం లేదు"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Google సర్వర్‌ల్లో మీ Wi‑Fi పాస్‌వర్డ్‌లు, బుక్‌మార్క్‌లు, ఇతర సెట్టింగ్‌లు మరియు అనువర్తన డేటాను బ్యాకప్ చేయడాన్ని ఆపివేయడంతో పాటు అదనంగా అన్ని కాపీలను ఎరేజ్ చేయాలా?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"/e/ సర్వర్‌ల్లో మీ Wi‑Fi పాస్‌వర్డ్‌లు, బుక్‌మార్క్‌లు, ఇతర సెట్టింగ్‌లు మరియు అనువర్తన డేటాను బ్యాకప్ చేయడాన్ని ఆపివేయడంతో పాటు అదనంగా అన్ని కాపీలను ఎరేజ్ చేయాలా?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"పరికర డేటా (Wi-Fi పాస్‌వర్డ్‌లు మరియు కాల్ చరిత్ర వంటివి) మరియు అనువర్తన డేటాను (సెట్టింగ్‌లు మరియు అనువర్తనాల ద్వారా నిల్వ చేయబడిన ఫైల్‌లు వంటివి) బ్యాకప్ చేయడం ఆపివేసి, రిమోట్ సర్వర్‌ల్లోని అన్ని కాపీలను తీసివేయాలా?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"డివైజ్ డేటా (Wi-Fi పాస్‌వర్డ్‌లు మరియు కాల్ చరిత్ర వంటివి) మరియు యాప్ డేటాను (సెట్టింగ్‌లు మరియు యాప్‌ల ద్వారా నిల్వ చేయబడిన ఫైల్‌లు వంటివి) స్వయంచాలకంగా రిమోట్ విధానంలో బ్యాకప్ చేస్తుంది.\n\nమీరు స్వీయ బ్యాకప్‌ను ఆన్ చేసినప్పుడు, డివైజ్ మరియు యాప్ డేటా కాలానుగుణంగా రిమోట్ విధానంలో సేవ్ చేయబడుతుంది. డివైజ్‌లు, సందేశాలు మరియు ఫోటోల వంటి సున్నితమైన వ్యక్తిగత డేటాతో సహా యాప్ సేవ్ చేసిన (డెవలపర్ సెట్టింగ్‌ల ఆధారంగా) ఎలాంటి డేటా అయినా యాప్ డేటాగా పరిగణించబడుతుంది."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"పరికర నిర్వాహకుల సెట్టింగ్‌లు"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"క్యాలెండర్"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"పరిచయాలు"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google సమకాలీకరణకు స్వాగతం!"</font>" \nమీరు ఎక్కడ ఉన్నా సరే మీ పరిచయాలు, నియామకాలు మరియు మరిన్నింటికి ప్రాప్యతను అనుమతించడం కోసం డేటాను సమకాలీకరించడానికి Google అవలంబించే విధానం."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ సమకాలీకరణకు స్వాగతం!"</font>" \nమీరు ఎక్కడ ఉన్నా సరే మీ పరిచయాలు, నియామకాలు మరియు మరిన్నింటికి ప్రాప్యతను అనుమతించడం కోసం డేటాను సమకాలీకరించడానికి /e/ అవలంబించే విధానం."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"అనువర్తన సమకాలీకరణ సెట్టింగ్‌లు"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"డేటా &amp; సమకాలీకరణ"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"పాస్‌వర్డ్‌ని మార్చండి"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"ఈ లక్షణం మొబైల్ నెట్‌వర్క్‌లు మాత్రమే అందుబాటులో ఉన్నప్పుడు నేపథ్య డేటాపై ఆధారపడే అనువర్తనాన్ని పని చేయనీయకుండా ఆపివేయవచ్చు.\n\nమీరు అనువర్తనంలోనే అందుబాటులో ఉన్న సెట్టింగ్‌ల్లో మరిన్ని సముచితమైన డేటా వినియోగ నియంత్రణలను కనుగొనవచ్చు."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"మీరు మొబైల్ డేటా పరిమితిని సెట్ చేసినప్పుడు మాత్రమే నేపథ్య డేటాను పరిమితం చేయడం సాధ్యపడుతుంది."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"స్వీయ-సమకాలీకరణ డేటాను ప్రారంభించాలా?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"వెబ్‌లో మీ ఖాతాలకు ఏవైనా మార్పులు చేస్తే అవి స్వయంచాలకంగా మీ టాబ్లెట్‌కి కాపీ చేయబడతాయి.\n\nకొన్ని ఖాతాలు మీరు టాబ్లెట్‌లో ఏవైనా మార్పులు చేస్తే కూడా వాటిని స్వయంచాలకంగా వెబ్‌కి కాపీ చేస్తాయి. Google ఖాతా ఈ విధంగానే పనిచేస్తుంది."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"వెబ్‌లో మీ ఖాతాలకు మీరు ఏవైనా మార్పులు చేస్తే అవి స్వయంచాలకంగా మీ ఫోన్‌కి కాపీ చేయబడతాయి.\n\nకొన్ని ఖాతాలు మీరు ఫోన్‌లో ఏవైనా మార్పులు చేస్తే కూడా స్వయంచాలకంగా వాటిని వెబ్‌కి కాపీ చేస్తాయి. Google ఖాతా ఈ విధంగానే పనిచేస్తుంది."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"వెబ్‌లో మీ ఖాతాలకు ఏవైనా మార్పులు చేస్తే అవి స్వయంచాలకంగా మీ టాబ్లెట్‌కి కాపీ చేయబడతాయి.\n\nకొన్ని ఖాతాలు మీరు టాబ్లెట్‌లో ఏవైనా మార్పులు చేస్తే కూడా వాటిని స్వయంచాలకంగా వెబ్‌కి కాపీ చేస్తాయి. /e/ ఖాతా ఈ విధంగానే పనిచేస్తుంది."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"వెబ్‌లో మీ ఖాతాలకు మీరు ఏవైనా మార్పులు చేస్తే అవి స్వయంచాలకంగా మీ ఫోన్‌కి కాపీ చేయబడతాయి.\n\nకొన్ని ఖాతాలు మీరు ఫోన్‌లో ఏవైనా మార్పులు చేస్తే కూడా స్వయంచాలకంగా వాటిని వెబ్‌కి కాపీ చేస్తాయి. /e/ ఖాతా ఈ విధంగానే పనిచేస్తుంది."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"స్వీయ-సమకాలీకరణ డేటాను ఆఫ్ చేయాలా?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"ఇది డేటా మరియు బ్యాటరీ వినియోగాన్ని ఆదా చేస్తుంది, కానీ మీరు ఇటీవలి సమాచారాన్ని సేకరించడానికి మాన్యువల్‌గా ప్రతి ఖాతాను సమకాలీకరించాల్సి ఉంటుంది. అలాగే మీరు అప్‌డేట్‌లు జరిగినప్పుడు నోటిఫికేషన్‌లను స్వీకరించరు."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"వినియోగ సైకిల్ రీసెట్ తేదీ"</string>
@@ -4085,7 +4085,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(<xliff:g id="USER">%s</xliff:g>కు నిలిపివేయబడింది)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"ఆటోఫిల్‌ సేవ"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"స్వయంచాలకం, పూరించు, స్వీయ పూరింపు"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ఈ యాప్‌ను మీరు విశ్వసిస్తున్నట్లు నిర్ధారించండి&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; మీ స్క్రీన్‌పై ఉన్నవాటిని పరిగణనలోకి తీసుకొని వేటిని ఆటోమేటిక్‌గా పూరించాలో నిశ్చయిస్తుంది."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ఈ యాప్‌ను మీరు విశ్వసిస్తున్నట్లు నిర్ధారించండి&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; మీ స్క్రీన్‌పై ఉన్నవాటిని పరిగణనలోకి తీసుకొని వేటిని ఆటోమేటిక్‌గా పూరించాలో నిశ్చయిస్తుంది."</string>
     <string name="color_theme" msgid="1535685696756738324">"రంగు థీమ్"</string>
     <string name="default_theme" msgid="7085644992078579076">"డిఫాల్ట్"</string>
     <string name="device_theme" msgid="4571803018917608588">"పరికర థీమ్"</string>
