--- a/res/values-ug/strings.xml
+++ b/res/values-ug/strings.xml
@@ -659,7 +659,7 @@
     <string name="assisted_gps">كۈچەيتىلگەن GPS ئىشلەت</string>
     <string name="assisted_gps_enabled">مۇلازىمېتىر ئىشلىتىپ GPS گە ياردەملىشىش (تاللانمىسا تورنىڭ ئىشلەش ئۈنۈمى تۈۋەنلىتىدۇ)</string>
     <string name="assisted_gps_disabled">مۇلازىمېتىر ئىشلىتىپ GPS گە ياردەملىشىش (تاللانمىسا GPS ئىقتىدارىنى يۇقۇرى كۆتۈرگىلى بولىدۇ)</string>
-    <string name="use_location_title">ئورۇن ۋە Google ئىزدەش</string>
+    <string name="use_location_title">ئورۇن ۋە /e/ ئىزدەش</string>
     <string name="use_location_summary">گۇگىلنىڭ ئورۇن ئۇچۇرىڭىزنى ئىشلىتىپ ئىزدەش نەتىجىسى ۋە باشقا مۇلازىمەتلىرىنى ياخشىلىشىغا يول قويىدۇ</string>
     <string name="location_access_title">ئورۇن ئۇچۇرۇمنى زىيارەت قىلىشقا يول قويىدۇ</string>
     <string name="location_access_summary">سىز يول قويغان ئەپلەرنىڭ ئورۇن ئۇچۇرىڭىزنى ئىشلىتىشىگە يول قويىدۇ</string>
@@ -1095,12 +1095,12 @@
     <string name="backup_section_title">زاپاسلا ۋە ئەسلىگە كەلتۈر</string>
     <string name="personal_data_section_title">شەخسىي سانلىق مەلۇمات</string>
     <string name="backup_data_title">سانلىق مەلۇماتلىرىمنى زاپاسلا</string>
-    <string name="backup_data_summary">ئەپ سانلىق مەلۇماتى، Wi-Fi ئىم ۋە باشقا تەڭشەكلەرنى Google مۇلازىمېتىرىغا زاپاسلايدۇ.</string>
+    <string name="backup_data_summary">ئەپ سانلىق مەلۇماتى، Wi-Fi ئىم ۋە باشقا تەڭشەكلەرنى /e/ مۇلازىمېتىرىغا زاپاسلايدۇ.</string>
     <string name="backup_configure_account_title">ھېسابات زاپاسلا</string>
     <string name="auto_restore_title">ئۆزلۈكىدىن ئەسلىگە كەلتۈر</string>
     <string name="auto_restore_summary">بىر ئەپ قايتا ئورنىتىلغاندا زاپاسلانغان تەڭشەك ۋە سانلىق مەلۇماتلار ئۆزلۈكىدىن ئەسلىگە كەلتۈرۈلىدۇ</string>
     <string name="backup_configure_account_default_summary">نۆۋەتتە زاپاسلايدىغان سانلىق مەلۇماتنى ساقلايدىغان ھېسابات يوق</string>
-    <string name="backup_erase_dialog_message">سىز Wi-Fi ئىم، خەتكۈچلەر، باشقا تەڭشەكلەر ۋە ئەپ سانلىق مەلۇماتلىرىڭىزنى زاپاسلاشنى توختىتىپ، Google مۇلازىمېتىردىكى بارلىق قوشۇمچە نۇسخىسىنى ئۆچۈرەمسىز؟</string>
+    <string name="backup_erase_dialog_message">سىز Wi-Fi ئىم، خەتكۈچلەر، باشقا تەڭشەكلەر ۋە ئەپ سانلىق مەلۇماتلىرىڭىزنى زاپاسلاشنى توختىتىپ، /e/ مۇلازىمېتىردىكى بارلىق قوشۇمچە نۇسخىسىنى ئۆچۈرەمسىز؟</string>
     <string name="sound_category_sound_title">ئادەتتىكى</string>
     <string name="sound_category_call_ringtone_vibrate_title">چاقىرىش ئاۋازى ۋە تىترەش</string>
     <string name="sound_category_system_title">سىستېما</string>
