--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"ព្រមាន៖ ឧបករណ៍​របស់​អ្នក​នឹង​ត្រូវ​បាន​លុប​បន្ទាប់ពី​ការ​ព្យាយាម​ដោះ​សោ​បរាជ័យ <xliff:g id="COUNT">^1</xliff:g> ដង!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"បញ្ចូល​ពាក្យ​សម្ងាត់​របស់​អ្នក"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"កា​រដាក់​លេខ​កូដ​មិន​ជោគជ័យ"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ការ​ដាក់លេខ​កូដ​ត្រូវ​បាន​ផ្អាក និង​មិន​អាច​បញ្ចប់​បាន​ទេ។ ជា​លទ្ធផល ទិន្នន័យ​ក្នុង​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក​មិន​អាច​ចូល​ \n\n ដើម្បី​បន្ត​ប្រើ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក អ្នក​ត្រូវ​តែ​កំណត់​ដូច​ចេញ​ពី​រោងចក្រ​ឡើងវិញ។ ពេល​អ្នក​រៀបចំ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក​បន្ទាប់​ពី​កំណត់​ឡើងវិញ អ្នក​មាន​ឱកាស​ដើម្បី​ស្ដារ​ទិន្នន័យ​ដែល​ត្រូវ​បាន​បម្រុង​ទុក​ក្នុង​គណនី Google របស់​អ្នក។"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ការ​ដាក់​លេខ​កូដ​ត្រូវ​បាន​ផ្អាក និង​មិន​អាច​បញ្ចប់​ទេ។ ជា​លទ្ធផល ទិន្នន័យ​ក្នុង​ទូរស័ព្ទ​របស់​អ្នក​មិន​អាច​ចូល​ដំណើរការ​បាន​ទេ។ \n\nដើម្បី​បន្ត​ប្រើ​ទូរស័ព្ទ​របស់​អ្នក អ្នក​ត្រូវ​អនុវត្ត​ការ​កំណត់​ដូច​ចេញ​ពី​រោងចក្រ។ ពេល​អ្នក​រៀបចំ​ទូរស័ព្ទ​របស់​អ្នក​បន្ទាប់​ពី​កំណត់ អ្នក​នឹង​មាន​ឱកាស​ដើម្បី​ស្ដារ​ទិន្នន័យ​ដែល​ត្រូវ​បាន​បម្រុងទុក​ក្នុង​គណនី Google របស់​​អ្នក។"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"ការ​ដាក់លេខ​កូដ​ត្រូវ​បាន​ផ្អាក និង​មិន​អាច​បញ្ចប់​បាន​ទេ។ ជា​លទ្ធផល ទិន្នន័យ​ក្នុង​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក​មិន​អាច​ចូល​ \n\n ដើម្បី​បន្ត​ប្រើ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក អ្នក​ត្រូវ​តែ​កំណត់​ដូច​ចេញ​ពី​រោងចក្រ​ឡើងវិញ។ ពេល​អ្នក​រៀបចំ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក​បន្ទាប់​ពី​កំណត់​ឡើងវិញ អ្នក​មាន​ឱកាស​ដើម្បី​ស្ដារ​ទិន្នន័យ​ដែល​ត្រូវ​បាន​បម្រុង​ទុក​ក្នុង​គណនី /e/ របស់​អ្នក។"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"ការ​ដាក់​លេខ​កូដ​ត្រូវ​បាន​ផ្អាក និង​មិន​អាច​បញ្ចប់​ទេ។ ជា​លទ្ធផល ទិន្នន័យ​ក្នុង​ទូរស័ព្ទ​របស់​អ្នក​មិន​អាច​ចូល​ដំណើរការ​បាន​ទេ។ \n\nដើម្បី​បន្ត​ប្រើ​ទូរស័ព្ទ​របស់​អ្នក អ្នក​ត្រូវ​អនុវត្ត​ការ​កំណត់​ដូច​ចេញ​ពី​រោងចក្រ។ ពេល​អ្នក​រៀបចំ​ទូរស័ព្ទ​របស់​អ្នក​បន្ទាប់​ពី​កំណត់ អ្នក​នឹង​មាន​ឱកាស​ដើម្បី​ស្ដារ​ទិន្នន័យ​ដែល​ត្រូវ​បាន​បម្រុងទុក​ក្នុង​គណនី /e/ របស់​​អ្នក។"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"ការ​អ៊ិនគ្រីប​​មិន​បាន​ជោគជ័យ"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ពាក្យសម្ងាត់ដែលអ្នកបានបញ្ចូលត្រឹមត្រូវ ប៉ុន្តែសំណាងមិនល្អទិន្នន័យរបស់អ្នកខូច។ \n\n ដើម្បីបន្តប្រើថេប្លេតរបស់អ្នក អ្នកចាំបាច់ត្រូវធ្វើការកំណត់ដូចចេញពីរោចចក្រឡើងវិញ។ នៅពេលដែលអ្នកដំឡើងថេប្លេតរបស់អ្នកបន្ទាប់ពីកំណត់ឡើងវិញនោះ អ្នកនឹងមានឱកាសដើម្បីស្តារទិន្នន័យទាំងឡាយដែលបានបម្រុងទុកទៅគណនី Google របស់អ្នក។"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ពាក្យសម្ងាត់ដែលអ្នកបានបញ្ចូលត្រឹមត្រូវ ប៉ុន្តែសំណាងមិនល្អទិន្នន័យរបស់អ្នកខូច។ \n\nដើម្បីបន្តប្រើទូរស័ព្ទរបស់អ្នក អ្នកចាំបាច់ត្រូវធ្វើការកំណត់ដូចចេញពីរោចចក្រឡើងវិញ។ នៅពេលដែលអ្នកដំឡើងទូរស័ព្ទរបស់អ្នកបន្ទាប់ពីកំណត់ឡើងវិញនោះ អ្នកនឹងមានឱកាសដើម្បីស្តារទិន្នន័យទាំងឡាយដែលបានបម្រុងទុកទៅគណនី Google របស់អ្នក។"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"ពាក្យសម្ងាត់ដែលអ្នកបានបញ្ចូលត្រឹមត្រូវ ប៉ុន្តែសំណាងមិនល្អទិន្នន័យរបស់អ្នកខូច។ \n\n ដើម្បីបន្តប្រើថេប្លេតរបស់អ្នក អ្នកចាំបាច់ត្រូវធ្វើការកំណត់ដូចចេញពីរោចចក្រឡើងវិញ។ នៅពេលដែលអ្នកដំឡើងថេប្លេតរបស់អ្នកបន្ទាប់ពីកំណត់ឡើងវិញនោះ អ្នកនឹងមានឱកាសដើម្បីស្តារទិន្នន័យទាំងឡាយដែលបានបម្រុងទុកទៅគណនី /e/ របស់អ្នក។"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"ពាក្យសម្ងាត់ដែលអ្នកបានបញ្ចូលត្រឹមត្រូវ ប៉ុន្តែសំណាងមិនល្អទិន្នន័យរបស់អ្នកខូច។ \n\nដើម្បីបន្តប្រើទូរស័ព្ទរបស់អ្នក អ្នកចាំបាច់ត្រូវធ្វើការកំណត់ដូចចេញពីរោចចក្រឡើងវិញ។ នៅពេលដែលអ្នកដំឡើងទូរស័ព្ទរបស់អ្នកបន្ទាប់ពីកំណត់ឡើងវិញនោះ អ្នកនឹងមានឱកាសដើម្បីស្តារទិន្នន័យទាំងឡាយដែលបានបម្រុងទុកទៅគណនី /e/ របស់អ្នក។"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"ប្ដូរ​វិធីសាស្ត្រ​បញ្ចូល"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"រក្សា​សុវត្ថិភាព​ទូរសព្ទ​របស់អ្នក"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"កំណត់​ការ​ចាក់​សោ​អេក្រង់ ដើម្បី​ការពារ​ថេប្លេត"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"មិនអាច​កំណត់​ eSIM ឡើងវិញ​បានទេ ដោយសារ​មានបញ្ហា។"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"លុបទិន្នន័យទាំងអស់ (កំណត់ដូចថ្មីវិញ)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"លុបទិន្នន័យទាំងអស់ (កំណត់ដូចថ្មីវិញ)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"វា​នឹង​លុប​ទិន្នន័យ​ពី​ "<b>"ឧបករណ៍​ផ្ទុក​ខាង​ក្នុង"</b>"នៃ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក រួម​មាន៖\n\n"<li>"គណនី Google របស់​អ្នក"</li>\n<li>"ការកំណត់ និង​ទិន្នន័យ​កម្មវិធី និង​ប្រព័ន្ធ"</li>\n<li>"កម្មវិធី​បាន​ទាញ​យក"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"វា​នឹង​លុប​ទិន្នន័យ​ទាំងអស់​ពី​ "<b>"ទំហំផ្ទុក​ខាង​ក្នុង"</b>"នៃ​ទូរសព្ទ​របស់​អ្នក​ រួមមាន៖\n\n"<li>"គណនី Google របស់​អ្នក"</li>\n<li>"ការ​កំណត់​ និង​ទិន្នន័យ​ប្រព័ន្ធ ព្រម​ទាំង​កម្មវិធី"</li>\n<li>"កម្មវិធី​បាន​ទាញ​យក"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"វា​នឹង​លុប​ទិន្នន័យ​ពី​ "<b>"ឧបករណ៍​ផ្ទុក​ខាង​ក្នុង"</b>"នៃ​កុំព្យូទ័រ​បន្ទះ​របស់​អ្នក រួម​មាន៖\n\n"<li>"គណនី /e/ របស់​អ្នក"</li>\n<li>"ការកំណត់ និង​ទិន្នន័យ​កម្មវិធី និង​ប្រព័ន្ធ"</li>\n<li>"កម្មវិធី​បាន​ទាញ​យក"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"វា​នឹង​លុប​ទិន្នន័យ​ទាំងអស់​ពី​ "<b>"ទំហំផ្ទុក​ខាង​ក្នុង"</b>"នៃ​ទូរសព្ទ​របស់​អ្នក​ រួមមាន៖\n\n"<li>"គណនី /e/ របស់​អ្នក"</li>\n<li>"ការ​កំណត់​ និង​ទិន្នន័យ​ប្រព័ន្ធ ព្រម​ទាំង​កម្មវិធី"</li>\n<li>"កម្មវិធី​បាន​ទាញ​យក"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"បច្ចុប្បន្ន​ អ្នក​បាន​ចូល​គណនី​ដូច​ខាង​ក្រោម៖ \n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"មានអ្នកផ្សេងច្រើនទៀតមានវត្តមាននៅលើឧបករណ៍នេះ។\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"តន្ត្រី"</li>\n<li>"រូបថត"</li>\n<li>"ទិន្នន័យ​អ្នក​ប្រើ​ផ្សេង​ទៀត"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ការស្កេនប៊្លូធូស"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"អនុញ្ញាត​ឱ្យ​កម្មវិធី និងសេវាកម្ម​ស្កេនរក​ឧបករណ៍ដែល​នៅ​ជិត​បាន​គ្រប់ពេល ទោះបីជា​ប៊្លូធូសបិទ​ក៏ដោយ។ ឧទាហរណ៍ សកម្មភាព​នេះ​អាច​ត្រូវ​បាន​ប្រើ ដើម្បី​កែលម្អ​មុខងារ និងសេវាកម្មនានា​ដែល​ផ្អែក​លើ​ទីតាំង។"</string>
     <string name="location_network_based" msgid="9134175479520582215">"វ៉ាយហ្វាយ &amp; ទីតាំង​បណ្ដាញ​ចល័ត"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"ឲ្យ​កម្មវិធី​ប្រើ​សេវាកម្ម​ទីតាំង​របស់ Google ដើម្បី​ស្មាន​ទីតាំង​របស់​អ្នក​កាន់តែ​លឿន។ ទិន្នន័យ​ទីតាំង​អនាមិក​នឹង​ត្រូវ​បាន​ប្រមូល​ រួច​ផ្ញើ​ទៅ Google ។"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"ឲ្យ​កម្មវិធី​ប្រើ​សេវាកម្ម​ទីតាំង​របស់ /e/ ដើម្បី​ស្មាន​ទីតាំង​របស់​អ្នក​កាន់តែ​លឿន។ ទិន្នន័យ​ទីតាំង​អនាមិក​នឹង​ត្រូវ​បាន​ប្រមូល​ រួច​ផ្ញើ​ទៅ /e/ ។"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"ទីតាំង​បាន​កំណត់​ដោយ​វ៉ាយហ្វាយ"</string>
     <string name="location_gps" msgid="8392461023569708478">"ផ្កាយរណប GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"ឲ្យ​កម្មវិធី​ប្រើ GPS លើ​កុំព្យូទ័រ​បន្ទះ​​របស់​អ្នក​ដើម្បី​ដៅ​ទីតាំង​របស់​អ្នក"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"ប្រើ GPS ជា​ជំនួយ"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"ប្រើ​ម៉ាស៊ីន​មេ ដើម្បី​ជួយ GPS (ដោះ​សញ្ញា​ធីក ដើម្បី​កាត់បន្ថយ​ការ​ប្រើ​បណ្ដាញ)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"ប្រើ​ម៉ាស៊ីន​មេ​ដើម្បី​ជួយ GPS (ដោះ​ធីក ដើម្បី​បង្កើន​ការ​អនុវត្ត GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"ទីតាំង &amp; ការ​ស្វែងរក​តាម Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"ឲ្យ Google ប្រើ​ទីតាំង​អ្នក ដើម្បី​បង្កើន​លទ្ធផល​ស្វែងរក និង​សេវាកម្ម​ផ្សេង"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"ទីតាំង &amp; ការ​ស្វែងរក​តាម /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"ឲ្យ /e/ ប្រើ​ទីតាំង​អ្នក ដើម្បី​បង្កើន​លទ្ធផល​ស្វែងរក និង​សេវាកម្ម​ផ្សេង"</string>
     <string name="location_access_title" msgid="7064108942964081243">"ចូល​ទីតាំង​របស់​ខ្ញុំ"</string>
     <string name="location_access_summary" msgid="69031404093194341">"ឲ្យ​កម្មវិធី​​សួ​រ​រក​សិទ្ធិ​របស់​អ្នក​ក្នុង​ការ​ប្រើ​ព័ត៌មាន​ទីតាំង​របស់​អ្នក"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"ប្រភព​ទីតាំង"</string>
@@ -2445,7 +2445,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"បម្រុងទុក &amp; ស្ដារ​ឡើងវិញ"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"ទិន្នន័យ​ផ្ទាល់ខ្លួន"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"បម្រុង​ទុក​ទិន្នន័យ​របស់​ខ្ញុំ"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"បម្រុង​ទុក​ទិន្នន័យ​កម្មវិធី, ពាក្យ​សម្ងាត់​វ៉ាយហ្វាយ និង​ការ​កំណត់​ផ្សេងៗ​ទៅ​ម៉ាស៊ីន​មេ Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"បម្រុង​ទុក​ទិន្នន័យ​កម្មវិធី, ពាក្យ​សម្ងាត់​វ៉ាយហ្វាយ និង​ការ​កំណត់​ផ្សេងៗ​ទៅ​ម៉ាស៊ីន​មេ /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"គណនីបម្រុង​ទុក"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"រួម​បញ្ចូល​ទិន្នន័យ​កម្មវិធី"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ស្ដារ​ឡើង​វិញ​ស្វ័យ​ប្រវត្តិ"</string>
@@ -2453,7 +2453,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"សេវាកម្មបម្រុងទុក​មិន​ដំណើរការទេ"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"បច្ចុប្បន្ន​ គ្មាន​គណនី​រក្សាទុក​ទិន្នន័យ​បម្រុង​ទុក​ទេ"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"បញ្ឈប់​ការ​បម្រុង​ទុក​ពាក្យ​សម្ងាត់​វ៉ាយហ្វាយ, ចំណាំ, ការ​កំណត់​ផ្សេងៗ, និង​ទិន្នន័យ​កម្មវិធី​របស់​អ្នក រួម​ទាំង​លុប​ច្បាប់​ចម្លង​ទាំងអស់​លើ​ម៉ាស៊ីន​មេ Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"បញ្ឈប់​ការ​បម្រុង​ទុក​ពាក្យ​សម្ងាត់​វ៉ាយហ្វាយ, ចំណាំ, ការ​កំណត់​ផ្សេងៗ, និង​ទិន្នន័យ​កម្មវិធី​របស់​អ្នក រួម​ទាំង​លុប​ច្បាប់​ចម្លង​ទាំងអស់​លើ​ម៉ាស៊ីន​មេ /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"បញ្ឈប់ការបម្រុងទុកទិន្នន័យឧបករណ៍ (ដូចជាពាក្យសម្ងាត់ Wi-Fi និងប្រវត្តិហៅទូរស័ព្ទ) និងទិន្នន័យកម្មវិធី (ដូចជាការកំណត់ និងឯកសារដែលបានផ្ទុកដោយកម្មវិធី) ព្រមទាំងលុបច្បាប់ចម្លងទាំងអស់នៅលើម៉ាស៊ីនមេដែលគ្រប់គ្រងពីចម្ងាយឬទេ?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"បម្រុងទុកទិន្នន័យឧបករណ៍ដោយស្វ័យប្រវត្តិ (ដូចជាពាក្យសម្ងាត់ Wi-Fi និងប្រវត្តិការហៅទូរស័ព្ទ) និងទិន្នន័យកម្មវិធី (ដូចជាការកំណត់ និងឯកសារដែលបានផ្ទុកដោយកម្មវិធី) ពីចម្ងាយ។\n\nនៅពេលអ្នកបើកការបម្រុងទុកស្វ័យប្រវត្តិ ទិន្នន័យឧបករណ៍ និងកម្មវិធីនឹងត្រូវបានរក្សាទុកពីចម្ងាយជាទៀងទាត់។ ទិន្នន័យកម្មវិធីអាចជាទិន្នន័យណាដែលកម្មវិធីបានរក្សាទុក (ផ្អែកលើការកំណត់ផ្នែកអ្នកអភិវឌ្ឍន៍) រាប់បញ្ចូលទាំងទិន្នន័យដែលសំខាន់ខ្លាំង ដូចជាទំនាក់ទំនង សារ និងរូបថត។"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"ការកំណត់​អ្នកគ្រប់គ្រង​ឧបករណ៍"</string>
@@ -2540,7 +2540,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"ប្រតិទិន"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"ទំនាក់ទំនង"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"សូម​ស្វាគមន៍​មក​កាន់​ការ​ធ្វើ​សម​កាល​កម្ម Google!"</font>" \nវិធីសាស្ត្រ Google ដើម្បី​ធ្វើ​សម​កាល​កម្ម​ទិន្នន័យ ដើម្បី​អនុញ្ញាត​ការ​ចូល​ដំណើរការ​ទំនាក់ទំនង ការ​ណាត់​ជួប និង​ផ្សេងៗ​របស់​អ្នក​ពី​កន្លែង​ណាមួយ។"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"សូម​ស្វាគមន៍​មក​កាន់​ការ​ធ្វើ​សម​កាល​កម្ម /e/!"</font>" \nវិធីសាស្ត្រ /e/ ដើម្បី​ធ្វើ​សម​កាល​កម្ម​ទិន្នន័យ ដើម្បី​អនុញ្ញាត​ការ​ចូល​ដំណើរការ​ទំនាក់ទំនង ការ​ណាត់​ជួប និង​ផ្សេងៗ​របស់​អ្នក​ពី​កន្លែង​ណាមួយ។"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"កំណត់​ការ​ធ្វើ​សម​កាល​កម្ម​កម្មវិធី"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"ទិន្នន័យ &amp; ការ​ធ្វើ​សម​កាល​កម្ម"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"ប្ដូរ​ពាក្យ​សម្ងាត់"</string>
@@ -2625,8 +2625,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"លក្ខណៈ​នេះ​អាច​ធ្វើ​ឲ្យ​កម្មវិធី​ដែល​អាស្រ័យ​លើ​ទិន្នន័យ​ផ្ទៃ​ខាងក្រោយ​​ឈប់​ដំណើរការ ពេល​មាន​តែ​បណ្ដាញ​ចល័ត។\n\nអ្នក​អាច​រក​មើល​ការ​គ្រប់គ្រង​ការ​ប្រើ​ទិន្នន័យ​សមស្រប​ក្នុង​ការកំណត់​ដែល​មាន​ក្នុង​កម្មវិធី។"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"ការ​ដាក់​កំហិតលើ​ទិន្នន័យ​ផ្ទៃ​ខាង​ក្រោយ​អាច​ធ្វើ​បាន​ លុះត្រាតែ​អ្នក​បាន​កំណត់​កម្រិត​ទិន្នន័យចល័ត​ហើយប៉ុណ្ណោះ។"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"បើក​ការ​ធ្វើ​សម​កាល​កម្ម​ទិន្នន័យ​ស្វ័យ​ប្រវត្តិ?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ការ​ផ្លាស់ប្ដូរ​ណា​មួយ​​ដែល​អ្នក​ធ្វើ​ចំពោះ​គណនី​របស់​អ្នក​នៅ​លើ​បណ្ដាញ​នឹង​ត្រូវ​បាន​ចម្លង​ដោយ​ស្វ័យ​ប្រវត្តិ​​កុំព្យូទ័រ​បន្ទះ​​របស់​អ្នក។​\n\nគណនី​មួយ​ចំនួន​ក៏​អាច​ចម្លង​ការ​ផ្លាស់ប្ដូរ​ដោយ​ស្វ័យ​ប្រវត្តិ​ផង​ដែរ ពេល​អ្នក​ធ្វើ​លើ​​កុំព្យូទ័រ​បន្ទះ​ទៅ​បណ្ដាញ។ គណនី Google ធ្វើការ​តាម​វិធី​នេះ។"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ការ​ផ្លាស់ប្ដូរ​ណា​មួយ​ដែល​អ្នក​ធ្វើ​ឡើងចំពោះ​គណនី​របស់​អ្នក​នៅ​លើ​បណ្ដាញ នឹង​ត្រូវ​បាន​ចម្លង​ដោយ​ស្វ័យ​ប្រវត្តិ​ទៅ​ទូរសព្ទ​របស់​អ្នក។​\n\nគណនី​មួយ​ចំនួន​ក៏​អាច​ចម្លង​ការ​ផ្លាស់ប្ដូរ​របស់អ្នក​នៅលើ​ទូរសព្ទ​ទៅ​បណ្ដាញដោយ​ស្វ័យ​ប្រវត្តិផងដែរ។ គណនី Google ដំណើរការ​តាម​វិធី​នេះ។"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"ការ​ផ្លាស់ប្ដូរ​ណា​មួយ​​ដែល​អ្នក​ធ្វើ​ចំពោះ​គណនី​របស់​អ្នក​នៅ​លើ​បណ្ដាញ​នឹង​ត្រូវ​បាន​ចម្លង​ដោយ​ស្វ័យ​ប្រវត្តិ​​កុំព្យូទ័រ​បន្ទះ​​របស់​អ្នក។​\n\nគណនី​មួយ​ចំនួន​ក៏​អាច​ចម្លង​ការ​ផ្លាស់ប្ដូរ​ដោយ​ស្វ័យ​ប្រវត្តិ​ផង​ដែរ ពេល​អ្នក​ធ្វើ​លើ​​កុំព្យូទ័រ​បន្ទះ​ទៅ​បណ្ដាញ។ គណនី /e/ ធ្វើការ​តាម​វិធី​នេះ។"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"ការ​ផ្លាស់ប្ដូរ​ណា​មួយ​ដែល​អ្នក​ធ្វើ​ឡើងចំពោះ​គណនី​របស់​អ្នក​នៅ​លើ​បណ្ដាញ នឹង​ត្រូវ​បាន​ចម្លង​ដោយ​ស្វ័យ​ប្រវត្តិ​ទៅ​ទូរសព្ទ​របស់​អ្នក។​\n\nគណនី​មួយ​ចំនួន​ក៏​អាច​ចម្លង​ការ​ផ្លាស់ប្ដូរ​របស់អ្នក​នៅលើ​ទូរសព្ទ​ទៅ​បណ្ដាញដោយ​ស្វ័យ​ប្រវត្តិផងដែរ។ គណនី /e/ ដំណើរការ​តាម​វិធី​នេះ។"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"បិទ​ការ​ធ្វើ​សម​កាល​កម្ម​ទិន្នន័យ​ស្វ័យ​ប្រវត្តិ?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"វា​នឹង​សន្សំ​ការ​ប្រើ​ទិន្នន័យ និង​ថ្ម ប៉ុន្តែ​អ្នក​ត្រូវ​តែ​ធ្វើ​សម​កាល​កម្ម​គណនី​នីមួយៗ​ដោយ​ខ្លួនឯង ដើម្បី​ប្រមូល​​ព័ត៌មាន​ថ្មីៗ។ អ្នក​នឹង​មិន​ទទួល​ការ​ជូន​ដំណឹង​ពេល​មាន​បច្ចុប្បន្នភាព​​ទេ។"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"កាលបរិច្ឆេទ​កំណត់​ខួប​​ប្រើ​ឡើង​វិញ"</string>
@@ -4084,7 +4084,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(បានបិទ​សម្រាប់​អ្នក​ប្រើ <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"សេវាកម្មបំពេញដោយស្វ័យប្រវត្តិ"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"ស្វ័យ​ប្រវត្តិ បំពេញ បំពេញ​ស្វ័យ​ប្រវត្តិ"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ត្រូវ​ប្រាកដថា​អ្នក​ជឿជាក់​លើ​កម្មវិធី​នេះ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google បំពេញស្វ័យប្រវត្តិ&gt;%1$s&lt;/xliff:g&gt; ប្រើប្រាស់​អ្វី​ដែល​មាននៅ​លើ​អេក្រង់​របស់អ្នក ដើម្បី​កំណត់​អ្វីដែល​អាចបំពេញ​ដោយ​ស្វ័យប្រវត្តិ។"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;ត្រូវ​ប្រាកដថា​អ្នក​ជឿជាក់​លើ​កម្មវិធី​នេះ&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ បំពេញស្វ័យប្រវត្តិ&gt;%1$s&lt;/xliff:g&gt; ប្រើប្រាស់​អ្វី​ដែល​មាននៅ​លើ​អេក្រង់​របស់អ្នក ដើម្បី​កំណត់​អ្វីដែល​អាចបំពេញ​ដោយ​ស្វ័យប្រវត្តិ។"</string>
     <string name="color_theme" msgid="1535685696756738324">"រចនាប័ទ្ម​ពណ៌"</string>
     <string name="default_theme" msgid="7085644992078579076">"លំ​នាំ​ដើម"</string>
     <string name="device_theme" msgid="4571803018917608588">"រចនាប័ទ្ម​ឧបករណ៍"</string>
