--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"चेतावणी: अनलॉक करण्‍याच्या आणखी <xliff:g id="COUNT">^1</xliff:g> अयशस्‍वी प्रयत्नांनंतर तुमचे डिव्हाइस पुसले जाईल."</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"तुमचा पासवर्ड टाइप करा"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"एंक्रिप्शन अयशस्वी"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"कूटबद्धीकरणात व्यत्यय आला आणि हे पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या टॅबलेटवरील डेटा यापुढे प्रवेशयोग्य राहणार नाही. \n\n तुमचा टॅबलेट वापरून पुन्हा सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर तुम्ही तुमचा टॅबलेट सेट करता, तेव्हा आपल्याकडे आपल्या Google खात्यावर बॅकअप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"कूटबद्धीकरणात व्यत्यय आला आणि पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या फोनवरील डेटा यापुढे प्रवेशयोग्य नाही.\n\nतुमचा फोन वापरणे पुन्हा सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर जेव्हा तुम्ही तुमचा फोन सेट करता, तेव्हा आपल्याकडे आपल्या Google खात्यावर बॅकअप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"कूटबद्धीकरणात व्यत्यय आला आणि हे पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या टॅबलेटवरील डेटा यापुढे प्रवेशयोग्य राहणार नाही. \n\n तुमचा टॅबलेट वापरून पुन्हा सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर तुम्ही तुमचा टॅबलेट सेट करता, तेव्हा आपल्याकडे आपल्या /e/ खात्यावर बॅकअप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"कूटबद्धीकरणात व्यत्यय आला आणि पूर्ण होऊ शकत नाही. परिणामस्वरूप, आपल्या फोनवरील डेटा यापुढे प्रवेशयोग्य नाही.\n\nतुमचा फोन वापरणे पुन्हा सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करण्याची आवश्यकता आहे. रीसेट केल्यानंतर जेव्हा तुम्ही तुमचा फोन सेट करता, तेव्हा आपल्याकडे आपल्या /e/ खात्यावर बॅकअप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"विकूटन अयशस्वी"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"तुम्ही एंटर केलेला पासवर्ड चुकीचा आहे, परंतु दुर्दैवाने तुमचा डेटा दूषित आहे. \n\nतुमचा टॅबलेट वापरणे पुनः सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर तुम्ही तुमचा टॅबलेट सेट करता, तेव्हा तुम्हाला आपल्या Google खात्यावर बॅक अप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"तुम्ही एंटर केलेला पासवर्ड बरोबर आहे, परंतु दुर्दैवाने तुमचा डेटा दूषित आहे. \n\nतुमचा फोन वापरणे पुनः सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर तुम्ही तुमचा फोन सेट करता, तेव्हा तुम्हाला आपल्या Google खात्यावर बॅक अप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"तुम्ही एंटर केलेला पासवर्ड चुकीचा आहे, परंतु दुर्दैवाने तुमचा डेटा दूषित आहे. \n\nतुमचा टॅबलेट वापरणे पुनः सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर तुम्ही तुमचा टॅबलेट सेट करता, तेव्हा तुम्हाला आपल्या /e/ खात्यावर बॅक अप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"तुम्ही एंटर केलेला पासवर्ड बरोबर आहे, परंतु दुर्दैवाने तुमचा डेटा दूषित आहे. \n\nतुमचा फोन वापरणे पुनः सुरु करण्यासाठी, तुम्हाला फॅक्टरी रीसेट करणे आवश्यक आहे. रीसेट केल्यानंतर तुम्ही तुमचा फोन सेट करता, तेव्हा तुम्हाला आपल्या /e/ खात्यावर बॅक अप घेतलेला कोणताही डेटा रीस्टोअर करण्याची संधी असेल."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"इनपुट पद्धत स्विच करा"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"तुमचा फोन सुरक्षित ठेवा"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"टॅबलेटचे संरक्षण करण्‍यासाठी स्‍क्रीन लॉक सेट करा"</string>
@@ -1466,8 +1466,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"एका एररमुळे eSIM रीसेट करता येणार नाहीत."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"सर्व डेटा मिटवा (फॅक्टरी रीसेट)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"सर्व डेटा मिटवा (फॅक्टरी रीसेट)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"तुमचे Google खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे तुमच्या फोनच्या "<b>"अंतर्गत स्टोरेज"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"तुमचे Google खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"तुमचे /e/ खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे तुमच्या फोनच्या "<b>"अंतर्गत स्टोरेज"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"तुमचे /e/ खाते"</li>\n<li>"सिस्टम आणि अ‍ॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेली अ‍ॅप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"तुम्ही खालील खात्यांवर सध्या साइन इन केले आहे:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"या डिव्‍हाइसवर इतर वापरकर्ते उपस्‍थित आहेत.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फोटो"</li>\n<li>"अन्य वापरकर्ता डेटा"</li></string>
@@ -1544,7 +1544,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"ब्लूटूथ स्कॅन करणे"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"ब्लूटूथ बंद असले, तरीही अ‍ॅप्स आणि सेवांना जवळपासची डिव्हाइस कधीही स्कॅन करण्याची अनुमती द्या. याचा वापर उदाहरणार्थ, स्थान आधारित वैशिष्ट्ये आणि सेवा सुधारण्यासाठी केला जाऊ शकतो."</string>
     <string name="location_network_based" msgid="9134175479520582215">"वाय-फाय आणि मोबाईल नेटवर्क स्थान"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपल्या स्थानाचा अधिक जलद अंदाज घेण्यासाठी अॅप्सना Google ची स्थान सेवा वापरू द्या. अनामित स्थान डेटा संकलित केला जाईल आणि Google कडे पाठविला जाईल."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"आपल्या स्थानाचा अधिक जलद अंदाज घेण्यासाठी अॅप्सना /e/ ची स्थान सेवा वापरू द्या. अनामित स्थान डेटा संकलित केला जाईल आणि /e/ कडे पाठविला जाईल."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"वाय-फाय द्वारे निर्धारित केलेले स्थान"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS उपग्रह"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"तुमचे स्थान सूचित करण्यासाठी आपल्या टॅब्लेटवर अॅप्सना GPS वापरु द्या"</string>
@@ -1552,8 +1552,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"साहाय्यक GPS वापरा"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"GPS ला साहाय्य करण्यासाठी सर्व्हर वापरा (नेटवर्क वापर कमी करण्यासाठी अनचेक करा)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"GPS ला साहाय्य करण्यासाठी सर्व्हर वापरा (GPS कामगिरी सुधारण्यासाठी अनचेक करा)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"स्थान आणि Google शोध"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Google ला शोध परिणाम आणि अन्य सेवा सुधारण्यासाठी तुमचे स्थान वापरू द्या"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"स्थान आणि /e/ शोध"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"/e/ ला शोध परिणाम आणि अन्य सेवा सुधारण्यासाठी तुमचे स्थान वापरू द्या"</string>
     <string name="location_access_title" msgid="7064108942964081243">"माझी स्थाने अॅक्सेस करा"</string>
     <string name="location_access_summary" msgid="69031404093194341">"तुमची परवानगी विचारणार्‍या अॅप्सना तुमची स्थान माहिती वापरु द्या"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"स्थान स्रोत"</string>
@@ -2446,7 +2446,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"बॅकअप घ्या आणि पुनर्संचयित करा"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"वैयक्तिक डेटा"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"माझ्या डेटाचा बॅकअप घ्या"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Google सर्व्हरमध्ये अ‍ॅप डेटा, वाय-फाय पासवर्ड आणि इतर सेटिंग्जचा बॅक अप घ्या"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"/e/ सर्व्हरमध्ये अ‍ॅप डेटा, वाय-फाय पासवर्ड आणि इतर सेटिंग्जचा बॅक अप घ्या"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"बॅकअप खाते"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"अ‍ॅप डेटा समाविष्ट करा"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"ऑटोमॅटिक रिस्टोअर"</string>
@@ -2454,7 +2454,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"बॅक अप सेवा सक्रिय नाही"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"कोणतेही खाते सध्या बॅक अप घेतलेला डेटा स्टोअर करत नाहीये"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Google सर्व्हरवरील आपल्या वाय-फाय पासवर्ड, बुकमार्क, इतर सेटिंग्ज आणि अ‍ॅप डेटाचा बॅक अप घेणे थांबवायचे तसेच सर्व प्रती मिटवायच्या?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"/e/ सर्व्हरवरील आपल्या वाय-फाय पासवर्ड, बुकमार्क, इतर सेटिंग्ज आणि अ‍ॅप डेटाचा बॅक अप घेणे थांबवायचे तसेच सर्व प्रती मिटवायच्या?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"डिव्हाइस डेटाचा (जसे की वाय-फाय पासवर्ड आणि कॉल इतिहास) आणि (अ‍ॅप्सद्वारे स्टोअर केलेल्या सेटिंग्ज आणि फायली यासारख्या) अ‍ॅप डेटाचा बॅकअप घेणे थांबवायचे, तसेच दूरस्थ सर्व्हर वरील सर्व प्रती मिटवायच्या?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"आपोआप डिव्हाइस डेटाचा (जसे की वाय-फाय पासवर्ड आणि कॉल इतिहास) आणि अ‍ॅप डेटाचा (जसे की अ‍ॅप्‍स द्वारे स्टोअर केलेल्या सेटिंग्ज आणि फायली) दूरस्‍थपणे बॅकअप घ्‍या.\n\nतुम्ही स्वयंचलित बॅकअप चालू करता तेव्‍हा, डिव्हाइस आणि अ‍ॅप डेटा ठराविक कालावधीने दूरस्‍थपणे सेव्ह केला जातो. अ‍ॅप डेटा हा संपर्क, मेसेज आणि फोटो यासारख्‍या संभाव्य संवेदनशील डेटासह अ‍ॅपने सेव्ह केलेला (डेव्हलपरच्या सेटिंग्जवर आधारित) कोणताही डेटा असू शकतो."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"डिव्हाइस प्रशासक सेटिंग्ज"</string>
@@ -2541,7 +2541,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"कॅलेंडर"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"संपर्क"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Google सिंकामध्ये स्वागत आहे!"</font>" \nतुम्ही जेथे आहात तेथून आपल्या संपर्क, भेटी आणि अधिक मध्ये प्रवेश करण्याची अनुमती देण्यासाठी डेटा सिंक करण्याकरिता एक Google दृष्टिकोन."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"/e/ सिंकामध्ये स्वागत आहे!"</font>" \nतुम्ही जेथे आहात तेथून आपल्या संपर्क, भेटी आणि अधिक मध्ये प्रवेश करण्याची अनुमती देण्यासाठी डेटा सिंक करण्याकरिता एक /e/ दृष्टिकोन."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"अ‍ॅप सिंक सेटिंग्ज"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"डेटा आणि सिंक"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"पासवर्ड बदला"</string>
@@ -2626,8 +2626,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"जेव्हा फक्त मोबाईल नेटवर्क उपलब्ध असतात तेव्हा या वैशिष्ट्यामुळे पार्श्वभूमी डेटावर अवलंबून असलेला अ‍ॅप कार्य करणे थांबवते.\n\nतुम्ही अ‍ॅप मध्ये उपलब्ध असलेल्या सेटिंग्जमध्ये अधिक योग्य डेटा वापर नियंत्रणे शोधू शकता."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"तुम्ही मोबाइल डेटा मर्यादा सेट करता तेव्हाच पार्श्वभूमीवरील डेटा प्रतिबंधित करणे शक्य आहे."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"डेटाचे स्वयं-सिंक चालू करायचे?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"तुम्ही वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या टॅब्लेटवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती तुम्ही टॅब्लेटवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. Google खाते याप्रकारे कार्य करते."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"तुम्ही वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या फोनवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती तुम्ही फोनवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. Google खाते याप्रकारे कार्य करते."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"तुम्ही वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या टॅब्लेटवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती तुम्ही टॅब्लेटवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. /e/ खाते याप्रकारे कार्य करते."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"तुम्ही वेबवरून आपल्या खात्यामध्ये कोणतेही बदल करता ते आपल्या फोनवर स्वयंचलितपणे कॉपी केले जातील.\n\nकाही खाती तुम्ही फोनवर करता ते कोणतेही बदल स्वयंचलितपणे वेबवर देखील कॉपी करू शकतात. /e/ खाते याप्रकारे कार्य करते."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"डेटाचे ऑटो-सिंक बंद करायचे?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"हे डेटा आणि बॅटरीच्या वापराची बचत करेल, पण तुम्हाला अलीकडील माहिती संकलित करण्यासाठी प्रत्येक खाते मॅन्युअली सिंक करण्याची आवश्यकता असेल. आणि अपडेट आल्यावर तुम्हाला सूचना मिळणार नाही."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"वापर चक्र रीसेट तारीख"</string>
@@ -4085,7 +4085,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(<xliff:g id="USER">%s</xliff:g> वापरकर्त्‍यासाठी अक्षम केले)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"स्वयं-भरण सेवा"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"स्वयं, भरा, स्वयंभरण"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;तुमचा या अॅपवर विश्वास असल्याचे निश्चित करा&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt; ऑटोफिल काय होऊ शकते हे ठरवण्यासाठी तुमच्या स्क्रीनवर काय आहे याचा वापर करते."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;तुमचा या अॅपवर विश्वास असल्याचे निश्चित करा&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt; ऑटोफिल काय होऊ शकते हे ठरवण्यासाठी तुमच्या स्क्रीनवर काय आहे याचा वापर करते."</string>
     <string name="color_theme" msgid="1535685696756738324">"रंगांची थीम"</string>
     <string name="default_theme" msgid="7085644992078579076">"डीफॉल्ट"</string>
     <string name="device_theme" msgid="4571803018917608588">"डिव्हाइस थीम"</string>
