--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -493,11 +493,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Upozornenie: Po viac ako <xliff:g id="COUNT">^1</xliff:g> neúspešných pokusoch o odomknutie bude vaše zariadenie vymazané!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Zadajte svoje heslo"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Šifrovanie bolo neúspešné"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Šifrovanie bolo prerušené a nedá sa dokončiť. Výsledkom je, že údaje vo vašom tablete už nie sú k dispozícii. \n\nAk chcete ďalej používať svoj tablet, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania tabletu príležitosť obnoviť všetky údaje, ktoré sa zálohovali do vášho účtu Google."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Šifrovanie bolo prerušené a nedá sa dokončiť. Výsledkom je, že údaje vo vašom telefóne už nie sú k dispozícii. \n\nAk chcete ďalej používať svoj telefón, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania telefónu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte Google."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Šifrovanie bolo prerušené a nedá sa dokončiť. Výsledkom je, že údaje vo vašom tablete už nie sú k dispozícii. \n\nAk chcete ďalej používať svoj tablet, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania tabletu príležitosť obnoviť všetky údaje, ktoré sa zálohovali do vášho účtu /e/."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Šifrovanie bolo prerušené a nedá sa dokončiť. Výsledkom je, že údaje vo vašom telefóne už nie sú k dispozícii. \n\nAk chcete ďalej používať svoj telefón, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania telefónu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte /e/."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Dešifrovanie sa nepodarilo"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Zadané heslo je správne, avšak údaje sú poškodené. \n\nAk chcete ďalej používať svoj tablet, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania tabletu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte Google."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Zadané heslo je správne, avšak údaje sú poškodené. \n\nAk chcete ďalej používať svoj telefón, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania telefónu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte Google."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Zadané heslo je správne, avšak údaje sú poškodené. \n\nAk chcete ďalej používať svoj tablet, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania tabletu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte /e/."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Zadané heslo je správne, avšak údaje sú poškodené. \n\nAk chcete ďalej používať svoj telefón, musíte obnoviť jeho výrobné nastavenia. Po ich obnovení budete mať počas nastavovania telefónu príležitosť obnoviť všetky údaje, ktoré boli zálohované vo vašom účte /e/."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Prepnúť metódu vstupu"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"Zabezpečenie telefónu"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"Nastavenie zámky obrazovky na ochranu tabletu"</string>
@@ -1491,8 +1491,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"eSIM karty sa nedajú obnoviť, pretože sa vyskytla chyba."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Vymazať dáta (obnova výr. nastavení)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Vymazať dáta (obn. výr. nast.)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" tabletu, vrátane:\n\n"<li>"účtu Google"</li>\n<li>"dát a nastavení systému a aplikácií"</li>\n<li>"stiahnutých aplikácií"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" telefónu:\n\n"<li>"Účet Google"</li>\n<li>"Dáta a nastavenia systému a aplikácií"</li>\n<li>"Stiahnuté aplikácie"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" tabletu, vrátane:\n\n"<li>"účtu /e/"</li>\n<li>"dát a nastavení systému a aplikácií"</li>\n<li>"stiahnutých aplikácií"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Táto operácia vymaže všetky dáta v "<b>"internom úložisku"</b>" telefónu:\n\n"<li>"Účet /e/"</li>\n<li>"Dáta a nastavenia systému a aplikácií"</li>\n<li>"Stiahnuté aplikácie"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Aktuálne ste prihlásený/-á do nasledujúcich účtov:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Na tomto zariadení sú prítomní ďalší používatelia.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Hudba"</li>\n<li>"Fotografie"</li>\n<li>"Iné používateľské údaje"</li></string>
@@ -1569,7 +1569,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Vyhľadávať zariadenia Bluetooth"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"Povoľte aplikáciám a službám kedykoľvek vyhľadávať zariadenia v okolí, a to aj vtedy, keď je rozhranie Bluetooth vypnuté. Môžete to využiť napríklad na zlepšenie funkcií a služieb podmienených polohou."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Poloha Wi‑Fi a mobilnej siete"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Povoliť apl. používať službu urč. polohy Google a rýchl. odhad. vašu polohu. Anonym. údaje o polohe sa budú odosielať spol. Google."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Povoliť apl. používať službu urč. polohy /e/ a rýchl. odhad. vašu polohu. Anonym. údaje o polohe sa budú odosielať spol. /e/."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Poloha je určená podľa siete Wi‑Fi"</string>
     <string name="location_gps" msgid="8392461023569708478">"Satelity GPS"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Umožniť aplikáciám na vašom tablete určovať polohu pomocou GPS"</string>
@@ -1577,8 +1577,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Použiť systém A-GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Vylepšiť funkčnosť GPS pomocou servera (vypnutím tejto funkcie znížite využitie siete)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Vylepšiť funkčnosť GPS pomocou servera (zrušením tejto funkcie zvýšite výkon GPS)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Poloha a vyhľadávanie Google"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Povoliť systému Google použiť polohu na vylepšenie výsledkov vyhľadávania a ďalších služieb"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Poloha a vyhľadávanie /e/"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Povoliť systému /e/ použiť polohu na vylepšenie výsledkov vyhľadávania a ďalších služieb"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Prístup k údajom o mojej polohe"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Umožniť aplikáciám, ktoré o to požiadali, používať údaje o polohe"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Zdroje polohy"</string>
@@ -2503,7 +2503,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Zálohovať a obnoviť"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Osobné údaje"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Zálohovať moje dáta"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Zálohovať dáta aplikácií, heslá Wi‑Fi a ďalšie nastavenia na serveroch Google"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Zálohovať dáta aplikácií, heslá Wi‑Fi a ďalšie nastavenia na serveroch /e/"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Zálohovací účet"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Zahrnúť dáta aplikácií"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Automaticky obnovovať"</string>
@@ -2511,7 +2511,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Služba zálohovania nie je aktívna"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Momentálne nie sú záložné údaje ukladané do žiadneho účtu"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Chcete zastaviť zálohovanie hesiel Wi‑Fi, záložiek, ďalších nastavení a dát aplikácií? Chcete vymazať všetky kópie na serveroch Google?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Chcete zastaviť zálohovanie hesiel Wi‑Fi, záložiek, ďalších nastavení a dát aplikácií? Chcete vymazať všetky kópie na serveroch /e/?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Chcete zastaviť zálohovanie dát zariadenia (ako sú heslá Wi‑Fi a história hovorov) a dát aplikácií (ako sú nastavenia a súbory uložené aplikáciami)? Chcete vymazať všetky kópie na vzdialených serveroch?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Automaticky vzdialene zálohujte údaje zariadenia (napr. heslá do sietí Wi‑Fi a históriu hovorov) a údaje aplikácií (napr. nastavenia a súbory uložené aplikáciami). \n\nKeď zapnete automatické zálohovanie, údaje zariadenia a aplikácií sa budú pravidelne vzdialene ukladať. Údaje aplikácie môžu byť ľubovoľné informácie uložené aplikáciou (na základe nastavení vývojára) aj potenciálne citlivé údaje, ako sú kontakty, správy a fotky."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Nastavenia správcu zariadenia"</string>
@@ -2598,7 +2598,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Kalendár"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Kontakty"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Víta vás služba Google Sync"</font>" \nSpoločnosť Google pomocou nej synchronizuje údaje a umožňuje vám tak pristupovať ku kontaktom, stretnutiam a ďalším informáciám, nech ste kdekoľvek."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Víta vás služba /e/ Sync"</font>" \nSpoločnosť /e/ pomocou nej synchronizuje údaje a umožňuje vám tak pristupovať ku kontaktom, stretnutiam a ďalším informáciám, nech ste kdekoľvek."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Nastavenia synchronizácie aplikácie"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Údaje a synchronizácia"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Zmeniť heslo"</string>
@@ -2683,8 +2683,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Ak budú k dispozícii len mobilné siete, môže táto funkcia spôsobiť, že aplikácie, ktoré údaje na pozadí vyžadujú, nebudú fungovať.\n\nVhodnejšie spôsoby ovládania využívania údajov nájdete v nastaveniach aplikácie."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Obmedzenie dátových prenosov na pozadí je možné len v prípade, že ste nastavili dátový limit pre mobilnú sieť."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Zapnúť automatickú synchronizáciu dát?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Zmeny, ktoré v rámci svojich účtov vykonáte na webe, sa automaticky skopírujú do tabletu.\n\nNiektoré účty tiež automaticky skopírujú na web akékoľvek zmeny vykonané v tablete. Týmto spôsobom funguje napríklad účet Google."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Zmeny, ktoré v rámci svojich účtov vykonáte na webe, sa automaticky skopírujú do telefónu.\n\nNiektoré účty tiež automaticky skopírujú na web akékoľvek zmeny vykonané v telefóne. Týmto spôsobom funguje napríklad účet Google."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Zmeny, ktoré v rámci svojich účtov vykonáte na webe, sa automaticky skopírujú do tabletu.\n\nNiektoré účty tiež automaticky skopírujú na web akékoľvek zmeny vykonané v tablete. Týmto spôsobom funguje napríklad účet /e/."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Zmeny, ktoré v rámci svojich účtov vykonáte na webe, sa automaticky skopírujú do telefónu.\n\nNiektoré účty tiež automaticky skopírujú na web akékoľvek zmeny vykonané v telefóne. Týmto spôsobom funguje napríklad účet /e/."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Vypnúť automatickú synchronizáciu dát?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"Toto nastavenie šetrí spotrebu dát a batérie. Na získanie najnovších informácií však budete musieť každý účet synchronizovať ručne. Nebudete tiež dostávať upozornenia na dostupné aktualizácie."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Dátum obnovenia cyklu spotreby"</string>
@@ -4222,7 +4222,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(vypnuté pre používateľa <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Služba automatického dopĺňania"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"automatické, dopĺňanie, automatické dopĺňanie"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Skontrolujte, či ide o dôveryhodnú aplikáciu&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Automatické dopĺňanie Google&gt;%1$s&lt;/xliff:g&gt; určuje na základe obsahu obrazovky, čo je možné automaticky vyplniť."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Skontrolujte, či ide o dôveryhodnú aplikáciu&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Automatické dopĺňanie /e/&gt;%1$s&lt;/xliff:g&gt; určuje na základe obsahu obrazovky, čo je možné automaticky vyplniť."</string>
     <string name="color_theme" msgid="1535685696756738324">"Farebný motív"</string>
     <string name="default_theme" msgid="7085644992078579076">"Predvolený"</string>
     <string name="device_theme" msgid="4571803018917608588">"Motív zariadenia"</string>
