--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -490,11 +490,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"Упозорење: Подаци са уређаја ће бити обрисани ако не успете да га откључате још <xliff:g id="COUNT">^1</xliff:g> пута!"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"Унесите лозинку"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"Шифровање није успело"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифровање је прекинуто и не може да се доврши. Као последица тога, подаци на таблету више нису доступни. \n\n Да бисте наставили да користите таблет, треба да га ресетујете. Када га подесите након ресетовања на фабричка подешавања, имаћете прилику да вратите све податке за које сте направили резервне копије на Google налогу."</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифровање је прекинуто и не може да се доврши. Као последица тога, подаци на телефону више нису доступни. \n\nДа бисте наставили да користите телефон, треба да га ресетујете. Када га подесите након ресетовања на фабричка подешавања, имаћете прилику да вратите све податке за које сте направили резервне копије на Google налогу."</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"Шифровање је прекинуто и не може да се доврши. Као последица тога, подаци на таблету више нису доступни. \n\n Да бисте наставили да користите таблет, треба да га ресетујете. Када га подесите након ресетовања на фабричка подешавања, имаћете прилику да вратите све податке за које сте направили резервне копије на /e/ налогу."</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"Шифровање је прекинуто и не може да се доврши. Као последица тога, подаци на телефону више нису доступни. \n\nДа бисте наставили да користите телефон, треба да га ресетујете. Када га подесите након ресетовања на фабричка подешавања, имаћете прилику да вратите све податке за које сте направили резервне копије на /e/ налогу."</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"Дешифровање није успело"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Лозинка коју сте унели је тачна, али, нажалост, подаци су оштећени. \n\nДа бисте наставили да користите таблет, треба да обавите ресетовање на фабричка подешавања. Током подешавања таблета после ресетовања моћи ћете да вратите све податке чија резервна копија постоји на Google налогу."</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Лозинка коју сте унели је тачна, али, нажалост, подаци су оштећени. \n\nДа бисте наставили да користите телефон, треба да обавите ресетовање на фабричка подешавања. Током подешавања телефона после ресетовања моћи ћете да вратите све податке чија резервна копија постоји на Google налогу."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"Лозинка коју сте унели је тачна, али, нажалост, подаци су оштећени. \n\nДа бисте наставили да користите таблет, треба да обавите ресетовање на фабричка подешавања. Током подешавања таблета после ресетовања моћи ћете да вратите све податке чија резервна копија постоји на /e/ налогу."</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"Лозинка коју сте унели је тачна, али, нажалост, подаци су оштећени. \n\nДа бисте наставили да користите телефон, треба да обавите ресетовање на фабричка подешавања. Током подешавања телефона после ресетовања моћи ћете да вратите све податке чија резервна копија постоји на /e/ налогу."</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"Пребаци методе уноса"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"Заштитите телефон"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"Подесите закључавање екрана да бисте заштитили таблет"</string>
@@ -1478,8 +1478,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"Ресетовање eSIM-ова није успело због грешке."</string>
     <string name="master_clear_title" msgid="3531267871084279512">"Избриши све податке (ресетовање на фабричка подешавања)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"Избриши све податке (ресетовање на фабричка подешавања)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Овим бришете све податке из "<b>"интерне меморије"</b>" таблета, укључујући:\n\n"<li>"Google налог"</li>\n<li>"Податке и подешавања система и апликација"</li>\n<li>"Преузете апликације"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Овим бришете све податке из "<b>"интерне меморије"</b>" телефона, укључујући:\n\n"<li>"Google налог"</li>\n<li>"Податке и подешавања система и апликација"</li>\n<li>"Преузете апликације"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Овим бришете све податке из "<b>"интерне меморије"</b>" таблета, укључујући:\n\n"<li>"/e/ налог"</li>\n<li>"Податке и подешавања система и апликација"</li>\n<li>"Преузете апликације"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Овим бришете све податке из "<b>"интерне меморије"</b>" телефона, укључујући:\n\n"<li>"/e/ налог"</li>\n<li>"Податке и подешавања система и апликација"</li>\n<li>"Преузете апликације"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Тренутно сте пријављени на следеће налоге:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"На овом уређају су присутни и други корисници.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музика"</li>\n<li>"Фотографије"</li>\n<li>"Други кориснички подаци"</li></string>
@@ -1556,7 +1556,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"Bluetooth скенирање"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"Дозволите апликацијама и услугама да траже уређаје у близини у сваком тренутку, чак и када је Bluetooth искључен. Ово може да се користи, на пример, за побољшање функција и услуга заснованих на локацији."</string>
     <string name="location_network_based" msgid="9134175479520582215">"Локац. на основу Wi-Fi и моб. мреже"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"Нека апл. користе Google-ову услугу лоцирања за брже одређивање локације. Анонимни подаци о локацији прикупљаће се и слати Google-у."</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"Нека апл. користе /e/-ову услугу лоцирања за брже одређивање локације. Анонимни подаци о локацији прикупљаће се и слати /e/-у."</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"Локација се одређује помоћу Wi-Fi-ја"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS сателити"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"Нека апликације користе GPS на таблету како би тачно одредиле вашу локацију"</string>
@@ -1564,8 +1564,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"Користи помоћни GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"Коришћење сервера за помоћ GPS мрежи (опозовите избор да бисте смањили коришћење мреже)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"Коришћење сервера за помоћ GPS мрежи (опозовите избор да бисте побољшали GPS учинак)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"Локација и Google претрага"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"Дозволи да Google користи локацију за побољшање резултата претраге и других услуга"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"Локација и /e/ претрага"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"Дозволи да /e/ користи локацију за побољшање резултата претраге и других услуга"</string>
     <string name="location_access_title" msgid="7064108942964081243">"Приступ мојој локацији"</string>
     <string name="location_access_summary" msgid="69031404093194341">"Нека апликације које су тражиле дозволу користе информације о вашој локацији"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"Извори локације"</string>
@@ -2474,7 +2474,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"Резервна копија и ресетовање"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"Лични подаци"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Прављење резервних копија података"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"Прави резервне копије података о апликацијама, Wi-Fi лозинки и других подешавања на Google серверима"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"Прави резервне копије података о апликацијама, Wi-Fi лозинки и других подешавања на /e/ серверима"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"Резервна копија налога"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"Уврштавање података апликација"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Аутоматско враћање"</string>
@@ -2482,7 +2482,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"Услуга прављења резервних копија није активна"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"Тренутно ниједан налог не чува резервне копије података"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Желите ли да зауставите прављење резервних копија Wi-Fi лозинки, обележивача, осталих подешавања и података о апликацијама, као и да избришете све копије на Google серверима?"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"Желите ли да зауставите прављење резервних копија Wi-Fi лозинки, обележивача, осталих подешавања и података о апликацијама, као и да избришете све копије на /e/ серверима?"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"Желите ли да зауставите прављење резервних копија података уређаја (попут Wi-Fi лозинки и историје позива) и података апликација (попут подешавања и датотека сачуваних у апликацијама) и избришете све копије на удаљеним серверима?"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"Аутоматски правите резервне копије података уређаја (попут Wi-Fi лозинки и историје позива) и података апликација (попут подешавања и датотека сачуваних у апликацијама) даљински.\n\nКада укључите аутоматско прављење резервних копија, подаци уређаја и апликација се повремено чувају даљински. Подаци апликација могу да буду било који подаци које је апликација сачувала (на основу подешавања програмера), укључујући потенцијално осетљиве податке као што су контакти, поруке и слике."</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"Подешавања администратора уређаја"</string>
@@ -2569,7 +2569,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"Календар"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"Контакти"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добро дошли у Google синхронизацију!"</font>\n"Google-ов приступ синхронизовању података како би се омогућио приступ контактима, обавезама и још много чему без обзира на то где се налазите."</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"Добро дошли у /e/ синхронизацију!"</font>\n"/e/-ов приступ синхронизовању података како би се омогућио приступ контактима, обавезама и још много чему без обзира на то где се налазите."</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"Подешавања синхронизације апликација"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"Подаци и синхронизација"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"Промени лозинку"</string>
@@ -2654,8 +2654,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"Ова функција може да заустави апликацију која зависи од позадинских података када су доступне само мобилне мреже.\n\nАдекватније контроле за коришћење података можете да пронађете у подешавањима доступним у оквиру апликације."</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"Ограничавање позадинских података је могуће само када будете подесили ограничење за мобилне податке."</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"Укључујете ауто. синхронизацију?"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Све промене које унесете на налоге на вебу ће аутоматски бити копиране на таблет.\n\nНеки налози могу и аутоматски да копирају на веб све промене које унесете на таблету. Тако функционише Google налог."</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Све промене које унесете на налоге на вебу ће аутоматски бити копиране на телефон.\n\nНеки налози могу и аутоматски да копирају на веб све промене које унесете на телефону. Тако функционише Google налог."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"Све промене које унесете на налоге на вебу ће аутоматски бити копиране на таблет.\n\nНеки налози могу и аутоматски да копирају на веб све промене које унесете на таблету. Тако функционише /e/ налог."</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"Све промене које унесете на налоге на вебу ће аутоматски бити копиране на телефон.\n\nНеки налози могу и аутоматски да копирају на веб све промене које унесете на телефону. Тако функционише /e/ налог."</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"Искључујете ауто-синх. података?"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"То ће се смањити потрошњу података и батерије, али биће потребно да ручно синхронизујете сваки налог да бисте прикупили недавне информације. Нећете примати ни обавештења када дође до ажурирања."</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"Датум враћања циклуса потрошње на почетне вредности"</string>
@@ -4153,7 +4153,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(онемогућено за корисника <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"Услуга аутоматског попуњавања"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"аутоматски, попуњавање, аутоматско попуњавање"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Уверите се да је ова апликација поуздана&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google аутоматско попуњавање&gt;%1$s&lt;/xliff:g&gt; користи садржај екрана за утврђивање података који могу аутоматски да се попуне."</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;Уверите се да је ова апликација поуздана&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ аутоматско попуњавање&gt;%1$s&lt;/xliff:g&gt; користи садржај екрана за утврђивање података који могу аутоматски да се попуне."</string>
     <string name="color_theme" msgid="1535685696756738324">"Тема са бојом"</string>
     <string name="default_theme" msgid="7085644992078579076">"Подразумевана"</string>
     <string name="device_theme" msgid="4571803018917608588">"Тема уређаја"</string>
