--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -487,11 +487,11 @@
     <string name="crypt_keeper_warn_wipe" msgid="2738374897337991667">"警告：解鎖嘗試次數還剩 <xliff:g id="COUNT">^1</xliff:g> 次！如果持續失敗，你的裝置將會遭到清除。"</string>
     <string name="crypt_keeper_enter_password" msgid="2223340178473871064">"輸入密碼"</string>
     <string name="crypt_keeper_failed_title" msgid="7133499413023075961">"加密失敗"</string>
-    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"加密過程中斷，無法完成，因此你再也不能存取平板電腦上的資料。\n\n如要恢復使用平板電腦，請先將平板電腦重設回原廠設定。完成重設後，你可以在設定平板電腦時，將先前備份至「Google 帳戶」的資料全部還原。"</string>
-    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"加密過程中斷，無法完成，因此你再也不能存取手機上的資料。\n\n如要恢復使用手機，請先將手機重設回原廠設定。完成重設後，你可以在設定手機時，將先前備份至「Google 帳戶」的資料全部還原。"</string>
+    <string name="crypt_keeper_failed_summary" product="tablet" msgid="8219375738445017266">"加密過程中斷，無法完成，因此你再也不能存取平板電腦上的資料。\n\n如要恢復使用平板電腦，請先將平板電腦重設回原廠設定。完成重設後，你可以在設定平板電腦時，將先前備份至「/e/ 帳戶」的資料全部還原。"</string>
+    <string name="crypt_keeper_failed_summary" product="default" msgid="3270131542549577953">"加密過程中斷，無法完成，因此你再也不能存取手機上的資料。\n\n如要恢復使用手機，請先將手機重設回原廠設定。完成重設後，你可以在設定手機時，將先前備份至「/e/ 帳戶」的資料全部還原。"</string>
     <string name="crypt_keeper_data_corrupt_title" msgid="8759119849089795751">"解密失敗"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"你所輸入的密碼正確，但你的資料已毀損。\n\n如要繼續使用平板電腦，請將該裝置重設為原廠設定。重設完成後，當你對平板電腦進行設定時，可以將備份在個人 Google 帳戶中的資料全部還原。"</string>
-    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"你所輸入的密碼正確，但你的資料已毀損。\n\n如要繼續使用手機，請將該裝置重設為原廠設定。重設完成後，當你對手機進行設定時，可以將備份在個人 Google 帳戶中的資料全部還原。"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="tablet" msgid="840107296925798402">"你所輸入的密碼正確，但你的資料已毀損。\n\n如要繼續使用平板電腦，請將該裝置重設為原廠設定。重設完成後，當你對平板電腦進行設定時，可以將備份在個人 /e/ 帳戶中的資料全部還原。"</string>
+    <string name="crypt_keeper_data_corrupt_summary" product="default" msgid="8843311420059663824">"你所輸入的密碼正確，但你的資料已毀損。\n\n如要繼續使用手機，請將該裝置重設為原廠設定。重設完成後，當你對手機進行設定時，可以將備份在個人 /e/ 帳戶中的資料全部還原。"</string>
     <string name="crypt_keeper_switch_input_method" msgid="4168332125223483198">"切換輸入法"</string>
     <string name="suggested_lock_settings_title" msgid="8498743819223200961">"保護手機安全"</string>
     <string name="suggested_lock_settings_summary" product="tablet" msgid="2296800316150748710">"設定螢幕鎖定以保護平板電腦"</string>
@@ -1465,8 +1465,8 @@
     <string name="reset_esim_error_msg" msgid="8434956817922668388">"發生錯誤，因此無法重設 eSIM 卡。"</string>
     <string name="master_clear_title" msgid="3531267871084279512">"清除所有資料 (恢復原廠設定)"</string>
     <string name="master_clear_short_title" msgid="8652450915870274285">"清除所有資料 (恢復原廠設定)"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"這會清除你平板電腦"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"你的 Google 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"這會清除你手機"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"你的 Google 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"這會清除你平板電腦"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"你的 /e/ 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"這會清除你手機"<b>"內部儲存裝置"</b>"中的所有資料，包括：\n\n"<li>"你的 /e/ 帳戶"</li>\n<li>"系統和應用程式資料及設定"</li>\n<li>"已下載的應用程式"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"你目前已登入下列帳戶：\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"這個裝置上還有其他使用者。\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"音樂"</li>\n<li>"相片"</li>\n<li>"其他使用者資料"</li></string>
@@ -1543,7 +1543,7 @@
     <string name="location_scanning_bluetooth_always_scanning_title" msgid="5444989508204520019">"藍牙掃描"</string>
     <string name="location_scanning_bluetooth_always_scanning_description" msgid="1285526059945206128">"允許應用程式和服務隨時掃描附近裝置 (即使藍牙功能處於關閉狀態)。這可以用來改善適地性功能和服務。"</string>
     <string name="location_network_based" msgid="9134175479520582215">"Wi-Fi 和行動網路位置"</string>
-    <string name="location_neighborhood_level" msgid="5141318121229984788">"允許應用程式使用 Google 的定位服務加速判斷你的約略位置。系統會收集匿名的位置資料並傳送給 Google。"</string>
+    <string name="location_neighborhood_level" msgid="5141318121229984788">"允許應用程式使用 /e/ 的定位服務加速判斷你的約略位置。系統會收集匿名的位置資料並傳送給 /e/。"</string>
     <string name="location_neighborhood_level_wifi" msgid="4234820941954812210">"根據 Wi-Fi 判定位置"</string>
     <string name="location_gps" msgid="8392461023569708478">"GPS 衛星定位"</string>
     <string name="location_street_level" product="tablet" msgid="1669562198260860802">"允許應用程式使用平板電腦的 GPS 找出你的精確位置"</string>
@@ -1551,8 +1551,8 @@
     <string name="assisted_gps" msgid="4649317129586736885">"使用輔助 GPS"</string>
     <string name="assisted_gps_enabled" msgid="8751899609589792803">"使用伺服器輔助 GPS (取消勾選即可降低網路使用量)"</string>
     <string name="assisted_gps_disabled" msgid="6982698333968010748">"使用伺服器輔助 GPS (取消勾選即可提升 GPS 效能)"</string>
-    <string name="use_location_title" msgid="5206937465504979977">"位置資訊與 Google 搜尋"</string>
-    <string name="use_location_summary" msgid="3978805802386162520">"允許 Google 使用你的位置資訊來改善搜尋結果和其他服務"</string>
+    <string name="use_location_title" msgid="5206937465504979977">"位置資訊與 /e/ 搜尋"</string>
+    <string name="use_location_summary" msgid="3978805802386162520">"允許 /e/ 使用你的位置資訊來改善搜尋結果和其他服務"</string>
     <string name="location_access_title" msgid="7064108942964081243">"存取我的位置資訊"</string>
     <string name="location_access_summary" msgid="69031404093194341">"允許獲得你許可的應用程式使用你的位置資訊"</string>
     <string name="location_sources_heading" msgid="1278732419851088319">"位置資訊來源"</string>
@@ -2449,7 +2449,7 @@
     <string name="backup_section_title" msgid="7952232291452882740">"備份與還原"</string>
     <string name="personal_data_section_title" msgid="7815209034443782061">"個人資料"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"備份我的資料"</string>
-    <string name="backup_data_summary" msgid="708773323451655666">"將應用程式資料、Wi-Fi 密碼及其他設定備份到 Google 伺服器"</string>
+    <string name="backup_data_summary" msgid="708773323451655666">"將應用程式資料、Wi-Fi 密碼及其他設定備份到 /e/ 伺服器"</string>
     <string name="backup_configure_account_title" msgid="3790872965773196615">"備份帳戶"</string>
     <string name="include_app_data_title" msgid="2829970132260278394">"包括應用程式資料"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"自動還原"</string>
@@ -2457,7 +2457,7 @@
     <string name="backup_inactive_title" msgid="685838037986644604">"備份服務未啟用"</string>
     <string name="backup_configure_account_default_summary" msgid="2436933224764745553">"目前沒有帳戶正在儲存備份資料"</string>
     <string name="backup_erase_dialog_title" msgid="1027640829482174106"></string>
-    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"要停止備份你的 Wi-Fi 密碼、書籤、其他設定以及應用程式資料，並清除 Google 伺服器上儲存的所有複本嗎？"</string>
+    <string name="backup_erase_dialog_message" msgid="5221011285568343155">"要停止備份你的 Wi-Fi 密碼、書籤、其他設定以及應用程式資料，並清除 /e/ 伺服器上儲存的所有複本嗎？"</string>
     <string name="fullbackup_erase_dialog_message" msgid="694766389396659626">"要停止備份裝置資料 (例如 Wi-Fi 密碼和通話記錄) 以及應用程式資料 (例如應用程式所儲存的設定和檔案)，並清除遠端伺服器中的所有備份內容嗎？"</string>
     <string name="fullbackup_data_summary" msgid="960850365007767734">"在遠端自動備份裝置資料 (例如 Wi-Fi 密碼和通話記錄) 以及應用程式資料 (例如應用程式所儲存的設定和檔案)。\n\n啟用自動備份功能後，系統會定期將裝置和應用程式資料儲存到遠端。應用程式資料泛指應用程式依據開發人員設定所儲存的任何資料，包括聯絡人、訊息和相片等可能具敏感性的資料。"</string>
     <string name="device_admin_settings_title" msgid="4960761799560705902">"裝置管理員設定"</string>
@@ -2544,7 +2544,7 @@
     <string name="sync_gmail" msgid="714886122098006477">"Gmail"</string>
     <string name="sync_calendar" msgid="9056527206714733735">"日曆"</string>
     <string name="sync_contacts" msgid="9174914394377828043">"聯絡人"</string>
-    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"歡迎使用 Google Sync！"</font>\n"這是 Google 所提供的資料同步處理工具，可讓你隨時隨地存取通訊錄、約會等多種資料。"</string>
+    <string name="sync_plug" msgid="3905078969081888738"><font fgcolor="#ffffffff">"歡迎使用 /e/ Sync！"</font>\n"這是 /e/ 所提供的資料同步處理工具，可讓你隨時隨地存取通訊錄、約會等多種資料。"</string>
     <string name="header_application_sync_settings" msgid="6205903695598000286">"應用程式同步處理設定"</string>
     <string name="header_data_and_synchronization" msgid="5165024023936509896">"資料及同步處理"</string>
     <string name="preference_change_password_title" msgid="8955581790270130056">"變更密碼"</string>
@@ -2629,8 +2629,8 @@
     <string name="data_usage_app_restrict_dialog" msgid="1466689968707308512">"如果採用這項功能，當只有行動網路可供使用時，需要背景數據傳輸的應用程式可能會停止運作。\n\n你可以在應用程式的設定選單中，找出更多適當的數據用量的選項。"</string>
     <string name="data_usage_restrict_denied_dialog" msgid="55012417305745608">"你必須先設定行動數據用量上限，才能限制背景資料。"</string>
     <string name="data_usage_auto_sync_on_dialog_title" msgid="2438617846762244389">"開啟資料自動同步功能？"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"你在網路上對帳戶進行的所有變更都會自動複製到你的平板電腦。\n\n有些帳戶還可以自動將你在平板電腦上進行的所有變更複製到網路上，Google 帳戶即是按照這種方式運作。"</string>
-    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"你在網路上對帳戶進行的所有變更都會自動複製到你的手機。\n\n有些帳戶還可以自動將你在手機上進行的所有變更複製到網路上，Google 帳戶即是按照這種方式運作。"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="tablet" msgid="8581983093524041669">"你在網路上對帳戶進行的所有變更都會自動複製到你的平板電腦。\n\n有些帳戶還可以自動將你在平板電腦上進行的所有變更複製到網路上，/e/ 帳戶即是按照這種方式運作。"</string>
+    <string name="data_usage_auto_sync_on_dialog" product="default" msgid="8651376294887142858">"你在網路上對帳戶進行的所有變更都會自動複製到你的手機。\n\n有些帳戶還可以自動將你在手機上進行的所有變更複製到網路上，/e/ 帳戶即是按照這種方式運作。"</string>
     <string name="data_usage_auto_sync_off_dialog_title" msgid="9013139130490125793">"關閉資料自動同步功能？"</string>
     <string name="data_usage_auto_sync_off_dialog" msgid="4025938250775413864">"這樣可以節省數據用量和電池用量，但你必須手動同步處理每個帳戶才能收集最新資訊。此外，系統進行更新時不會通知你。"</string>
     <string name="data_usage_cycle_editor_title" msgid="1373797281540188533">"用量週期重設日期"</string>
@@ -3024,7 +3024,7 @@
     <string name="keywords_storage_settings" msgid="1642340184392317296">"記憶體, 資料, 刪除, 清除, 釋出, 空間"</string>
     <string name="keywords_bluetooth_settings" msgid="6804844062789439858">"已連線, 裝置, 耳罩式耳機, 耳機, 喇叭, 無線, 配對, 耳塞式耳機, 音樂, 媒體"</string>
     <string name="keywords_wallpaper" msgid="5058364390917429896">"背景, 螢幕, 鎖定螢幕, 主題"</string>
-    <string name="keywords_assist_input" msgid="5017533309492679287">"預設,  Google 助理"</string>
+    <string name="keywords_assist_input" msgid="5017533309492679287">"預設,  /e/ 助理"</string>
     <string name="keywords_default_browser" msgid="8324486019657636744">"預設, 預設瀏覽器"</string>
     <string name="keywords_default_payment_app" msgid="3838565809518896799">"付款, 預設"</string>
     <string name="keywords_default_links" msgid="5830406261253835547">"預設"</string>
@@ -4014,7 +4014,7 @@
     <string name="enterprise_privacy_security_logs" msgid="5377362481617301074">"最新安全性記錄"</string>
     <string name="enterprise_privacy_none" msgid="7706621148858381189">"無"</string>
     <string name="enterprise_privacy_enterprise_installed_packages" msgid="6353757812144878828">"已安裝的應用程式"</string>
-    <string name="enterprise_privacy_apps_count_estimation_info" msgid="7433213592572082606">"已估算應用程式數量，其中可能不包括從 Google Play 商店以外來源安裝的應用程式。"</string>
+    <string name="enterprise_privacy_apps_count_estimation_info" msgid="7433213592572082606">"已估算應用程式數量，其中可能不包括從 /e/ Play 商店以外來源安裝的應用程式。"</string>
     <plurals name="enterprise_privacy_number_packages_lower_bound" formatted="false" msgid="3005116533873542976">
       <item quantity="other">最少有 <xliff:g id="COUNT_1">%d</xliff:g> 個應用程式</item>
       <item quantity="one">最少有 <xliff:g id="COUNT_0">%d</xliff:g> 個應用程式</item>
@@ -4088,7 +4088,7 @@
     <string name="webview_disabled_for_user" msgid="1216426047631256825">"(已為使用者<xliff:g id="USER">%s</xliff:g>停用)"</string>
     <string name="autofill_app" msgid="7338387238377914374">"自動填入服務"</string>
     <string name="autofill_keywords" msgid="7485591824120812710">"自動、填入、自動填入"</string>
-    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;請確定這是你信任的應用程式&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=Google Autofill&gt;%1$s&lt;/xliff:g&gt;應用程式會根據你的畫面內容判斷要自動填入的內容。"</string>
+    <string name="autofill_confirmation_message" msgid="2784869528908005194">"&lt;b&gt;請確定這是你信任的應用程式&lt;/b&gt; &lt;br/&gt; &lt;br/&gt; &lt;xliff:g id=app_name example=/e/ Autofill&gt;%1$s&lt;/xliff:g&gt;應用程式會根據你的畫面內容判斷要自動填入的內容。"</string>
     <string name="color_theme" msgid="1535685696756738324">"色彩主題"</string>
     <string name="default_theme" msgid="7085644992078579076">"預設"</string>
     <string name="device_theme" msgid="4571803018917608588">"裝置主題"</string>
